--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,9 +1,30 @@
 ---
-title: 喜币的价值就在于我们战友
+title: 樱花灭共诗——万里桥
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1836445/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836698/)
 
-台灣寶島農場
+撰稿：东京樱花团/小小杜
+![](https://assets.gnews.org/wp-content/uploads/2022/01/4-6.jpg)
+古桥南郭外，
+
+曾送大将军。
+
+万里清江水，
+
+终年玉垒云。
+
+使吴名不传，
+
+当蜀政鲜闻。
+
+海内今边事，
+
+凭桥感气氛。
+
+校对：东京樱花团/知了知了
+发布：东京樱花团/yuxingcao01
+![](https://assets.gnews.org/wp-content/uploads/2021/12/樱花-3.jpg)
+
 
  
 
