--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,21 +1,62 @@
 ---
-title: 日本埼玉县一名接种了三针疫苗的男子感染中共病毒
+title: 辉瑞疫苗原液和培养第一天后的显微镜观察
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836649/)
+`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1836837/)
 
-撰稿：东京樱花团/待命（文晓）
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-510.png)（图片源自本文链接）
-1月8日FNN要闻在线消息：埼玉县一名已接种了三针中共病毒(新冠病毒)疫苗的男子被发现感染了中共病毒。
+韩国首尔天池农场
+翻译：势在必行
+校对：鱼子酱
+上传：QCFM
 
-据埼玉县称，这位被感染的男子是一名20多岁的医务工作者，在去年12月下旬接种了第三针中共病毒疫苗。因发烧，喉咙痛，去医疗机构检查，于7日上午被确诊感染。据说目前尚属轻症。
+是不是你们给污染的呢
+听过很多次，这样的话了吧？
+所以这次检查了没有稀释原液和疫苗，也没有开封的原液。
+是原液，原液的浓缩液在下面也厚厚地铺着
+原液里已经有很多
+有动静的物质，对吧？
+但是现在是原液
+现在有很多和漂浮物，一起动的物体挺多的
 
-7日和8日在埼玉县发现的感染者中，有121人已经接种了两剂疫苗。这是埼玉县首次在接种了三剂疫苗的人群中发现的感染病例。
+是原液。完全没有开封的…
+这是原来接种时用的剩余液。
+培养第1天。 之前为止是检警当天。
+培养第1天又看到了这样一个特点。
+能看见吗? 近距离看的话能看见
+纤毛之类的东西刚出来，能看见它在动。
+我现在不是在说这些普通的漂浮物。
 
-信息来源：[【速報】新型コロナ　埼玉県でワクチン“3回接種”の男性が感染確認（FNNプライムオンライン） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/96f3f9dfa448251b7f6ef147684be7c638102457)
+这里也看得见吗？
+不知道是什么… 两个好像在一起
+和旁边动作有点不一样…
+像这样蠕动的感觉…
+和它们形状也不同，动作也不同。
+非常有特点。
+我看着这个说我像水蛭…
+无法表达出来。
+两个小小的个体在结对吗，还是做什么
+总之两个粘在一起
 
-*校对：东京樱花团/ 喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+看到它在蠕动了吧？
+和其他的有点不一样吧？
+是吧？这些漂浮物，现在也不知道是什么
+可我现在是在说，特征性的东西。
+因为太多了，这个是钥匙(key) 钥匙模样 ，
+很有特征， P公司的特征
+因为我很难表达 所以才说像甲虫
+
+脚都看得清吧？
+更让人吃惊的是
+这就是那个是问题的…问题的…
+长得完全像磁盘UFO…
+尺寸也特别大。
+是的，很大。这个好像比精子头大得多。 气压的…
+确实能看出来…
+绝对不可能是自然产的… 这是更令人吃惊的事情。
+培养第二天就出现了。
+稍微这样一点一点… 没那么大
+飞行体静止时的那种感觉。
+像UFO一样的…
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
