--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,62 +1,30 @@
 ---
-title: 1月7日木兰战友联盟答疑G系列相关信息文字版
+title: 中共官宣外贸版武直10性能超阿帕奇，或将出口巴基斯坦
 ---
-`全球G系列咨服群` [轉載自GNews](https://gnews.org/zh-hans/1836645/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836821/)
 
-非官方整理，一切信息以联盟答疑音频为准
+撰稿：东京樱花团/喜马拉雅的微尘
+![](https://assets.gnews.org/wp-content/uploads/2022/01/2-17.png)
+[图片来源](https://www.sohu.com/a/303478277_100145046)
 
-G-听写：ohbigant；鲁西西
+近日，中航工业发布消息称，巴基斯坦公共关系部负责人表示，正在考虑引进中国制造的武直10ME型武装直升机。
 
-（时段：开始～12:00 ohbigant）
-1、HPay上线后，喜币能否由战友帮忙购买后转给自己？
-答：具体怎么操作目前还不清楚，应该是可以的。
+中航工业表示，这是继25架歼-10CP现身2022年3月23日巴基斯坦国庆日和首批8架“枭龙”Block3量产型（2019年末首飞，“枭龙”三代半改进型号）近日在巴基斯坦下线并列装以来，中航工业连续三款先进装备出口，取得突破性进展。
 
-2、10万以下想投资数字银行，现在还能再参加？
-答：现在处理第一批中，处理完之后大概下周会再开放登记。
+受制于航空发动机功率不足，武直10一直研发不顺，先后搭载了国产涡轴-9（功率1000千瓦）、加拿大进口PT6C-67C型发动机（功率1250千瓦），再到当前的国产涡轴-9改进型（官方功率数据为1200千瓦）。
 
-3、通过联盟投资数字银行无法达到会计师证明的要求，是不是无法参与？
-答：是的，10万以下需要会计师的证明，达不到要求KYC无法通过。要证明你是合格投资者，需要个人净资产（比如房产）在250万澳元以上，或者连续近两年收入在25万澳元以上。
+同时，中航工业也对进排气管道进行优化，还对机身重量、任务载荷等进行减重以保证武直10的性能，但这仍旧未能让武直10具备竞争力。如，武直10其空重超过5吨，实际上与美制“阿帕奇”重型武装直升机基本相当，但由于发动机功率不足，因此达不到“阿帕奇”超过10吨的最大起飞重量。
 
-4、10万以下投资数字银行已收到通过的邮件，需要哪些准备工作？
-答：投总部和联盟的要求是不一样的。
-10万以下需要两种带头像的ID，比如护照和驾照，护照和身份证。
-会计师出具的资产证明或是收入证明，要有资质的会计师。（CPA或CA）
+中共媒体分析，巴基斯坦要采购武直10，或将放弃土耳其的T-129武装直升机，这意味着中航工业或将在武直10上运用“直20”的1500千瓦级涡轴-10，与目前“阿帕奇”发动机功率（1500千瓦）看齐，其最大起飞重量将达到10吨以上。加之能挂载16枚红箭-10反坦克导弹，以及挂载天燕-90直升机专用空空导弹，武直10 ME将有力提升巴基斯坦陆军低空支援火力。同时还将对印度装备的“阿帕奇”武装直升机形成一定的威慑。
 
-5、10万以下投资需要卖房产的证明吗？
-答：我们是不需要的，不知道会计师是否需要。
+信息来源：
 
-（时段：12:00～结束）
-6、数字银行投资要两个ID，假设护照驾照都是加拿大的，还需要公证吗？
-答：因为你不是提供原件，所以需要证明和原件是一致的。
+[挂载16枚导弹！中国外贸版武直-10全面升级，性能超越“阿帕奇”](https://www.163.com/dy/article/GT4LH2UM05158C06.html)
 
-7、该如何要求会计师出具资产证明？
-答：一般有一个固定的格式。名称类似“合格投资者”“成熟投资者”之类。
+编辑：东京樱花团/知了知了
+发布：东京樱花团/yuxingcao01
+![](https://assets.gnews.org/wp-content/uploads/2021/12/樱花-3.jpg)
 
-8、墙内能否暂缓交纳G|CLUBS年费，会影响年会抽奖资格吗？
-答：具体还不清楚。
-
-9、现在购买G|CLUBS卡还有福利政策吗？
-答：没有了。
-
-10、投资数字银行，护照和ID都要做公证吗？
-答：最好做一下，因为你提供的都是复印件。
-
-11、投资数字银行有没有专门的discord组群？
-答：联系农场填表申请加入。
-
-12、喜币也可以算做资产吗？
-答：可以的，只要你会计师认可就可以。
-
-13、SEC正式通知退款了吗？
-答：还没有。
-
-G系列都是独立机构，联盟答疑不代表任何G系列，不承担任何法律责任。联盟只是一个沟通的桥梁，一切以当地法律和G系列官方为准。 @everyone
-
-语音链接：[https://mega.nz/file/KIpCkTiD#ONyT8lzPspPOJOtjjKF3TcMdYtSON9Xkjjvf7sFWMtc](https://mega.nz/file/KIpCkTiD#ONyT8lzPspPOJOtjjKF3TcMdYtSON9Xkjjvf7sFWMtc)
-
-审核：*哲道行者；夏目&山竹*
-
-发布：*哲道行者*
 
  
 
