--- a/gnews/33.md
+++ b/gnews/33.md
@@ -1,28 +1,25 @@
 ---
-title: 01/08每日播报｜哈萨克斯坦总统对抗议者发出枪杀令 驳回要求谈判的呼吁
+title: 习近平赞扬哈萨克斯坦镇压反抗者
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1836116/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836408/)
 
-**By:[秘翻新闻](https://gtv.org/video/id=61d954ea2591020829849260)**
+撰稿：东京樱花团/百花李香
+![](https://assets.gnews.org/wp-content/uploads/2022/01/1-87.png)图片来源网站
+《日本电视新闻》1月8日消息，在哈萨克斯坦，安全部队向抗议燃油价格上涨的示威者开枪。国际社会对造成大量人员伤亡严重关切中，中（共）国习近平1 月7日向哈萨克斯坦总统托卡耶夫表示，他完全支持当局对示威者的武装镇压。
 
-**2022-01-0**8
+习近平赞扬托卡耶夫在关键时刻采取了大胆有力的措施，迅速平息了局势，同时他还表示，坚决反对外部势力故意在哈萨克斯坦制造动乱。
 
-华盛顿邮报1月7日报道，本周五，哈萨克斯坦总统在电视上宣布，他已下令军队可以“在没有预先警告的情况下开枪杀人”，以平息自上周末以来一直持续的反政府抗议活动。
+习近平将外国势力干预镇压香港民主抗议活动作为其政府行动的一个理由，试图为他的暴政做辩护，并扩大其在中亚的影响力。
 
-一些抗议者还发布了一份和平政治变革的要求清单。到目前为止，全国已有数十人被杀，当局称近 4000 名“参与者”已被拘留，至少 18 名警察死亡。平民和军人的生命受到了损害，将“来自国外”的谈判呼吁斥为“愚蠢”，并发誓要镇压示威活动。总统还表示在全国范围内停电结束会后“重新打开国际互联网”，但警告说互联网只能在特定时间段内访问，并受到政府的高度监控。“免费上网并不意味着你可以自由地发表你的想法、诽谤和侮辱，你的煽动和电话，”由高油价引发的公众不满已经升级为对自三十年前属于前苏联的这个国家获得独立以来一直未变的政治体制构成的重大挑战。
+信息源：
 
-克里姆林宫本周五表示，俄罗斯总统普京在过去两天与托卡耶夫多次通话，讨论“打击国际恐怖主义并确保哈萨克公民的秩序和安全”的联合行动。白宫新闻秘书在本周四的新闻简报会上说，美国正在监视莫斯科领导的部署，并寻找可能侵犯人权的报告。
+[中国・習主席　カザフスタン武力鎮圧を称賛](https://news.yahoo.co.jp/articles/cd87633969c9e3f840d2d96df4d3dd9b024c9f6a)
 
-哈萨克斯坦总统周三宣布全国进入为期两周的紧急状态，实行宵禁并禁止群众集会。限制措施出台之际，该国庞大的东正教社区正准备在周五庆祝圣诞节。路透社称，哈萨克斯坦总统称示威者为“国际恐怖分子”，并向俄罗斯领导的军事联盟寻求帮助，以平息反政府抗议活动。
+*校对：东京樱花团/喜马拉雅的微尘*
+*发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
 
-（秘翻新闻主编 清风先生编译报道）
 
-发布:星星
-
-* * *
-
-**By 【秘密翻译组-即时新闻播报组】**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
