--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,21 +1,49 @@
 ---
-title: 不痛不痒难以制“匪” 美日对中共国试图破坏秩序表达关切
+title: 尸检报告显示：93%接种中共病毒疫苗后的死亡案例是疫苗所致
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836641/)
+`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/1836820/)
 
-撰稿/配图：东京樱花团/Ob
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-509.png)
-路透东京1月7日，美国和日本外交以及国防部长周五发表联合声明，对中共国不断试图破坏以规则为基础的秩序表达关切。 声明称，两国决心共同努力遏制、并在必要时应对破坏该地区稳定的活动。
+本文作者：Rebecca (一切心皆不可得！)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image001-18.png)
+研究表明，绝大多数在接种了中共病毒（Covid-19）疫苗后发生的死亡，是由于接种中共病毒疫苗而导致的。
 
-上述官员表示，他们对中共国新疆和香港地区的人权问题“表示严重持续的关切”，并强调了台湾海峡和平稳定的重要性。两国高层官员举行了在线会议，讨论加强两国安全联盟并使之现代化的问题，同时启动一项新的研发合作协议，应对高超音速导弹等新兴威胁。
+这项研究由苏查里特-巴克迪（Sucharit Bhakdi）博士和阿纳-布克哈特（Arne Burkhardt）博士进行，他们研究了15个被验尸官或公诉人认为与接种中共病毒疫苗无关的案例后证实，这15个案例中的14个，即93%，确实是因接种了中共病毒疫苗而导致的死亡。
 
-与流氓讲规则无异于与虎谋皮。流氓之所以屡屡得逞，是经常游走在法律、规则边缘不断地试探和挑战，又步步进逼，只要没有得到坚决的反对和立马制止，中共就可以在一推二就中实现他的流氓战略。对待流氓只有更加果干坚决地予以否定和回绝，彻底断了他的念想，才能在与共匪的周璇中不至于于被动挨打。
+这项研究中，所有死者都是在接种了中共病毒疫苗后7天至6个月之内死亡的。他们的年龄从28岁到95岁不等。
 
-消息来源：[美国和日本对中国试图破坏以规则为基础的秩序表达关切——联合声明](https://cn.reuters.com/article/us-japan-statement-china-0107-idCNKBS2JH07E)
+史蒂夫-基尔希（Steve Kirsch）写道，这项研究发现最易受攻击的器官是心脏，所有死亡的人中心脏都受到了攻击。但是，死者体内的其他器官也受到了攻击。
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+这项研究的结果表明，接种中共病毒疫苗的影响是巨大的，将导致数百万人的死亡，应该立即停止接种中共病毒疫苗。
+
+然而，世界范围内针对中共病毒疫苗接种的计划不太可能因此结束，因为研究人员的报告还没有在同行评议的杂志上发表。由于这一点，它很可能会被科学界和医学界所忽视。
+
+尽管如此，这篇题为 “关于中共病毒疫苗：为什么它们不能起作用，以及在接种中共病毒疫苗后的致死后果有无可辩驳的证据 “的论文在网上获得了广泛的关注。
+
+该论文发现并揭示了中共病毒疫苗的真正危险和风险。
+
+而政府、医学界和科学家还在继续掩盖真相。
+
+在所有14例由于接种中共病毒疫苗而引起的死亡案例中，研究人员观察到相同的潜在健康问题。这些问题包括：
+
+- 小血管的炎症事件（内皮炎），其特点是血管腔内有大量的T淋巴细胞和封闭的、死亡的内皮细胞
+- T淋巴细胞在血管周围广泛积聚
+- 周围非淋巴器官或组织有大量的T淋巴细胞浸润
+
+
+备注：
+
+- 疫苗：是指新冠疫苗
+- 中共病毒：是指新冠病毒Covid-19
+- 我们不反疫苗，只针对假疫苗
+- 我们不反科学，只针对反人类
+
+
+[新闻来源链接](https://dailyexpose.uk/2022/01/04/93-percent-of-covid-vaccination-deaths-are-caused-by-the-jabs/)
+
+审核校对：sherryok (水云间)
+
+上传排版：漂流瓶
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
