--- a/gnews/42.md
+++ b/gnews/42.md
@@ -1,36 +1,28 @@
 ---
-title: 朝鲜致函称因疫情无法参加北京冬奥会
+title: 01/08每日播报｜哈萨克斯坦总统对抗议者发出枪杀令 驳回要求谈判的呼吁
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1835807/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1836116/)
 
-作者：纽约香草山文艺部 – 宁文静
-![](https://assets.gnews.org/wp-content/uploads/2021/12/条幅.png)
-当地时间1月7日，朝鲜奥委会致函中共国奥委会及冬奥组委会，称朝鲜将不参加北京冬奥会。
+**By:[秘翻新闻](https://gtv.org/video/id=61d954ea2591020829849260)**
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/8-5.jpg)
+**2022-01-0**8
 
-朝鲜在信函中，一方面指责了美国及其盟国，试图阻碍冬奥会顺利举办。另一方面却借全球新一轮疫情非常严重为由，同样拒绝参加本届冬奥会。
+华盛顿邮报1月7日报道，本周五，哈萨克斯坦总统在电视上宣布，他已下令军队可以“在没有预先警告的情况下开枪杀人”，以平息自上周末以来一直持续的反政府抗议活动。
 
-时评人士指出，早在2021年9月初，国际奥委会IOC就因为朝鲜拒绝参加东京夏季奥运会，而决定暂停朝鲜奥委会的成员资格至2022年底，使朝鲜无法以国家队选手的资格参加北京冬奥会，但IOC并未否决朝鲜选手以个人身份参加北京冬奥会的可能性。此时这封信函不仅显得多余，更有“伤口上撒盐”之嫌。
+一些抗议者还发布了一份和平政治变革的要求清单。到目前为止，全国已有数十人被杀，当局称近 4000 名“参与者”已被拘留，至少 18 名警察死亡。平民和军人的生命受到了损害，将“来自国外”的谈判呼吁斥为“愚蠢”，并发誓要镇压示威活动。总统还表示在全国范围内停电结束会后“重新打开国际互联网”，但警告说互联网只能在特定时间段内访问，并受到政府的高度监控。“免费上网并不意味着你可以自由地发表你的想法、诽谤和侮辱，你的煽动和电话，”由高油价引发的公众不满已经升级为对自三十年前属于前苏联的这个国家获得独立以来一直未变的政治体制构成的重大挑战。
 
-参考链接：
+克里姆林宫本周五表示，俄罗斯总统普京在过去两天与托卡耶夫多次通话，讨论“打击国际恐怖主义并确保哈萨克公民的秩序和安全”的联合行动。白宫新闻秘书在本周四的新闻简报会上说，美国正在监视莫斯科领导的部署，并寻找可能侵犯人权的报告。
 
-- [朝鲜：因全球疫情等原因无法参加北京冬奥会，但将全方位支持和声援中国](https://m.sohu.com/a/514860835_313745?scm=1104.0.0.0&amp;spm=smwp.home.fd-important.9.1641512406698kIPHEre)
+哈萨克斯坦总统周三宣布全国进入为期两周的紧急状态，实行宵禁并禁止群众集会。限制措施出台之际，该国庞大的东正教社区正准备在周五庆祝圣诞节。路透社称，哈萨克斯坦总统称示威者为“国际恐怖分子”，并向俄罗斯领导的军事联盟寻求帮助，以平息反政府抗议活动。
 
+（秘翻新闻主编 清风先生编译报道）
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/一月小图-1.jpg)
+发布:星星
 
-总编：文特
-编辑：Kathy文艺
-校正/发稿：海阔天空1
+* * *
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+**By 【秘密翻译组-即时新闻播报组】**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
