--- a/gnews/43.md
+++ b/gnews/43.md
@@ -1,37 +1,22 @@
 ---
-title: 中共“温水煮百姓”，全民食草成常态
+title: 杭州机场一俄货机起飞时失火
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1835806/)
+`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1836059/)
 
-作者：纽约香草山教育部 – Noemi
-![](https://assets.gnews.org/wp-content/uploads/2021/12/条幅.png)
-1月5日，郭先生在大直播节目中透露，习总加速师在内部会议中称，要维持住中共政权，必须要让国内的老百姓有饭吃，守住35%的就业红线，青菜和面粉起码要坚持两年。同时，中共政府已计划全国未来将有1至1.5亿人的非自然死亡。
+撰稿：追着曙光跑
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/9-3-scaled.jpg)
+据中共国新华社杭州1月8日电，8日早晨4点左右，由杭州飞往俄罗斯新西伯利亚马切沃机场的俄罗斯航星航空4B6534货机，在准备起飞前退出机位时突发舱内明火情况。经紧急处置，机上8名机组人员全部被救出后转移。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/WhatsApp-Image-2022-01-08-at-20.07.23.jpeg)图片来源：网易视频截频
+起火飞机型号为图波列夫TU-204，为俄罗斯自产飞机，全球数量极少。起火后，飞机已断成两截。
 
-郭先生爆料，目前中共已存储供全国人食用18个月的储备粮。并且未来两年将以“温水煮青蛙”的方式，使全国老百姓逐步适应躺平、吃草的困窘状态。
+据舱单信息，该货机装载有普通货物约20吨，配载航油约26吨。目前，相关险情已成功排除，起火具体原因相关部门正在进一步调查中。
 
-同时，在中共国内，数字人民币将作为唯一合法的加密货币，并取代掉纸质的人民币，成为中共用来消灭私人财富、控制墙内民生的有力武器。
-
-郭先生最后向墙内老百姓预警，虽然短期内中共国的物价、房价还会继续保持稳定，但普通民众将被逐渐分级，最低级的民众则会被中共消灭。且全国各地还将有更多的老百姓像西安市里被残害的老百姓一样，一次次地被从城市隔离，一次次地被赶到深山老林，被赶到河边，最后悄悄地死去。这样的惨剧将在未来的一年中不断发生。
-
-参考链接：
-
-- [2022年1月5日 文贵大直播：](https://gtv.org/video/id=61d59a1931a71619b57520a4)
+新闻来源：[杭州机场一俄货机起飞时失火断成两截，型号全球数量极少](https://www.163.com/dy/article/GT6P0MB6053469LG.html)
+[杭州机场快速处置一起外航货机起火事件](http://www.news.cn/local/2022-01/08/c_1128244742.htm)
+[关于杭州机场一起不安全事件的情况通报](http://hd.caac.gov.cn/HD_DQYW/202201/t20220108_210816.html)
 
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/一月小图-1.jpg)
 
-总编：文特
-校正/发稿：海阔天空1
-
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
