--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,21 +1,20 @@
 ---
-title: 日本今日中共病毒感染8000例,达去年九月以来最高水平
+title: 秘翻在线：重庆爆炸惊动北京，三天前的武警演练成真
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836566/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1836782/)
 
-撰稿：东京樱花团/待命（文晓）
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-506.png)[图片来源](https://www.msn.com/ja-jp/news/national/%E5%9B%BD%E5%86%85%E3%82%B3%E3%83%AD%E3%83%8A%E6%84%9F%E6%9F%93-%E4%BB%8A%E5%B9%B4%E6%9C%80%E5%A4%9A8%E5%8D%83%E4%BA%BA-%E6%9D%B1%E4%BA%AC1%E9%80%B1%E9%96%93%E3%81%A715%E5%80%8D%E3%81%AB/ar-AASyF6A?ocid=msedgntp&amp;fullscreen=true)
-MSN1月8日消息：8日，日本中共病毒感染8000例,达去年九月以来最高水平。冲绳县连续三天感染病例数全国最高，今天为1759人。东京今日确诊病例数为1224例，比一周前高出约15倍。
+**撰稿：人间四月**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Screenshot-2022-01-08-224830.jpg)
+据新华社报道，1月7日中午，重庆市武隆区凤山街道一食堂发生爆炸，现场有多名人员受伤，目前救援正在进行，事故原因和伤亡情况正在进一步调查中。新闻只有简短一句话，但了解中共做派的人都知道，新闻字越少，事越大！
 
-1月9日，政府将根据修订后的处理中共病毒(新冠病毒)特别措施法，对冲绳、广岛和山口县实施 “重点防止疾病传播措施”。 病毒扩散 “第六波 “可能会在全国范围内蔓延，危机事态加速了政府关于收强化规的讨论。
+事实上，发生爆炸的食堂不是普通的食堂，而是中共基层政府——凤山街道办事处食堂。为此，不同以往任何灾难的发生，这次竟然第一时间惊动了国务院安委会，对重庆市武隆区凤山街道办事处食堂坍塌事故查处实行挂牌督办。
 
-由于奥密克戎菌株导致的新感染人数正在增加，在全国范围内，特别是在都市，如关东和关西地区, 目前的数字反映了去年12月圣诞节前后的情况。人们担心，年末年头的休假，加上8日开始的三天连休期间的人口流动，可能会加剧疫情蔓延。
+重庆武警因此倾巢出动，协同应急管理部门展开救援行动，并编组兵力随时为应对次生灾害和“突发险情”做足充分准备。最新的所谓官方数字是搜救出26人，其中遇难16人，10人受伤。
 
-信息来源：[国内コロナ感染、今年最多8千人 東京1週間で15倍に (msn.com)](https://www.msn.com/ja-jp/news/national/%E5%9B%BD%E5%86%85%E3%82%B3%E3%83%AD%E3%83%8A%E6%84%9F%E6%9F%93-%E4%BB%8A%E5%B9%B4%E6%9C%80%E5%A4%9A8%E5%8D%83%E4%BA%BA-%E6%9D%B1%E4%BA%AC1%E9%80%B1%E9%96%93%E3%81%A715%E5%80%8D%E3%81%AB/ar-AASyF6A?ocid=msedgntp&amp;fullscreen=true)
+非常有意思的是，就在1月4日，重庆武警刚刚开展了应急救援综合演练，假想目标就是某化工厂发生爆炸导致有毒气体泄漏。三天之后，就发生了这样的爆炸，是否是某种“气体泄漏”呢？是否是故意而为之呢？不管如何，在冬奥会和二十大即将召开的前夕，任何风吹草动，都会让中南坑睡不着觉的！
 
-*校对：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+**[新闻来源](https://www.sohu.com/a/515151795_267106)**
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
