--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,33 +1,96 @@
 ---
-title: 好想看七哥当年的照片
+title: 01/08/22 香港快讯 网媒《白夜》告别 《立场》案后累计七家停运
 ---
-`骄子` [轉載自GNews](https://gnews.org/zh-hans/1836459/)
+`英喜-粵語組` [轉載自GNews](https://gnews.org/zh-hans/1836730/)
 
-文：银河勇气星｜骄子
-![](https://assets.gnews.org/wp-content/uploads/2022/01/96395525_c2a02d9f-a278-4005-b2b7-57f8cef1691b.jpg)1977恢复高考 / 图源：网路
-哈哈，七哥以前直播的时候说，当年十四岁的七嫂，因为和七哥生气，把家里所有照片都剪掉了。然后七哥非常生气，但是也没办法。毕竟人生回忆必须要有一个载体，那是所有的情感喷发口。正如七哥昨天直播里讲的，他看到1977年他和八弟的一张照片，他流了很多很多水，就那两天流了好多眼泪，连七嫂看到这照片都流泪了。紧接着七哥就讲了很多关于那个年代的故事，一切的一切跃然纸上，而所有的回忆，都浓缩在那张照片里。好神奇啊。最庆幸的就是七哥的大部分照片都让办案的专案组给找到了，总算是留存了一些底片。另外七哥的很多照片，都散落在那些和他有缘份的人手里，像和八弟的这张照片就是让一个很久以前就坚信七哥能灭共的先生珍藏着，相信其他的照片，也总会在适当的时间，自然而然就都到了七哥手里了。到七哥把这些照片放出来的时候，我们也能看到七哥的某一段人生回忆，最重要的是从照片里体会七哥从准备灭共人家以为他是神精病，一直到现在让世界大佬都不得不开始相信一定会灭共的这些历程。
+搜集/整理：卡西欧
+![](https://assets.gnews.org/wp-content/uploads/2022/01/0108fenmian.jpg)
+封面素材：立场新闻
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Screen-Shot-2022-01-08-at-8.50.50-AM.png)
+**1. ****网媒《白夜》告别****  ****《立场》案后累计七家停运**
 
-哈哈，七哥以前直播的时候说，当年十四岁的七嫂，因为和七哥生气，把家里所有照片都剪掉了。然后七哥非常生气，但是也没办法。毕竟人生回忆必须要有一个载体，那是所有的情感喷发口。正如七哥昨天直播里讲的，他看到1977年他和八弟的一张照片，他流了很多很多水，就那两天流了好多眼泪，连七嫂看到这照片都流泪了。紧接着七哥就讲了很多关于那个年代的故事，一切的一切跃然纸上，而所有的回忆，都浓缩在那张照片里。好神奇啊。最庆幸的就是七哥的大部分照片都让办案的专案组给找到了，总算是留存了一些底片。另外七哥的很多照片，都散落在那些和他有缘份的人手里，像和八弟的这张照片就是让一个很久以前就坚信七哥能灭共的先生珍藏着，相信其他的照片，也总会在适当的时间，自然而然就都到了七哥手里了。到七哥把这些照片放出来的时候，我们也能看到七哥的某一段人生回忆，最重要的是从照片里体会七哥从准备灭共人家以为他是神精病，一直到现在让世界大佬都不得不开始相信一定会灭共的这些历程。
+[据【独立媒体】01月08日讯，去年底六名《立场新闻》高层被捕，指涉违反《刑事罪行条例》第9及10条串谋发布煽动刊物罪，《立场》同日宣布停运。至今近两星期，至少七家网媒宣布停运或终止新闻相关工作，最新一家为《白夜》，今日凌晨在社交媒体告别读者。](https://www.inmediahk.net/node/媒體/網媒《白夜》告別-《立場》案後累計七家停運)
 
-1977那个年代照片是相当奢侈的东西。那时候华国锋的两个凡是把对毛贼东的个人崇拜抬到了与神齐平的地步。正如现下习近平把自己称作太阳一样，那些专门为这个太阳创作的歌曲尽管在社交媒体上根本没什么人去听，其实对习近平这种懂音乐的人来说，创作水平相当差，但他不得不如此，毕竟真正的歌曲是不可能去歌颂独裁的，独裁也会抹杀掉人的创造力。华国锋彼时正要去做毛贼东的接班人，两个凡是是他自己所珍藏的毛贼东的遗言，然而毕竟毛贼东人死了，人死如灯灭，谁还会把他的屁话当神一样供着，并且两个凡是是华国锋提出的，也只有华国锋这样的蠢人，沾沾自喜拿着所谓的皇上的圣旨遗嘱，好比大清皇帝把遗嘱藏在正大光明的牌匾之下，其实里面的内容早让皇后改成了自己竖立的继承大统的阿哥。如果这个太后势力顽固，辅佐的新帝有手腕，那不愁坐不稳这江山，主要就是那些篡权夺位的阿哥们，太后不给力，前朝也不给力，也就两三年朝野又会被颠覆了。华国锋走的是后面这个剧本，所以不久以后，很快，邓小平采取了策略，马上就把他干掉了。当时邓小平还去中国的南海画了个圈，歌里不是唱着，神话般的崛起一座城，叫深圳。紧接着1978年就否定了两个凡是，改革开放了。华国锋这段就过去了。人虽然还活着，但是已经成为了历史的老人，属于满清遗老，活着跟死了没差别。和毛贼东一样，人死如灯灭，尽管华国锋头上一连串的官衔，但是真正掌权的那个人是邓小平了，没人再把他当回事儿了。是的，宇宙无限大，地球就是一粒沙，一段人生而已，华国锋在中共历史上做过皇帝，但几乎没人记得住他。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-91.jpeg)图源：网路
-七哥说给习近平算过命，目前为止，所有的一切都在命数里走着，一步也不曾差错。当年爆料南普陀会议的时候，就连江志诚都不曾被告知，据说这个准确的发起人是曾家。曾是有信仰的，当年就是他去的南普陀，又是拜又是做法事，南普陀一夜之间成为大菩萨的道场，来往的信众络绎不绝，听说最近都要上市了。南普陀会议当年就是要把习近平当作傀儡，然后进行共产党统治全球的计划。这个计划里的那个沉船计划，意思就是江家这一伙儿人的船都停好了，着陆了，习近平自然就是傀儡了。可是不巧的是，七哥从当年给盘古奠基取五湖四海之水土的人那里听说了很多不可思议的事情，尤其是南普陀山上的那个土，风水先生说这个南普陀决定的事情大概率是办不成。其实从最自然的角度来说，肯定是办不成的，江家所谓的沉船里面的巨量财宝，那不是江家的，那都是从老百姓身上，几代人搜刮来的，凭什么这些钱就得白给共产党这伙子人？无奈中国这片大地是被诅咒的，总是有这些太邪门的事情发生，这个给中国人下蛊的做法和妖术每年都要进行，怪不得共产党敢十拿九稳操作这件事。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/20150104075527820.jpg)图源：网路
-如今的习近平中共政府似乎也走到了两个凡是的时刻。不论习近平死不死，他指定的那个接班人一定是有危险的，好似华国锋一样，他就是所谓的毛贼东的接班人，但两个凡是是他自己说的。那么凭什么现在的习近平时代，其实任意一个人都可以跳出来说自己是习近平的接班人，并且发明一些和习时代类似所谓的语录来当作自己的政治筹码。这就是七哥所说的，20大是共产党真正的腥风血雨，党内九千万党员都要被迫卷入这些无端的斗争中。
+[《立场》案后，《香港独媒新闻》、《IBHK网络媒体》、《众新闻》、《癫狗日报》、《够姜媒体》及《聚言时报》皆相继停运，最新一家为《白夜》。 《白夜》在其社交媒体刊出告别帖文，称感谢每一位读者同路人，指「黎明之前最是黑暗」，其网站已无法进入。](https://www.inmediahk.net/node/媒體/網媒《白夜》告別-《立場》案後累計七家停運)
 
-七哥说起1977当年的照片，中共当年的内斗，和现在有很多共通的地方。也许这个照片出现的时间恰好就预示了真正的中共历史的类似时刻。太多的细节老百姓都不知道，今天有了互联网，记录了一切，共产党想要篡改也没办法。七哥说还有几张照片，他相信都会给到他手里的，也许又是某些历史的时刻，那些曾经类似的历史，一样一样浮现出来。时间让人记录，同样的时间，不同的人生，1977年七哥拿袖子擦鼻涕把胳膊擦到发亮，而中南坑当时在内斗杀人；今天七哥已经不擦鼻涕了，享受着全世界最好的物质生活，并且和战友们进行着最无私最纯真的精神沟通，中南坑还是在内斗杀人。啧啧啧，共产党不死谁死，连时间都唾弃这样的人。
+[《白夜》的简介中指，他们是「一班带着信仰和理念同行的公民记者」，命名取自《圣经》诗篇139:12「黑暗也不能遮蔽我，使你不见，黑夜却如白昼发亮。」《白夜》的facebook专页，在去年7月2日后已未再更新，过往多报导社运现场及进行直播。](https://www.inmediahk.net/node/媒體/網媒《白夜》告別-《立場》案後累計七家停運)
 
-* * *
+[行政长官林郑月娥在1月4日见记者时指，媒体停运是「自己慨决定，不能与新闻自由直接挂勾」，在政府新闻处发布系统登记的媒体，过去一年有增无减，而政府及警方只是「依法办事」。](https://www.inmediahk.net/node/媒體/網媒《白夜》告別-《立場》案後累計七家停運)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Screen-Shot-2022-01-08-at-8.51.02-AM.png)
+**2. ****一人属假阳性****   ****徐乐坚：晚宴****9****时半前离开者停止检疫**
 
-作者：骄子
-发布：骄子
+[据【香港电台】01月08日讯，出席港区人大代表洪为民生日宴会的香港电台女主持，初步阳性检测结果相信是受疫苗病毒株污染样本所致，并非真正染疫，卫生防护中心表示，当晚9时半前离开场地、目前在竹篙湾检疫中心的人士可停止检疫，获安排离开。](https://news.rthk.hk/rthk/ch/component/k2/1627935-20220108.htm)
 
-[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)，欢迎加入银河系农场。欢迎各农场兄弟姐妹们坐客串门，欢迎订阅我们的我们的G-TV官方频道[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)、[银河农场–勇气星球](https://gtv.org/user/5f0d36870cac397fcf00154c)
-![](https://assets.gnews.org/wp-content/uploads/2021/12/345-1.jpg)
+[卫生防护中心总监徐乐坚表示，宴会上首名确诊人士在9时半后才现身，因此9时半前离开的人士将获安排取消检疫令。](https://news.rthk.hk/rthk/ch/component/k2/1627935-20220108.htm)
 
- 
+[【小编评论】此次参加「洪门宴」的政府高官和议员众多，有警务处处长、廉政公署署长、海关关长、公务员事务局局长等多位高官，因此市民笑称「要把政府总部搬到竹蒿湾了」；又有消息称隔离中心人满为患，需分2次收容全部180名参加宴会者；又因为林郑不肯为此问责，要与会者自行承担，被市民斥「只许洲官放火，不让百姓点灯」。因此此次以假阳性为托辞，用时间点切割密切接触者，让政要们致歉息事宁人。](https://news.rthk.hk/rthk/ch/component/k2/1627935-20220108.htm)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Screen-Shot-2022-01-08-at-8.51.12-AM.png)
+**3. ****徐英伟区嘉宏仍须隔离　其余十名官员获撤检疫**
 
- 
+[据【Now新闻台】01月08日讯，按照最新安排民政事务局局长徐英伟、入境处处长区嘉宏等三名官员需要继续在竹篙湾隔离检疫，其余十名官员，因为在确诊者抵埗前离席，获得撤销隔离；部分已在竹篙湾的立法会议员亦可提早离开。](https://news.now.com/home/local/player?newsId=462632)
+
+[载着警务处处长萧泽颐的小巴周五深夜驶入竹篙湾检疫中心，他原本要展开21日隔离，但根据卫生防护中心最新安排，他可以提早离开，按照政府早前的公布，在洪为民生日派对九时半后，仍然逗留，有民政事务局局长徐英伟、发展局政治助冯英伦，而入境处处长区嘉宏未能证明行踪，三人须接受隔离检疫。](https://news.now.com/home/local/player?newsId=462632)
+
+[至于萧泽颐、廉政专员白辒六、财经事务及库务局局长许正宇，共十位官员及政治助理等，因为九时半前离开，可以取消隔离。](https://news.now.com/home/local/player?newsId=462632)
+
+[林郑月娥指示涉事官员须用自身假期进行检疫，并已指示特首办主任陈国基及公务员事务局长聂德权进行调查。](https://news.now.com/home/local/player?newsId=462632)
+
+[官员以外，何君尧在内多名立法会议员午夜被送到竹篙湾检疫中心，他为21日隔离检疫准备了大批物资，但根据最新安排他可以提早离开。](https://news.now.com/home/local/player?newsId=462632)
+
+[新民党的容海恩下午刚抵达竹篙湾，得悉毋须隔离。](https://news.now.com/home/local/player?newsId=462632)
+
+[20位去过生日派对的立法会议员只有陈仲尼、邱达根、陆瀚民及洪雯在九时半后仍在场，需要继续检疫。](https://news.now.com/home/local/player?newsId=462632)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Screen-Shot-2022-01-08-at-8.51.21-AM.png)
+**4. ****洪门宴后再有游艇会****   ****土木工程署证实有船宴**
+
+[据【大纪元时报】01月08日讯，第五波疫情杀到，港府周密部署，这边封村那边封楼之际，更关闭夜晚餐厅堂食、取消大型演出活动，同时关闭8国往来航机。惟「洪门宴」事件后，昨（1月7日）再有土木工程拓展署履新署长方学诚等数十人的游艇聚会照流出。](https://hk.epochtimes.com/news/2022-01-08/88707608)
+
+[昨日下午，「公务员Secrets」Facebook专页上载了一张大合照，并帖文称当一众政府高官让林郑失望之际，再「有人无视林郑既说话搞聚会贺方学诚升任土木工程拓展署署长」。照片中可见有数十人在游艇前拉起巨大横幅「热烈恭贺方学诚先生出任土木工程拓展署署长」。](https://hk.epochtimes.com/news/2022-01-08/88707608)
+
+[多间媒体其后向相关部门查询此事。土木工程拓展署其后承认该聚会，表示方学诚有份出席的游艇聚会共有22人，但方学诚本人对整个安排事前并不知情。](https://hk.epochtimes.com/news/2022-01-08/88707608)
+
+[署方又补充表示，该游艇载客量为55人，而出席船上午餐的人数只有22人。合照地点乃土木工程拓展署东涌社区联络中心的户外空间 ，当日其他在上址上班的人亦有参与合照。](https://hk.epochtimes.com/news/2022-01-08/88707608)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Screen-Shot-2022-01-08-at-8.51.31-AM.png)
+**5. ****的士工会要求政府介入处理泰加保险退保问题**
+
+[据【Now新闻台】01月08日讯，保监局接管泰加保险有约一万辆的士的保险受影响，有工会要求政府介入处理。](https://news.now.com/home/local/player?newsId=462622)
+
+[汽车交通运输业总工会指收到车主反映，泰加保险只有7天退保期，没有足够时间转保其他保险公司，对于保监局指有近8千架的士已和4间保险公司接洽。](https://news.now.com/home/local/player?newsId=462622)
+
+[工会表示大部分车主都未收到回覆是否承保，要求政府介入处理。假如有车主未能于这段时间内购买保险，政府须承担车辆购买保险的责任，避免有的士因没有保险而不能驾驶，影响司机生计。](https://news.now.com/home/local/player?newsId=462622)
+
+[工会已约见运输及房屋局反映业界的情况，又要求政府在的士司机，大规模失业的情况下，发放临时失业援助金或失业津贴。](https://news.now.com/home/local/player?newsId=462622)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Screen-Shot-2022-01-08-at-8.51.41-AM.png)
+**6. ****港铁要求员工****2.23****前打首剂疫苗****   ****不再接受检测代替**
+
+[据【星岛网】01月08日讯，港铁将进一步推动员工尽早接种新冠疫苗。港铁所有员工需于2022年2月23日或之前接种首剂新冠疫苗，才可进入公司范围，并需于2022年4月30日或之前完成接种第二剂新冠疫苗。除非具有效医生证明书，证明其健康状况不允许接种疫苗的同事，该公司亦不接受定期检测替代接种疫苗。](https://std.stheadline.com/realtime/article/1796794/即時-港聞-港鐵要求員工2-23前打首劑疫苗-不再接受檢測代替)
+
+[港铁回覆本报查询时表示，将扩大早前规定需要接种疫苖的「特定群组」的范围，至所有同事。](https://std.stheadline.com/realtime/article/1796794/即時-港聞-港鐵要求員工2-23前打首劑疫苗-不再接受檢測代替)
+
+[翻查资料，港铁去年9月中宣布分阶段要求员工接种疫苗，首阶段涵盖需定期接触乘客、顾客及承办商的职员，相关员工占全公司员工总数超过一半，相关仍未接种疫苗员工需于去年10月31日，或12月31日之前，完成接种首剂疫苗，否则要定期每隔14日在工作时间以外，进行病毒检测，并出示有效的阴性结果证明。](https://std.stheadline.com/realtime/article/1796794/即時-港聞-港鐵要求員工2-23前打首劑疫苗-不再接受檢測代替)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Screen-Shot-2022-01-08-at-8.51.50-AM.png)
+**7. ****陈肇始︰若检疫设施爆满会考虑家居检疫**
+
+[据【香港电台】01月08日讯，食物及卫生局局长陈肇始回应多名官员、立法会议员出席港区人大洪为民生日宴，表示有超过180人参加聚会，80人已经送往竹篙湾检疫中心。她认为需要反思事件，期望全城一心抗疫。](https://news.rthk.hk/rthk/ch/component/k2/1627925-20220108.htm)
+
+[陈肇始又表示，Omicron变种病毒传播速度快，目前的检疫设施紧张，若检疫设施甚至检疫酒店爆满，当局会考虑家居检疫。](https://news.rthk.hk/rthk/ch/component/k2/1627925-20220108.htm)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Screen-Shot-2022-01-08-at-8.52.01-AM.png)
+**8. ****英国《国家安全和投资法案》生效****   ****防中资危害国安**
+
+[据【大纪元时报】01月08日讯，英国《国家安全和投资法案》（The National Security and Investment \[NSI\] Act）1月4日起正式生效，该法授予内阁大臣更大权力，审查和阻止外资收购英国企业，以防损害英国国家安全。外界认为，此举或可阻止中共收购具战略价值的英国科技企业。](https://www.ntdtv.com/b5/2022/01/06/a103314316.html)
+
+[英国政府的声明形容，新法案是英国国安系统20年来最大改革，授权政府审查和干预任何可能危害英国国安的收购，以应对英国当前面对的国安威胁。](https://www.ntdtv.com/b5/2022/01/06/a103314316.html)
+
+[英国商务大臣关浩霆（Kwasi Kwarteng）强调，新实行的投资审查程序简单快捷，为投资者和公司提供从商所需的确定性，并让英国每一个人放心，他们的安全仍是政府首要考虑「我们会毫不犹豫地介入重要产业领域，以保护我们的国家安全。」](https://www.ntdtv.com/b5/2022/01/06/a103314316.html)
+
+[英国政府列出17个「敏感产业」，包括人工智慧、民用核能、能源、量子科技，以及交通运输等，任何涉及上述产业的公司，在进行收购股权比率达25%或以上的交易，都将被审查。英国政府可针对收购交易加入特定条件，甚至在必要时解除和终止交易，但当局强调，大部份交易将不受影响。](https://www.ntdtv.com/b5/2022/01/06/a103314316.html)
+
+[新法规将使英国与「五眼联盟」的情报共享盟友，包括美国、加拿大、澳洲和纽西兰，在审查制度上保持一致。](https://www.ntdtv.com/b5/2022/01/06/a103314316.html)
+
+[和美国外国投资委员会（CFIUS）略有不同的是，英国新的审查制度，不单针对外国投资者，即使是英国国内投资者，若交易涉及国家安全，同样会被审查。](https://www.ntdtv.com/b5/2022/01/06/a103314316.html)
+
+校对 / 封面合成：文粤 / 发布：流光飞舞
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
