--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,21 +1,21 @@
 ---
-title: 中共算法推荐 必须忠于党 舆论社会性清零！
+title: 日本埼玉县一名接种了三针疫苗的男子感染中共病毒
 ---
-`焦點20分` [轉載自GNews](https://gnews.org/zh-hans/1836410/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836649/)
 
-谷歌前CEO在近期接受采访时称，人工智能会根据用戶的喜好推荐东西，同时也被用于视频监控等领域来影响我们的生活。特别是向青少年推荐些有害的信息，强调并放大个人的偏好或观点,使得我们的生活方式和情感表达被人工智能左右。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/下载-3-2.jpg)
-如何让用户能更长时间停留在社交平台里，目前主要的做法是通过激怒用户，也就是中共常用的“拉仇恨”，但这种做法会危及民主。
+撰稿：东京樱花团/待命（文晓）
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-510.png)（图片源自本文链接）
+1月8日FNN要闻在线消息：埼玉县一名已接种了三针中共病毒(新冠病毒)疫苗的男子被发现感染了中共病毒。
 
-人工智能的推荐算法，已经广泛渗透到我们生活的各个角落，例如你在网络上看到的视频大约80%是推荐系统根据用户的过往浏览记录，自动给用户精准推荐你所喜欢的视频，其目的是让你浏览更多的视频来增加在线时间。当然这会让人忘掉时间的概念、丧失主动寻找信息的能力，并且增强被动接受推荐的内容。
+据埼玉县称，这位被感染的男子是一名20多岁的医务工作者，在去年12月下旬接种了第三针中共病毒疫苗。因发烧，喉咙痛，去医疗机构检查，于7日上午被确诊感染。据说目前尚属轻症。
 
-有意思的是，中共网信办新出臺的规定：算法推荐服务必须忠于党，就是一种政治色彩极其强烈的专制策略。您感兴趣的喜币，是不会被推荐的；您想了解西安疫情的发展，是在推荐算法之外的。中共的舆情分析软件非常可悲的、大量被用到了海外的推特、Facebook和油管等网络平台，监控海外华人、留学生和墙内翻墙的人，目的是无异议人士、无负面新闻等舆论社会性清零。
+7日和8日在埼玉县发现的感染者中，有121人已经接种了两剂疫苗。这是埼玉县首次在接种了三剂疫苗的人群中发现的感染病例。
 
-中共在人工智能领域重点关注及领先的技术方面，如脑控技术、器官移植技术和视频监控人脸识别技术，都跟老百姓的生活福祉没任何关系，只是为了更好地控制和奴役老百姓来维护中共的统治。而这些海外的网络媒体平台出卖用户信息给中共，帮助中共在全球推广共产主义，完全背离了西方民主自由的价值观，只为了14亿人市场上赚钱。
+信息来源：[【速報】新型コロナ　埼玉県でワクチン“3回接種”の男性が感染確認（FNNプライムオンライン） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/96f3f9dfa448251b7f6ef147684be7c638102457)
 
-文案：wuxin
-校对：雪菜、文峰
-
+*校对：东京樱花团/ 喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
