--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,28 +1,62 @@
 ---
-title: 在华日本公司频频受罚 对抗中共，日本需坚定立场
+title: 1月7日木兰战友联盟答疑G系列相关信息文字版
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836409/)
+`全球G系列咨服群` [轉載自GNews](https://gnews.org/zh-hans/1836645/)
 
-撰稿：东京樱花团/麗子
-![](https://assets.gnews.org/wp-content/uploads/2022/01/2-27.jpg)
-中共当局已经开始了一系列针对在华日本公司的案例。7日，便利店巨头7-Eleven的中国子公司已被罚款15万元人民币。理由是该公司在中共国的官方网站上发布了一张将台湾视为 “独立国家 “的地图。
+非官方整理，一切信息以联盟答疑音频为准
 
-根据北京市政府的文件，该处罚的日期是去年12月21日。此外，中共当局还指出，地图中未标明钓鱼岛，并且对西藏自治区边界线和中国南海的标记也有问题，故根据《地图管理条例》，该公司被判定触犯法律。
+G-听写：ohbigant；鲁西西
 
-无印良品也曾在2018年1月被勒令处理相关商品，因为样品地图上没有包括钓鱼岛及中国南海的岛屿。集团公司也因在衣架商标印刷 “原产国 台湾”而被罚款。
+（时段：开始～12:00 ohbigant）
+1、HPay上线后，喜币能否由战友帮忙购买后转给自己？
+答：具体怎么操作目前还不清楚，应该是可以的。
 
-去年，索尼的中国子公司也被罚款100万元人民币，只因广告将在7月7日推出一款新产品，而这一天恰好是中日战争导火索—卢沟桥事件纪念日。
+2、10万以下想投资数字银行，现在还能再参加？
+答：现在处理第一批中，处理完之后大概下周会再开放登记。
 
-时事评论员表示，由于中共房地产市场的恶化，中央和地方政府陷入严重财政困难，中共目的是通过对国内外公司的罚款来增加收入。对中共而言，日本公司比美国公司拥有更多的指控借口，而且日本政府频频示弱，中共屡屡得逞。所以日本政府有责任保护其公司，关键问题应该坚定立场。
+3、通过联盟投资数字银行无法达到会计师证明的要求，是不是无法参与？
+答：是的，10万以下需要会计师的证明，达不到要求KYC无法通过。要证明你是合格投资者，需要个人净资产（比如房产）在250万澳元以上，或者连续近两年收入在25万澳元以上。
 
-信息源:
+4、10万以下投资数字银行已收到通过的邮件，需要哪些准备工作？
+答：投总部和联盟的要求是不一样的。
+10万以下需要两种带头像的ID，比如护照和驾照，护照和身份证。
+会计师出具的资产证明或是收入证明，要有资质的会计师。（CPA或CA）
 
-[「台湾」「尖閣」表記で現地のセブンイレブンに罰金　中国当局が日本企業に“言いがかり”　無印、ソニーに続き](https://news.yahoo.co.jp/articles/23798ea24c892ea01455111d452d83a3bcd72480)
+5、10万以下投资需要卖房产的证明吗？
+答：我们是不需要的，不知道会计师是否需要。
 
-*校对：东京樱花团/喜马拉雅的微尘*
-*发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+（时段：12:00～结束）
+6、数字银行投资要两个ID，假设护照驾照都是加拿大的，还需要公证吗？
+答：因为你不是提供原件，所以需要证明和原件是一致的。
 
+7、该如何要求会计师出具资产证明？
+答：一般有一个固定的格式。名称类似“合格投资者”“成熟投资者”之类。
+
+8、墙内能否暂缓交纳G|CLUBS年费，会影响年会抽奖资格吗？
+答：具体还不清楚。
+
+9、现在购买G|CLUBS卡还有福利政策吗？
+答：没有了。
+
+10、投资数字银行，护照和ID都要做公证吗？
+答：最好做一下，因为你提供的都是复印件。
+
+11、投资数字银行有没有专门的discord组群？
+答：联系农场填表申请加入。
+
+12、喜币也可以算做资产吗？
+答：可以的，只要你会计师认可就可以。
+
+13、SEC正式通知退款了吗？
+答：还没有。
+
+G系列都是独立机构，联盟答疑不代表任何G系列，不承担任何法律责任。联盟只是一个沟通的桥梁，一切以当地法律和G系列官方为准。 @everyone
+
+语音链接：[https://mega.nz/file/KIpCkTiD#ONyT8lzPspPOJOtjjKF3TcMdYtSON9Xkjjvf7sFWMtc](https://mega.nz/file/KIpCkTiD#ONyT8lzPspPOJOtjjKF3TcMdYtSON9Xkjjvf7sFWMtc)
+
+审核：*哲道行者；夏目&山竹*
+
+发布：*哲道行者*
 
  
 
