--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,25 +1,21 @@
 ---
-title: 习近平赞扬哈萨克斯坦镇压反抗者
+title: 不痛不痒难以制“匪” 美日对中共国试图破坏秩序表达关切
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836408/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836641/)
 
-撰稿：东京樱花团/百花李香
-![](https://assets.gnews.org/wp-content/uploads/2022/01/1-87.png)图片来源网站
-《日本电视新闻》1月8日消息，在哈萨克斯坦，安全部队向抗议燃油价格上涨的示威者开枪。国际社会对造成大量人员伤亡严重关切中，中（共）国习近平1 月7日向哈萨克斯坦总统托卡耶夫表示，他完全支持当局对示威者的武装镇压。
+撰稿/配图：东京樱花团/Ob
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-509.png)
+路透东京1月7日，美国和日本外交以及国防部长周五发表联合声明，对中共国不断试图破坏以规则为基础的秩序表达关切。 声明称，两国决心共同努力遏制、并在必要时应对破坏该地区稳定的活动。
 
-习近平赞扬托卡耶夫在关键时刻采取了大胆有力的措施，迅速平息了局势，同时他还表示，坚决反对外部势力故意在哈萨克斯坦制造动乱。
+上述官员表示，他们对中共国新疆和香港地区的人权问题“表示严重持续的关切”，并强调了台湾海峡和平稳定的重要性。两国高层官员举行了在线会议，讨论加强两国安全联盟并使之现代化的问题，同时启动一项新的研发合作协议，应对高超音速导弹等新兴威胁。
 
-习近平将外国势力干预镇压香港民主抗议活动作为其政府行动的一个理由，试图为他的暴政做辩护，并扩大其在中亚的影响力。
+与流氓讲规则无异于与虎谋皮。流氓之所以屡屡得逞，是经常游走在法律、规则边缘不断地试探和挑战，又步步进逼，只要没有得到坚决的反对和立马制止，中共就可以在一推二就中实现他的流氓战略。对待流氓只有更加果干坚决地予以否定和回绝，彻底断了他的念想，才能在与共匪的周璇中不至于于被动挨打。
 
-信息源：
+消息来源：[美国和日本对中国试图破坏以规则为基础的秩序表达关切——联合声明](https://cn.reuters.com/article/us-japan-statement-china-0107-idCNKBS2JH07E)
 
-[中国・習主席　カザフスタン武力鎮圧を称賛](https://news.yahoo.co.jp/articles/cd87633969c9e3f840d2d96df4d3dd9b024c9f6a)
-
-*校对：东京樱花团/喜马拉雅的微尘*
-*发布：东京樱花团/tdownc2p*
+*校对：东京樱花团/知了知了
+发布：东京樱花团/平安卿卿*
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
-
-
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
