--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,37 +1,34 @@
 ---
-title: 盖特改变了社交媒体的游戏规则
+title: 01/08每日播报&#124;因未接种疫苗 捷克女子网球运动员遭澳洲驱逐
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1836365/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1836582/)
 
-撰稿：银河勇气星—骄子
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-40-1-3.png)
-郭文贵先生在1月5日的直播中与战友分享了盖特的巨大价值。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-504.png)
-郭先生表示，世界当下的社交媒体平台如推特、脸书、抖音等，都是以大科技公司或大集体来垄断个人用户，群体控制并奴役个体。与之相对的，盖特开创了以个人用户为主、个体之间可以自由沟通真实讯息且不被平台垄断的区块链式人类互动新型模式。其中，盖特平台最出众的一点在于，金融与人的行为直接挂钩——这一模式打破了世界各国的法币对人们的严格管控与限制，真正做到货币、自由、人权、信息的解放。
+**By:[秘翻新闻](https://gtv.org/video/id=61d954ea2591020829849260)**
 
-郭先生也提到，在人类应对中共病毒及其疫苗的这场大灾难中，旧的社交媒体平台都有原罪，而罪恶是需要付出代价的，比如死亡。但是，盖特是一个没有原罪，并且给人类带来新的生命和信仰的平台。
+**2022-01-08**
 
-郭先生补充道，盖特完全改变了旧社交媒体公司的游戏规则，其主导的以个体为主的时代已经到来。同时，到目前为止，盖特的数据还在不断攀升中。
+据《路透社》1月7日报道，当地时间周五，捷克网球女将、丽娜塔·沃拉科娃（Renata Voracova）被澳大利亚边境部队（ABF）官员撤销签证后，要求其离境。成为第二位因为没有接种中共病毒疫苗而被拘留的澳大利亚网球公开赛选手。
 
+现年38岁的沃拉科娃是网球双打专家，在2001年赢得了法国公开赛女双冠军。在双打比赛中，曾赢得了11个冠军，并在2017年进入温布尔登半决赛，沃拉科娃的职业年收入为188万美元。
 
+在本周三，著名男子网球选手诺瓦克·德约科维奇(Novak Djokovic)也因为没有接种中共病毒疫苗，在墨尔本机场被拘留。德约科维奇是世界排名第一的男子网球选手，曾获得20个大满贯冠军。目前，这两名网球选手都被拘禁在卡尔顿的公园酒店。
 
-新闻来源：[1/05/2022 文贵直播](https://gettr.com/post/pmli8c3d40)
+据本地媒体报道，本周早些时候，澳洲网球协会曾给予沃拉科娃疫苗豁免，因为她曾经感染过中共病毒并且已经康复。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/F1C30581-642E-4728-BA67-6179D9B8FC58-4.jpg)
+然而，澳洲网球协会告诉《先驱太阳报》，他们没有故意误导参赛球员关于疫苗要求的信息，并利用卫生部长免疫咨询小组的指导意见，向球员群体解释维多利亚州法律规定的球员参赛资格。
 
-总编：文特
+澳大利亚边境部队（ABF）表示，一名球员已经自愿离开澳大利亚，而另一名球员的签证已经被取消，此人被移民局拘留，等待被驱逐出澳大利亚。但拒绝具体说出沃拉科娃的名字。
 
-编辑：Irene木木
+捷克外交部在一份声明中表示，沃拉科娃已决定退出比赛，离开澳大利亚。捷克外交部补充说，它已经通过捷克驻堪培拉大使馆提出了正式抗议，要求当地政府给出解释。
 
-校正/发稿：浪迹天涯
+秘翻新闻主编   冰糖葫芦喵编译报道
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-40-1-3.png)
+发布:文橙
+
+* * *
+
+**By 【秘密翻译组-即时新闻播报组】**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
