--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,29 +1,27 @@
 ---
-title: 中国人果然被诅咒了
+title: 中共二十大人事布局被曝 习总加速师已踏上不归路
 ---
-`骄子` [轉載自GNews](https://gnews.org/zh-hans/1836363/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836571/)
 
-文：银河勇气星｜骄子
-![](https://assets.gnews.org/wp-content/uploads/2022/01/截屏2022-01-08-19.55.57-1.png)
-以前一直怀疑，共产党肯定对中国人动了某些迷信上的操作，比如下蛊或者就是下咒这样子。毕竟在中国这片土地上，怎么就能演化出令人瞠目结石的事情来，一件两件还罢了，十件八件也说得过去，可是这些惨绝人寰的事情遍布了全社会。苦于没有真凭实据，也不能到处说，就在心里到处怀疑。天不负我，七哥昨天直播里说，共产党每年都要做些邪恶法事来诅咒中国人，所有的中国民族56个，全部都被下蛊了。一直以来的怀疑得到了证实，舒缓了很多。
+撰稿：东京樱花团/深藏不露
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-507.png)
+郭文贵先生1月7日在盖特爆出习近平对中共二十大的人事布局。国家主席是习近平，国务院总理是胡春华，人大委员长是丁薛祥、全国政协主席是李希、纪委书记是陈全国、第一副总理是陈敏尔。
 
-看武侠小说里说江湖大侠在一个山洞里练成了绝世神功，不仅好奇这个神功，更好奇的是这个山洞。不仅仅是小说里的山洞，就连平时的一些山洞，桥洞，每当进入，总会有不一样的感受。共产党的基建工程为了修路，就在山的中间炸开一个洞，下面就铺沥青铺水泥石膏，就算修好路了。道路工程里，这个就叫做隧道，进入隧道之前会有巨大的警示牌。隧道里面虽然都有路灯，但是毕竟和外面能够直接看到的天空不一样，有的人有幽闭恐惧症，普通人没有病进入了隧道里也会觉得毛骨悚然心里发怵。地铁也属于是隧道的一种。很多流浪汉都睡地铁站，也有很多住在隧道里。流浪汉常常是人们认为的那种不知其何日生，更不知其何日死的人。经常性的，隧道里的车祸事故要比平时路面的事故多，毕竟由于进隧道和出隧道的时候的光线影响导致的视觉盲区要比平坦路面大。地铁属于一直行走在隧道里的公共交通工具，运营是受到了全面的技术培训的，严格的技术控制，并且只有很少的地铁是有进入洞口和出去洞口的设计的，大部分都只跑地下，这对视觉盲区就没什么影响了。况且地铁是有轨道的，所以地铁出的事故就少一些，但是一出事故就是出大事故，因为公共交通乘坐的人很多。再者，如果地铁允许人们的私家交通工具进入，相信也会成为事故多发地。隧道的两头如果都堵上了，那就不叫隧道，叫墓地。山洞塌方是最大的事故，可以瞬间把人活埋。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/v2-ac9b07f9d8ce484a77d91757e05eee19_1440w.jpg)戴上这个金箍 / 水帘洞，图源：网路
-似乎盖住天空的山洞里面，除去一些生理因素，还有一些不可明状的东西，牵引着事故发生。这里我们就不得不提的是郑州去年夏天京广隧道里死去的人，还有地铁隧道里死去的人。共产党恶意泄洪，往隧道里灌水，这些地势较低的山洞总是不能幸免，一积水就会殃及人命。然而在泄洪之前还下了很大的雨，当时情况是完全有机会逃出去的，也有成功逃出去的人，毕竟如果一个人就是要活着，拼尽全力要活着，那股力量是完全可以撼动某些超自然神力的，毕竟这千真万确是共产党的邪恶陷害和洗脑，拼命挣脱生存下来的人是会得到上天的怜悯的。只是还是有很多人，不是一两个，是成千上万个，加上一个人背后的家庭，那就更多了。这些死亡的人，在我们看过的郑州地铁和隧道死亡的那些小视频里，都在灾难到达的时候非常木讷，束手就擒。虽说很痛恨共产党这样任意泄洪，把人命不当回事儿，但是在这种生死时刻，宁愿泡在水里都不愿意求生逃离的同胞，那种对生命的漠视和无知，甚至有的人还说些风凉话。最难过的就是一车人，大家可以安安静静地泡在地铁里等待死亡。手机不停地打着求助电话，一直等着共产党来救，相信了党的伟大的优越性，坚信共产党一定会来救自己，踏踏实实泡在水里等着，等到手机没电，等到自己呼吸困难，直至死亡。京广隧道那些把车子开进去的人，宁愿死在车里都不要爬出来逃生，最后才看到在涨到快和隧道相平的水面爬出来几个人。不得不怀疑，到底是什么力量把他们禁锢在隧道山洞里，生命居然可以这么轻易就没了。那是活活的生命，没了就真的没了啊。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/162709908614295800.jpg)图源：网路
-老早就听七哥讲过共产党的镰刀锤子旗是红色，意思就是要拿血来祭奠这面血旗，只有中国人不断地流血死去，共产党的统治才能稳定住。这七十多年来有不断死去的人，也许有太多都是孤魂野鬼，人们常说的人死了要重新投胎转世，而这些孤魂野鬼是没办法转世的。七哥曾说过在清丰看守所一个狱警，给七哥说到时候就把你们这些造反派都埋到乱葬岗地底下数米多深的地方，永世不得翻身，永远不能造反。结果这人就是和七哥喝茅台，贪得无厌一直喝，给喝死了。人死了以后灵魂到底能不能投胎？不投胎的话灵魂去了哪儿了，共产党说的把人埋在乱葬岗，灵魂就果真被禁锢了吗？可能并没有，因为清丰看守所这些超自然的力量，是七哥生命的一部分，我们时时刻刻都在感受看守所里那些给七哥带来改变的肉体已经消亡的“战友”。
+据此可以看出，习总加速师已经彻底的癫狂了，他利用商鞅五术奴役着人民，还觉得管控不够，希望将中共国彻底变成像北朝鲜一样的大监狱，让习氏江山千秋万代！这孙子一开始当政就是这么打算的，它对老百姓的驭民之术用到极致，它可不是一时兴起，这猪头早就已经打算将中共国朝鲜化，当他重用酷吏陈全国这种奸邪恶吏治理新疆之时，习猪头的獠牙已经渐渐地露出，它邪恶的真实面目已经显现！
 
-很多人死了要埋都要找人看看墓地的风水，家里的祖宗长辈死了以后每隔清明都要去拜祭。墓地里面埋着死人，死人的外面是山水草木自然，人死了以后就和自然融为一体了。人本来就是有机物，有机物易燃，拿个火种直接就可以把一个点燃，别说死人了，就是活人也会被烧死。人的这副躯壳的性质就是如此，我们吃进去的所有食物帮助人体的组织更好地发育完善，我们排出的大便会重新回到自然的土壤里做肥料，养育地球上的花草植物。万物循环，回归自然。
+陈全国的前任张春贤采取“柔性治疆”的策略，被认为未能有效阻止新疆“暴恐事件”发生和治安恶化。自2014年乌鲁木齐火车南站暴力恐怖袭击案件发生之后，习总加速师就亲自下令兴建集中营！陈全国到任后，不管新疆的老百姓死活，为向习总加速师表忠心，提出“在新疆，没有稳定一切皆为零”的口号！此后，新疆采取大规模清查表面为政府工作但实际上被指支持疆独的“两面人”并调整人事、设立职业技能教育培训中心、社区联保等措施，从此将新疆变成了人间地狱！
 
-大地万物山脉河流，都在依据自然法则亘古绵延。人类生活在其中，怎么可能一点也不受影响。共产党给中国人下了诅咒，不然一部分中国人不会这么木讷无知一心爱党。然而如今，这诅咒被破了。
+2020年7月9日，美国财政部依照时任总统特朗普于2017年12月依照《全球马格尼茨基人权问责法》签署的行政命令，对陈全国等四名新疆政法机关领导人及新疆公安厅进行制裁！
 
-* * *
+诸葛亮在给刘禅的《出师表》中提到，“亲贤臣，远小人，此先汉所以兴隆也；亲小人，远贤臣，此后汉所以倾颓也！”
 
-作者：骄子
-发布：骄子
+像国际公认的酷吏佞臣陈全国，习总加速师不仅没有远离，还将其大力的提拔，可见习猪头的司马昭之心 路人皆知！它这是要用酷吏佞臣陈全国来对党内来个重磅深度大清洗！党内不久将会迎来可怕血雨腥风！习猪头家天下的如意算盘将会在无数人的鲜血中完成！
 
-[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)，欢迎加入银河系农场。欢迎各农场兄弟姐妹们坐客串门，欢迎订阅我们的我们的G-TV官方频道[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)、[银河农场–勇气星球](https://gtv.org/user/5f0d36870cac397fcf00154c)
-![](https://assets.gnews.org/wp-content/uploads/2021/12/345-1.jpg) 
+相信共产党 走向火葬场 ！彻底癫狂的习猪头已经高高举起了它的屠刀，党内的战友们，一定要认清习猪头的邪恶用心，坚决要给习猪头当头一棒，这孙子只认强者，不会可怜弱者！请加入爆料革命、新中国联邦，让我们齐心协力将这邪恶的中国共产党从地球上彻底的摧毁！！
+
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
