--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,33 +1,21 @@
 ---
-title: 杨贝贝的歹毒用心堪比希特勒时代的戈培尔
+title: 日本今日中共病毒感染8000例,达去年九月以来最高水平
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1836360/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836566/)
 
-撰稿：纽约香草山信息部 – 6zero4
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-40-1-3.png)
-2021年1月5日文贵大直播中，郭先生称，中共花一年时间通过世界级媒体HBO VICE以及记者杨贝贝，处心积虑利用假视频抹黑爆料革命，将全球华人定义为西方民主最大的敌人，将给海外华人带来“印尼排华”惨案般种族歧视、种族屠杀等灾难。杨贝贝事件是中共为华人乃至黄皮肤亚裔，精心罗织的极其阴险歹毒的天罗地网加强版。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-503.png)
-1月4日，被她蓄意恶剪的视频所陷害的战友跟律师们进行了沟通，新中国联邦人优秀的英文、清晰的思路与准确的表达让律师们感到惊讶。
+撰稿：东京樱花团/待命（文晓）
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-506.png)[图片来源](https://www.msn.com/ja-jp/news/national/%E5%9B%BD%E5%86%85%E3%82%B3%E3%83%AD%E3%83%8A%E6%84%9F%E6%9F%93-%E4%BB%8A%E5%B9%B4%E6%9C%80%E5%A4%9A8%E5%8D%83%E4%BA%BA-%E6%9D%B1%E4%BA%AC1%E9%80%B1%E9%96%93%E3%81%A715%E5%80%8D%E3%81%AB/ar-AASyF6A?ocid=msedgntp&amp;fullscreen=true)
+MSN1月8日消息：8日，日本中共病毒感染8000例,达去年九月以来最高水平。冲绳县连续三天感染病例数全国最高，今天为1759人。东京今日确诊病例数为1224例，比一周前高出约15倍。
 
-最后律师们对杨贝贝事件达成3点共识：一，确认2020年1月6日国会山动乱现场并没有新中国联邦国旗，这是极其危险的栽赃；二，把华人定义为西方民主的威胁，完全是希特勒当年戈培尔式宣传口径，这绝对适用RICO法案；三，这个毫无法律依据的视频，推出的时机和内容，说明杨贝贝不仅在挑战新中国联邦，也在挑战美国。美国两党很多议员看了视频后都认为她绝对跟中共有关系。
+1月9日，政府将根据修订后的处理中共病毒(新冠病毒)特别措施法，对冲绳、广岛和山口县实施 “重点防止疾病传播措施”。 病毒扩散 “第六波 “可能会在全国范围内蔓延，危机事态加速了政府关于收强化规的讨论。
 
-对于杨贝贝是中共最重要的大外宣，是对华人最危险的人，新中国联邦人和所有华人都有权力起诉HBO VICE和Isobel Yeung。
+由于奥密克戎菌株导致的新感染人数正在增加，在全国范围内，特别是在都市，如关东和关西地区, 目前的数字反映了去年12月圣诞节前后的情况。人们担心，年末年头的休假，加上8日开始的三天连休期间的人口流动，可能会加剧疫情蔓延。
 
-新闻连接：[2022年1月5日 文贵大直播](https://gtv.org/video/id=61d59a1931a71619b57520a4)
+信息来源：[国内コロナ感染、今年最多8千人 東京1週間で15倍に (msn.com)](https://www.msn.com/ja-jp/news/national/%E5%9B%BD%E5%86%85%E3%82%B3%E3%83%AD%E3%83%8A%E6%84%9F%E6%9F%93-%E4%BB%8A%E5%B9%B4%E6%9C%80%E5%A4%9A8%E5%8D%83%E4%BA%BA-%E6%9D%B1%E4%BA%AC1%E9%80%B1%E9%96%93%E3%81%A715%E5%80%8D%E3%81%AB/ar-AASyF6A?ocid=msedgntp&amp;fullscreen=true)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/F1C30581-642E-4728-BA67-6179D9B8FC58-4.jpg)
-
-总编/编辑：童谣
-
-校正/发稿：浪迹天涯
-
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-40-1-3.png)
+*校对：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
