--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,25 +1,20 @@
 ---
-title: HBO VICE ISOBEL YEUNG的采访是对郭文贵先生有计划的诽谤 Part-15
+title: 中共以资本控制&amp;水军&amp;流量机器人&amp;恶意采访操控媒体舆论
 ---
-`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1836342/)
+`mary202064` [轉載自GNews](https://gnews.org/zh-hans/1836496/)
 
-编辑: 飞虹
-![](https://assets.gnews.org/wp-content/uploads/2022/01/新-1.png)
-过去两周，我们针对HBO VICE 播放的恶意诋毁郭文贵先生的、所谓记者ISOBEL YEUNG的采访视频，通过还原真相进行了有力回击。新中国联邦创始人郭先生带领的爆料革命，向西方世界揭露中共CCP的邪恶并多次发出警告，最终得到验证，展示了新中国联邦和郭先生的真实实力。这是HBO，也是世界上任何一个流氓媒体无法掩盖和诋毁的真相。今天，我们再次回顾郭先生的伟大作为和ISOBEL YEUNG的真实面目，作为这个系列视频的结尾。（*播放视频：9’15”*）
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-502.png)
-新闻链接: https://www.gettr.com/post/pkgm7effe9
+独裁国家最爱谎言和暴力。谎言和暴力是他们的海洛因，令他们欲罢不能，令他们陷入疯狂，但最终，也会让他们走向毁灭。纳粹深得谎言治国的精髓， 然而纳粹比之于中共，那就是小巫见大巫，根本不能同日而语，中共对洗脑的痴迷，对舆论的操控，早已青出于蓝而胜于蓝，成为所有操弄谎言欺骗人民的集大成者，中共是魔鬼中的魔鬼，疯子中的疯子。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/F1C30581-642E-4728-BA67-6179D9B8FC58-4.jpg)
+中共不仅仅控制国内舆论，更是长臂管辖，把手伸到国外。那究竟中共是如何控制海外舆论的呢？广告捆绑、利益输送、市场诱惑、资本控制、媒体公司操控、恶意采访、人海战术、黑客攻击、流量机器人、虚假账号，各种方式五花八门。
 
-校正/发稿：浪迹天涯
+中共的这些手段令人心惊，中共对西方媒体的渗透也令人心惊。然而，并非所有的西方媒体都愿意屈服在中共的淫威之下，中共发力过猛、祸害世界引起了全世界人民的反感和痛恨。HBO的VICE采访郭文贵先生的事件也惊醒很多西方人，中共用几代人的时间对西方进行渗透，动员国家力量来打击中共的政敌。
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![](https://assets.gnews.org/wp-content/uploads/2022/01/新-1.png)
+中共早已经不是狼皮的羊，而真的长成了长着獠牙的摧毁世界的恶魔。 #中国日报买广告 #华尔街日报道歉 #时代华纳与HBO #新冠排华 #hbo采访郭文贵 #hbo 杨贝贝 #HBO 恶意采访 #vice恶意采访 #tiktok 与中共 #单伟建 郭文贵 #德州太平洋集团 #推特虚假账号 #推特攻击 #中共如何操控信息
+
+作者：华盛顿DC 海阔天空
+
+查看作者更多文章，请点击——[中文简体](https://gnews.org/zh-hans/author/mary202064/)、[中文繁體](https://gnews.org/zh-hant/author/mary202064/)、[English Articles](https://gnews.org/author/mary202064/)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
