--- a/gnews/31.md
+++ b/gnews/31.md
@@ -1,36 +1,10 @@
 ---
-title: 01/08每日播报&#124;播客巨星乔·罗根加入盖特后引起注册浪潮
+title: 喜币的价值就在于我们战友
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/1836215/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1836445/)
 
-**By:[秘翻新闻](https://gtv.org/video/id=61d954ea2591020829849260)**
+台灣寶島農場
 
-**2022-01-0**8
-
-据《华盛顿邮报》1月7日报道，在播客巨星乔·罗根(Joe Rogan)加入后的几天内，盖特已经有超过 100 万新用户注册。
-
-报道称，盖特是一个吸引保守社交媒体用户的社交平台。罗根周日在该网站上发表了第一篇帖子的5天后，该平台的新用户已经达到了 100 万大关，。盖特发言人埃博尼·鲍登 (Ebony Bowden) 称，这使盖特网站的用户总数已经超过 了400 万。
-
-虽然罗根先生目前仍然拥有一个推特帐户，但是在乔治亚州众议员玛乔丽·泰勒-格林（Marjorie Taylor-Greene）的账号在周日被推特封号后，他考虑到了推特的审查制度，于是他加入了盖特。
-
-罗根先生在他的第一个盖特帖子中写道：“为了防止推特上的东西变得更蠢，我现在也在这里。欢呼吧！”
-
-据报道，在罗根先生加入盖特的第二天，也就是 1 月 3 日，盖特到注册人数就达到了 343,000，这是该网站自 7 月推出以来的最大单日注册量。 鲍登还补充说，盖特并没有支付罗根加入该网站的费用。
-
-对于保守派来说，盖特网站的主要卖点是其较宽松的内容审核政策。盖特说，它允许所有关于政治和疫苗的观点，包括那些其他网站的事实核查员会标记为错误的观点。
-
-同时盖特是一个国际平台。截至周五，盖特表示其在美国有220万用户，其次是巴西的50万用户，以及英国、德国和法国的大量用户。
-
-盖特的CEO杰森·米勒(Jason Miller)先生对《邮报》说：“这些数字证明，社交媒体用户开始意识到硅谷高管日益严厉的审查制度，并渴望获得替代方案。我们欢迎来自各种意识形态和背景的人在我们的平台上自由表达自己。”
-
-（秘翻新闻主编Grace编译报道）
-
-发布:星星
-
-* * *
-
-**By 【秘密翻译组-即时新闻播报组】**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/截圖-2021-12-28-00.48.35.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
