--- a/gnews/32.md
+++ b/gnews/32.md
@@ -1,35 +1,28 @@
 ---
-title: 中国科学家因窃取孟山都公司的机密而认罪
+title: 在华日本公司频频受罚 对抗中共，日本需坚定立场
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1836157/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836409/)
 
-**编译：美哥**
-**编辑:   MSGZ  **
+撰稿：东京樱花团/麗子
+![](https://assets.gnews.org/wp-content/uploads/2022/01/2-27.jpg)
+中共当局已经开始了一系列针对在华日本公司的案例。7日，便利店巨头7-Eleven的中国子公司已被罚款15万元人民币。理由是该公司在中共国的官方网站上发布了一张将台湾视为 “独立国家 “的地图。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/树叶.png)图片来源  theguardian.com
+根据北京市政府的文件，该处罚的日期是去年12月21日。此外，中共当局还指出，地图中未标明钓鱼岛，并且对西藏自治区边界线和中国南海的标记也有问题，故根据《地图管理条例》，该公司被判定触犯法律。
 
-前孟山都雇员向海涛，在美期间被指控窃取了美国农业技术，目的是让中共政府受益。
+无印良品也曾在2018年1月被勒令处理相关商品，因为样品地图上没有包括钓鱼岛及中国南海的岛屿。集团公司也因在衣架商标印刷 “原产国 台湾”而被罚款。
 
-周四，美国司法部门的起诉书里写道了44岁的向海涛密谋为中华人民共和国窃取商业机密。目前他已承认了罪行。
+去年，索尼的中国子公司也被罚款100万元人民币，只因广告将在7月7日推出一款新产品，而这一天恰好是中日战争导火索—卢沟桥事件纪念日。
 
-向海涛在密苏里州的孟山都总部曾以科学家的身份工作过，在他离开后，就买了一张飞回北京的单程票，而执法人员在他的电子设备里发现一份“营养素优化”算法的系统副本，而该演算法属于孟山都的机密。本案将于4月7号宣判，如果指控全部成立，其将面临15年有期徒刑和500万的罚金处罚。
+时事评论员表示，由于中共房地产市场的恶化，中央和地方政府陷入严重财政困难，中共目的是通过对国内外公司的罚款来增加收入。对中共而言，日本公司比美国公司拥有更多的指控借口，而且日本政府频频示弱，中共屡屡得逞。所以日本政府有责任保护其公司，关键问题应该坚定立场。
 
-美国密苏里州东区的检察官弗莱明 (Sayler Fleming) 表示：“我们不能允许美国公民或者外国人，将敏感商业信息交给别国的竞争对手，这些罪行对美国经济和国家安全十分危险。”
+信息源:
 
-美国联邦调查局反间谍助理小艾伦.科勒也称：“当像中国这样的政府盗取我们的技术来实现经济发展的同时，美国人成为了最大受害者。美国不仅仅是机密实验室里的军事技术，提高棉花产量的农业技术也同样会被对手觊觎。”
+[「台湾」「尖閣」表記で現地のセブンイレブンに罰金　中国当局が日本企業に“言いがかり”　無印、ソニーに続き](https://news.yahoo.co.jp/articles/23798ea24c892ea01455111d452d83a3bcd72480)
 
-向海涛的认罪是美国司法界对反对中国干涉的又一次新胜利。上个月，前哈佛大学的化学部门负责人，因为非法参武汉工程大学的项目而认罪。
+*校对：东京樱花团/喜马拉雅的微尘*
+*发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
 
-原文链接：[https://www.rt.com/news/545351-chinese-scientist-pleads-guilty/](https://www.rt.com/news/545351-chinese-scientist-pleads-guilty/)
-
-*发布：盘古相聚*
-
-**更多资讯，请关注：**
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
