--- a/gnews/34.md
+++ b/gnews/34.md
@@ -1,21 +1,33 @@
 ---
-title: 南极疫情是外来输入，还是疫苗引发？
+title: 大直播后记：共产党让你永远活在一个噩梦中
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1836115/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1836377/)
 
-撰稿—祥瑞舟
-校对/上传—无明逆流
+- ![](https://assets.gnews.org/wp-content/uploads/2022/01/噩梦-1.png)图片来源：Getty Images
 
-据外媒报道，来自南极的一个偏远科考站近日传来了坏消息，半个月以来科考站超过一半的工作人员感染了新冠病毒。报道中指出，该南极科考站为“比利时南极伊丽莎白公主站”，在12月14日发现了第一例感染新冠病毒的工作人员。此后，又有多人病毒检测呈阳性。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/121374_1.jpg)
-该报道指出，所有工作人员在来到该科考站之前，都已经完成了新冠疫苗的接种，并且病毒检测也都呈阴性，目前尚不清楚是如何感染新冠病毒的。
-考虑到在病毒和疫苗真相面前所谓世界主流媒体已经被利益群体收买，从该篇报道中我们无法找寻更多的真相。然而实际上看过这篇报道的读者都会问同样的问题，他们是怎么感染病毒的？
 
-尽管还缺乏足够多的证据，可常识是任何人都无法忽略的：在基本与世隔绝的南极，是不可能有外来输入传染源的。如果说有，那唯一的传染源很有可能是疫苗接种者自身疫苗副作用爆发所导致，这和西安情况有些相似。正如七哥最近爆料中提到过的那样，西安疫情是接种疫苗副作用导致的后果。
+整理：雅典娜速记组
+编辑：Mttfly
 
-除了爆料革命和部分西方正义人士一直在揭示病毒与疫苗真相，世界各国政府目前还都没有对病毒真相进行联合调查问责，疫苗接种也还没有被各国政府按下停止键，还需要更多时间去传播疫苗真相。
+**2022年1月5日文贵大直播**
 
-当疫苗灾难频发、出现大量死亡和伤残案例，整个世界秩序陷入停摆与混乱的时候，人类当下面临的这场生化危机真正的拐点才会到来。停止接种疫苗、病毒追责以及疫苗追责将接踵而至，所有真相终将水落石出，正义终将战胜邪恶！
+共产党就让你永远活在一个噩梦中，永远不说你会醒来，你就一直做下去，直到你做恶梦，死在噩梦里为止。就像今天，你看到了西安人笑嘻嘻地被（关）集中营一样，就像那个猪、鸭子被赶上架一模一样。但是你要看到台湾人不信邪，台湾人认为骚扰我做噩梦是吧？我知道你这玩意是假的，有风水都迷信。香港人不信邪啊，新疆人现在也反抗，西藏人反抗了，还有世界上很多人反抗，我们新中国联邦就是告诉所有的人真相的地方。
+
+我们要做美丽的梦、春梦、有水的梦，不要做噩梦，而且我们知道梦醒来就是更好的人生。还有一个更重要的事情，我们不是迷信，我们相信有风水。风就是阳，水就是阴，这是为什么奥林匹克村出来了水龙，盘古的阳龙，他为什么把龙头变成了包头？如果他也不信，他就不这么干了，就像把佛手要拿走一样，在冬奥会以前，现在是发生了什么？
+
+大家记住，在全人类都没有的情况下，现在发生了一个你们刚才看到一开始的盖特。黄皮肤人，中国人从来没有在宇宙中占过今天的位置，全宇宙当中从来没有发生过。咱们这些人不流血，能让全世界开始消灭邪恶的力量，就是阳光。太阳将出来，黑暗将消去，那就是我们更重要的事情。只有我们没打疫苗，你没想过这个问题有多大了吗？现在所有的人都在问一个问题，为什么我打2针、3针疫苗，从来没出去过我却染上病了？疫苗就是病毒，mRNA就是病毒。你不用被传染，你就是病毒。就在刚才我直播的时候，欧洲的某个领导人说他老婆染上了。他说：“Miles我打了三针，我太太从没出去过却染上了。”我说我告诉你，mRNA就是你身体的毒，它只是什么时候发作而已。
+
+你们没被打疫苗是多伟大！为什么七哥在2017年就说精子卵子值钱，现在涨了几万倍是吧？还想想你们还有这币那币、还有现在、还有盖特，毫不夸张的说，（这是）人类的奇迹！风水都在我们这一方啊！就像后面蝴蝶般的玫瑰花、七哥的领带、七哥站在这给你们直播几个小时（这件事），这都不是常人所能解释的。我们的生命无限精彩，**一定要记住，爱、诚实和灭共是我们在一起的根本基础，只有这三样东西会让我们走的更远，否则一切都会失去啊！**
+
+*发布：Mttfly*
+
+**
+****更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
