--- a/gnews/37.md
+++ b/gnews/37.md
@@ -1,21 +1,46 @@
 ---
-title: 为何有脱北者选择回朝鲜？
+title: 法官判決FDA在8个月内公布辉瑞疫苗数据
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836003/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1836322/)
 
-撰稿：东京樱花团/上善若水
-![](https://assets.gnews.org/wp-content/uploads/2022/01/3-11.jpg)（图片来源于本文链接）
-在刚刚过去的元旦，一名2020年11月穿越非军事区进入韩国的脱北者循相同路线重回朝。此事引起韩国社会的广泛讨论。此事件被韩媒称为“回力镖叛逃”。韩国媒体批评军方守卫松散，玩忽职守. 一般而言，通过非军事区（DMZ）叛逃的情况极为罕见。在这个长达248公里，宽约4公里的边境地带，除了设有铁丝网外，两侧都有重兵把守，更设置了地雷和坦克陷阱。每当有人设法穿越非军事区而且未被察觉，韩国军方便会受到公众的强烈质疑与批评。韩国军方为此事道歉，韩国联合参谋本部议长元仁哲表示：“我对于这起事件感到非常抱歉。我承诺尽一切努力确保类似事件不再发生。”韩总统文在寅已下令对军队的整体安全布局进行特别检查。
+作者：银河勇气星 骄子
 
-韩民众疑惑为何脱北者会选择回到一个生活极为艰难的国度，至少在外人的眼里是如此。据报道，该名返朝的脱北者只能做“门卫”，为了生计而挣扎。负责协助脱北者适应韩国社会的统一部则强调，除了金钱补助外，该名男子在寻找住宿和求职时都获得帮助，而享有医疗福利。尽管如此，在迄今逃往韩国的3万多名脱北者中，至少30人在过去10年间选择重返朝鲜。每个人回朝鲜的理由都不同。“有人觉得在这里保住工作很难；有人因为思念当地的亲人；还有人无法适应文化差异、难以适应韩国生活；有人不能通过文凭考试，迫不得已只能在餐厅打工；或是觉得受到歧视。”
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
 
-信息来源：
+据美国媒体1月6日报道，一位联邦法官拒绝了FDA此前关于辉瑞公司中共病毒疫苗数据的公布时间线。
 
-[为何有脱北者选择回朝鲜？](https://www.dw.com/zh/%E4%B8%BA%E4%BD%95%E6%9C%89%E8%84%B1%E5%8C%97%E8%80%85%E9%80%89%E6%8B%A9%E5%9B%9E%E6%9C%9D%E9%B2%9C/a-60359568)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Screen-Shot-2022-01-08-at-9.44.08-PM-1.png)
 
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+据悉，2021年9月，耶鲁大学、哈佛大学、加州大学洛杉矶分校和布朗大学的30多位教授和科学家对辉瑞公司提起了集体诉讼，当中，原告要求FDA及辉瑞公司公开所有关于中共病毒疫苗的研究数据。
+
+资料显示，FDA原计划每月公布500页辉瑞中共病毒疫苗的相关数据，预计总体数据将需要75年的时间才能被披露完毕。对此，该联邦法官要求FDA改为每月公布五万五千页数据，从而能够在8个月内将全部数据公布完毕。
+
+该法官强调，任何人都不应该被强迫接受不必要的医疗，况且中共病毒疫苗的强制接种已经给民众带来了巨大的健康损害问题，包括免疫力下降、强烈的副作用，甚至死亡等。法官也认为，联邦政府强制民众接种中共病毒疫苗，并忽视大众对信息透明的要求，这已经侵害了美国民众基本的人权。
+
+參考鏈結：
+
+1. [法官駁回FDA對公布輝瑞疫苗數據拖延75年的請求…](https://gettr.com/post/pmsb628311)
+2. [INSTEAD OF FDA’S REQUESTED 500 PAGES PER MONTH, COURT ORDERS FDA TO PRODUCE PFIZER COVID-19 DATA AT RATE OF 55,000 PAGES PER MONTH!](https://aaronsiri.substack.com/p/instead-of-fdas-requested-500-pages)
+3. [Wait what? FDA wants 55 years to process FOIA request over vaccine data](https://www.reuters.com/legal/government/wait-what-fda-wants-55-years-process-foia-request-over-vaccine-data-2021-11-18/)
+
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Screen-Shot-2022-01-08-at-9.10.27-PM.png)
+
+编辑：飞虹
+总编：Irene木木 
+校正/发稿：我不在这里
+
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
