--- a/gnews/40.md
+++ b/gnews/40.md
@@ -1,11 +1,40 @@
 ---
-title: 班农战斗室：推特在与美国交战
+title: 蓬佩奥再次呼吁抵制中共冬奥会并对其追责
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1835827/)
+`GTV新闻访谈` [轉載自GNews](https://gnews.org/zh-hans/1836319/)
 
-01/06/2022 乔治亚州众议员玛乔丽·泰勒·格林做客战斗室称推特实际上是在与美国整个国家交战。他们不希望任何人去推动真相，这跟他们喜欢的政治言论相冲突
+作者：日本方舟农场 Andy5
 
-By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+
+1月6日，美国前国务卿蓬佩奥在接受采访时再次呼吁美国抵制中共北京冬奥会。对此，蓬佩奥也详细解析了三点原因。
+
+首先，中共在新疆所犯下的每一件恶行都符合种族灭绝的定义，因此，中共北京冬奥会将被冠以“种族灭绝冬奥会”的名头。
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Screen-Shot-2022-01-08-at-8.36.59-PM-1.png)
+
+其次，中共政府会监控每一个参会运动员的一言一行，他们当中只要有人谈论天安门事件或者武汉病毒研究所，这些运动员大概率会被中共扣留。此外，中共还会利用这些运动员的言行为其宣传所谓的“中共国的伟大民主”。
+
+最后，中共武汉病毒研究所释放了新冠病毒，即中共病毒，而这一病毒目前造成了全球数百万人的死亡。与此同时，在中共国内，当习近平坐在恢弘的体育馆里大谈其成功控制疫情时，这背后是无数的中国老百姓被焊死的大门囚禁在家中。
+
+蓬佩奥最后强调，习近平根本不会在乎美国的外交抵制，因为世界媒体将在全球范围内推送这次冬奥会及其举办者。此时，美国应该做的就是在香港、新疆以及中共病毒的每一个问题上都对中共追责。
+
+參考鏈結：[20220106蓬佩奧國務卿接受Ingraham採訪](https://www.gettr.com/post/pmsvqq25ca)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Screen-Shot-2022-01-08-at-9.10.27-PM.png)
+
+编辑：飞虹
+总编：Irene木木 
+校正/发稿：我不在这里
+
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
 
  
 
