--- a/gnews/44.md
+++ b/gnews/44.md
@@ -1,24 +1,21 @@
 ---
-title: 莫德纳首席执行官：未来需要接种更多中共病毒疫苗加强针
+title: 哈萨克斯坦总统：我下令可以无预警开枪
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1835785/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836004/)
 
-#### 撰稿：彩虹
+撰稿：东京樱花团/上善若水
+![](https://assets.gnews.org/wp-content/uploads/2022/01/7-8.jpg)（图片来源于本文链接）
+鉴于抗议浪延续多日，哈萨克斯坦总统托卡耶夫明确表示，授权安全部队可以在无事先警告的情况下开枪。当局称，迄今有40多人丧生。在国内爆发严重骚乱后，哈萨克斯坦总统托卡耶夫（Kassym-Jomart Tokajew）下令向武装示威者开枪。在一次全国电视讲话中，他说：“我已命令警察和军队在无预警的情况下开火。”
 
-#### 校对：Chris
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片1-2-7.jpg)图片来源：路透社
-1月7日，《新闻极限》报道，周四，莫德纳（Moderna）公司的首席执行官（CEO）斯特凡·班塞尔（Stephane Bancel）在高盛集团公司（Goldman Sachs）组织的医疗会议上说，未来几个月，针对中共病毒（COVID-19）的疫苗加强针的功效可能会下降，人们需要在2022年秋季再打一次加强针。
+他称，在最近几天局势尤为严重的阿拉木图，2万示威者从事了攻击行为。他将示威者称为“恐怖分子”，受境外势力操控。数天来，哈萨克斯坦国内示威者同安全部队之间爆发冲突，其激烈程度前所未见。抗议活动最初针对不断上涨的天然气价格，很快扩展为反政府浪潮，并蔓延全国。周五早晨，该国电视台报称，迄今，有26名示威者被击毙，另有3000多人被捕。人们担心，平民死亡人数可能更高。官方称，至少有18名安全人员殉职。此前，托卡耶夫已宣布全国进入紧急状态，并吁请俄罗斯领导的军事联盟——集约组织（CSTO）派遣维和部队，提供帮助。这一维和部队首批官兵已于周四飞抵哈萨克斯坦。在电视讲话中，托卡耶夫对此致谢。他称：“我特别感谢俄罗斯总统普京。他对我的呼请做出了非常迅速、友好的回应。”
 
-班塞尔说，该公司正在研究一种针对中共病毒变体奥米炕（Omicron）的候选疫苗，但不太可能在未来两个月内上市。
+信息来源：
 
-他认为：“我仍然相信我们将在2022年秋季和未来需要（更多中共病毒）疫苗加强针”。
+[哈萨克斯坦总统：我下令可以无预警开枪](https://www.dw.com/zh/%E5%93%88%E8%90%A8%E5%85%8B%E6%96%AF%E5%9D%A6%E6%80%BB%E7%BB%9F%E6%88%91%E4%B8%8B%E4%BB%A4%E5%8F%AF%E4%BB%A5%E6%97%A0%E9%A2%84%E8%AD%A6%E5%BC%80%E6%9E%AA/a-60358301)
 
-文章指出，通过重复接种中共病毒疫苗而获益的莫德纳公司，其第三季度财报显示，2022年美国销售中共病毒疫苗加强针的市场销售额（预计）可能会达到20亿美元。
-
-**新闻来源**
-
-[Moderna CEO Bancel Says People May Need Another Booster in Fall of 2022](https://www.newsmax.com/newsfront/moderna-vaccine-covid/2022/01/07/id/1051419/)
-
+*校对：东京樱花团/知了知了
+发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
