--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,27 +1,54 @@
 ---
-title: 媚上作祟 西安作协主席批隔离哭求女子“矫情”被网轰
+title: 不要被愚弄：生效的新规则将转基因食品标为“生物工程”
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/1836628/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1836806/)
 
-撰稿/配图：东京樱花团/Ob
-![](https://assets.gnews.org/wp-content/uploads/2022/01/image-508.png)
-看中国2022年1月8日讯，近日，陕西省作家协会副主席、西安市作家协会主席吴克敬因在文章中批评一名因疫情在集中隔离期间“哭诉无卫生巾”的女子是“矫情”，引发网民指责。
+编译：Jenny Ball
 
-近日，陕西省西安市一名女子因疫情在酒店集中隔离期间，因没有卫生巾哭着向工作人员求助。网传视频显示，西安一女子在某酒店集中隔离，女子称没有早饭、来大姨妈也没有卫生巾，哭求工作人员，打过12345热线、隔离点的电话、疾控防疫办的、公办电话，要么打不通，要么没人接，报警也没有人过来接。“我就想问一下，是没有人管吗？是准备把我们饿死吗？”当工作人员说卫生巾无法解决时，女子说，“我就要血流成河吗？”
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Gmo-Food-Genetic-Modified-Corn-Crop-Science.jpg)图片来源：naturalnews.com
 
-据悉，1月4日，吴克敬发表一篇文章，在赞扬其他两位女性抗疫人员的同时，却批评“哭求卫生巾”的女子“矫情”。推特视频中显示，《西安作协主席吴克敬痛批“因无卫生巾哭诉”女子：矫情，小姐做派！》吴克敬，陕西扶风人，毕业于西北大学中文系，硕士学位。现任陕西省作家协会副主席、西安市作家协会主席，中国书画院副院长、陕西书画院院长。
+自然新闻 – 转基因食品——曾经被称为“转基因生物”或 GMO——现在将被称为别的东西，所以你要留意这个新术语，因为全球政府试图隐藏它们的类型。
 
-吴克敬在其文章中评论：视频中有位冲着防疫人员大喊大叫的女人，说她大姨妈来了，她没有卫生巾，别人也不关心她。对于她的抱怨，咱们平心而论，的确是个问题呢。女人家大姨妈来了，没有卫生巾是很难办，她可以苛责。不过，苛责的对象要找准，防疫工作人员那就是你自己了。你自己有没有卫生巾，什么时候用卫生巾，自己一点都不清楚吗？而在紧要的时刻，还要苛责别人不能上门给你送！这就你的不对了，你把自己情状，与在疫情中的姚美珍、寇雅玲比一下好吗？那你可是要惊醒的呢，疫情当前，什么矫情，什幺小姐作派，是没有用的，别人才不会惯着你，任由你大喊大叫！
+具有讽刺意味的是，将在元旦生效的美国“新食品披露规则”，现在把转基因食品贴上“生物工程”标签，因为重命名长期以来与负面结果相关的事物，只会被全球主义的深层政府称为“**披露**”。
 
-微博网友说，“正常需求变成矫情呵呵”、“拉屎需要纸不，你需要就是矫情了”、“嗯，你倒是没大姨妈”、“这个时候还一副高高在上的样子建议直接死”、“在文字里泡久了，脱离群众了，不仅矫情，而且酸臭！”、“没有共情的人怎么当领导的？”、“西安的官员，真的绝了”、“这俩天的西安，真是妖魔鬼怪各显神通”、“不说人话了简直”、“卑鄙是卑鄙者的通行证”、“人家是副厅级待遇，是有级别的，人家说话是有分量的”、“这些人嘴里全是主义，心里全是生意。爱国爱ZF替它们分忧，就是不爱平民，它们眼里都是巨婴”、“这种批评到底是人性的丧失还是道德的沦丧？”现在被网友挖出老底：1.小学毕业；2.一稿多投；3.涉嫌抄袭别人的文章。”
+据《大纪元》报道，食品制造商必须在 1 月 1 日之前遵守新规定，这些规定实际上是在川普政府下制定和发布的。但奥巴马任期最后一年期间，国会通过的一项法律，该法律制定了“一项国家标准，用于披露经过或可能经过生物工程处理的食品，这迫使川普采取行动。”
 
-圈养的文人当然要替主子吼几下，言外之意，疫情面前不要给领导添麻烦。不给领导添麻烦向来是政治正确的标准，一无能了就要大家顾大局讲政治。用糊弄、吓唬、挖苦掩盖自己治理能力的不足，明明是自己无能，却要把问题推给无辜受害者，这是典型的既“党”婊子又立牌坊的官方作为。
+曾在川普政府任职的农业部长桑尼·珀杜（Sonny Perdue）说，国家标准“避免了可能让消费者感到困惑的各州错综复杂的系统”。
 
-消息来源：[西安作协主席批隔离哭求女子“矫情”被网轰(图)](https://m.secretchina.com/news/gb/2022/01/08/994469.html)
+同样，“国家标准”现在意味着，想要继续使用更熟悉的“转基因”标签的个别州或地方，现在将被禁止这样做。虽然“生物工程”似乎是一个准确的术语，但毫无疑问，它会“迷失在洗牌中”，因为习惯于看到另一个术语的美国人，最终可能会被新术语混淆。
 
-*校对：东京樱花团/知了知了*
-*发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+幸运的是，有些团体不仅反对这一变化，而且还向法院提起诉讼以阻止它，包括食品安全中心，该中心表示，**标签要求只会让消费者感到困惑。**
+
+该中心执行董事安德鲁·金布雷尔（Andrew Kimbrell）在一份声明中说：“这些规定不是为了通知公众，而是旨在允许公司向客户隐瞒他们对基因工程成分的使用。” “这是一个监管骗局，我们正在寻求在联邦法院撤销。”
+
+此外，有机贸易协会、农业和贸易政策研究所，和非转基因项目，也都对新规定提出了反对意见。
+
+“总的来说，许多含有转基因成分的产品不会被贴上标签，这意味着没有生物工程 (BE) 披露，并不意味着产品是非转基因产品，”该项目在新规则实施后的一份声明中表示。
+
+然而，实际上新法规有支持者，包括“食品行业”组织，如食品营销协会和杂货制造商协会。
+
+该机构在 2018 年指出：“该规则提供了一种一致的方式来提高我们销售的食品的透明度，并允许我们全国的客户了解更多关于含有生物工程成分的杂货产品的信息。”
+
+但一些支持者也要求拜登政权推迟规则实施的最后期限，因为，现任政府干预的供应链危机仍在恶化。
+
+**转基因食品，不管叫什么名字，对消费者来说仍然是个问题**。
+
+例如，2019 年，一位前孟山都生物工程师出身的吹哨人承认，他帮助创造的转基因马铃薯，吸引了各种毒素，包括那些在改造前未在粮食作物中发现的毒素。
+
+凯厄斯·罗曼斯（Caius Rommens）博士在孟山都的疾病控制项目中，花了 6 年时间，并开发了数千种转基因马铃薯，发现其中大部分都发生了突变、不育、缺乏叶绿素或发育不良。这将如何影响消费者健康？
+
+**评论：没想到政府原来是为邪恶发通行证的。难怪人们发出“我们不再信任政府”的呼声！也更加明白爆料革命和新中国联邦的愿景！**
+
+**参考资料：**[naturalnews][Don’t be fooled: GMO foods will now be labeled “bioengineered” under new rule taking effect](https://www.naturalnews.com/2022-01-07-gmo-foods-will-now-be-bioengineered.html)
+
+* * *
+
+*审核：文乐*
+*校对 : 信心满满*
+*发布：信心的选择*
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-3.jpeg)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
