--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,30 +1,40 @@
 ---
-title: 中共即将血腥内斗之时，灭共战神郭文贵先生喊话当代“司马懿”中共大佬曾庆红
+title: 印度首都恐因奥米克戎来袭而封城
 ---
-`温哥华圆成农场🇨🇦` [轉載自GNews](https://gnews.org/zh-hans/1836613/)
+`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/1836805/)
 
-作者：卢卡斯
-![](https://assets.gnews.org/wp-content/uploads/2022/01/图片17.png)图片来源：GNEWS
-2022年1月5日文贵先生大直播中，文贵先生在回答加拿大圆成农场昔马千羽战友有关党内司马懿时说：中共党内最推崇智略绝伦的司马懿有三个人，第1个是曾庆红，第2个是王岐山，第3个是刘亚洲，然而这3人唯曾庆红堪称真正当代司马懿，另外二人不如司马懿远矣。曾庆红是今天红二代的领袖，平生常以司马懿自诩。曾家在中共党内根基极深，曾的父亲曾山1926年10月加入中共，位居要职，曾任中共内务部长，中共江西苏维埃国政府主席，是中共老革命家、开国功勋，历经中共党内无数政治斗争均毫发无损，曾的性格和政治斗争的智慧应该深受其父影响。
+本文作者：Rebecca (一切心皆不可得！)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image001-16.png)
+印度德里首都辖区最近两天的中共病毒（COVID-19）病例急剧增加，其中逾8成被验出感染了奥米克戎（Omicron）变异病毒株；若情况继续恶化，德里将会封城。
 
-8964以后，时任上海市委书记的江泽民被邓小平选中，接任被邓罢黜的中共总书记赵紫阳的职务，诚惶诚恐的江随身只带了曾一人入京就职。当时北京官场完全不把江放在眼里，江处处受制，后来曾用其超一流的政治智慧和手腕击破了陈希同的北京帮,并成功地离间了邓与军头杨家将（杨尚昆杨白冰兄弟）之间的关系，取得了邓的信任和支持。97年邓死后，江掌握了军队大权，江家皇朝正式开始，曾作为江的军师在江家皇朝的地位崇高，曾经过数十年的经营而形成了曾派。曾具有司马懿的很多特质，譬如说他极其低调，注重保养，不近女色，极具政治智慧和手腕。文贵先生在2022年1月7日的大直播中称，曾是南普陀计划的发起人和设计者，由此可见一斑。
+1月4日，德里卫生局长詹恩（Satyendar Jain）在记者会上说，德里过去两天新增的中共病毒的病例中，奥米克戎感染者占了84%。
 
-去年文贵先生在一次直播中提到，曾一直在关注并且研究文贵先生的爆料革命，说明曾一直在审时度势，在做出招的准备。如今中共国的内部局势已经发展到赤身肉搏的血腥残酷内斗阶段，一者，习皇帝不甘于做上海帮的傀儡，而想扫灭群雄，实现其家天下的宏大目标，再者，江曾不会甘心交出权力，必然会绝地反击。双方的血腥屠杀和清洗即将开始。在此杀戮即将开启，生灵涂炭的紧要关头，文贵先生在今年1月5日的大直播中直接对曾喊话，赞扬曾有极高的政治智慧，希望他以中华民族的最大利益为重，在中共灭亡后站出来主持临时政府，把权力和平过渡给新中国联邦，避免出现历史上改朝换代而导致无数中国老百姓失去生命财产的悲剧，避免出现五代十国的混乱时代，若此实为中华民族之大幸。
+根据德里卫生局数据，1月3日德里通报3194例中共病毒病例，阳性率4.59%；2日为2716例，阳性率为3.64%；这两天各有一名患者死亡。
 
-经过文贵先生5年来开智，和共产党制造释放CCP生化病毒武器，危害全人类的邪恶行径，如今国内外中国人和西方各国民众都已经认识到共产党的极度邪恶的本质，共产党乃是全人类的敌人和祸害。曾应该也清楚地明白这一点，从其制定的南普陀计划内容，我们也可以看出他已经料到共产党必定会快速灭亡。识时务者为俊杰，曾如果继续实行南普陀计划，共产党金蝉脱壳，换个马甲继续统治奴役中国老百姓，如今已经不可能了，因为有了文贵先生的爆料革命和新中国联邦。
+詹恩说，根据初步统计，德里4日的中共病毒通报病例已突破4000例，如果数字经确认，将是近8个月来新高。
 
-文贵先生信心满满地表示，无论谁在这场中共血腥内斗中胜出，中共必将灭亡，他创立的新中国联邦将都将成为是真正的赢家，最终成为合法代表中国的政治权力和实体，实现让中国人一人一票选出合法、独立、法治、信仰自由的政府，西方国家一定会跟爆料革命和新中国联邦合作彻底消灭邪恶的中国共产党。
+但他也补充道，虽然病例急剧增加，只有202人住院，病床位依然充足。
 
-文贵先生始终坚持以和平的方式，尽量少死人的方式，哪怕忍耐等待更多时日才消灭共产党，这是他的大智慧、大德大爱中国老百姓！就是希望中国以后不要再出现大规模的仇恨杀戮！在中华大地上，数千年来的治乱循环，几乎每一次改朝换代都导致无数老百姓被杀戮，譬如三国乱世，五胡乱华，明末农民起义和满清入关，太平天国运动，特别是100年来的共匪肆虐中国，残忍杀戮我炎黄子孙数亿人，中华大地到处充满怨气仇恨，冤魂野鬼！和平改朝换代，有利于千秋万代！
+去年12月，印度首都德里已因奥米克戎变体病毒肆虐而发布了「黄色警戒」。关闭学校、电影院，限制商业场所人数。依据德里灾害管理署的中共病毒分级反应行动计划，若阳性率连续两天超过5%，即可发布「红色警戒」。
 
-希望新中国联邦在消灭共匪，建立新的中国政府之后，请来当世得道高僧，同时在国内几个严重受到中共杀戮的城市（譬如武汉），连做七七四十九天大道场大法事，来超度那些不散的冤魂厉鬼，让他们得以投胎转世，如此则中华大地可以早日重归安宁祥和！
+红色警戒相当于封城，全面禁止非必要移动、非民生相关商业场所不得营业，学校、民间及政府部门停止办公。
 
-今天，遭受数千年来专制独裁的皇权统治和今天极度邪恶的中共魔鬼政权残暴统治的中国人正迎来他们最好的也是最后的机会，上天拣选了胸怀正义良知大爱的爆料革命和新中国联邦人，消灭中共，拯救中华同胞、拯救全人类，是上天给与我们的伟大使命。这是一个伟大的时代，这是巨人英雄的时代！追随文贵先生，加入爆料革命和新中国联邦，献奉出你最大的力量来加速中共的灭亡，这是我们战友们最大的荣耀。也许我们很渺小，也许我们默默无闻，但是我们可以自豪地说，我们活在一个伟大的时代，我们有幸与巨人英雄们同行！
+备注：
 
-编辑/发布：LILY
+- 疫苗：是指新冠疫苗
+- 中共病毒：是指新冠病毒Covid-19
+- 我们不反疫苗，只针对假疫苗
+- 我们不反科学，只针对反人类
 
-20220108
-![](https://assets.gnews.org/wp-content/uploads/2021/11/農場文宣-3.jpg)
+
+[新闻来源链接](https://news.seehua.com/?p=788411)
+
+
+
+审核校对：sherryok (水云间)
+
+上传排版：漂流瓶
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
