--- a/gnews/58.md
+++ b/gnews/58.md
@@ -1,70 +1,27 @@
 ---
-title: 关于辉瑞新冠病毒药物你应该知道的一些事情
+title: 共匪正向着跟死神见面的地点狂奔
 ---
-`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/1831969/)
+`银河勇气之星` [轉載自GNews](https://gnews.org/zh-hans/1817507/)
 
-作者：乔尔·S·赫施霍恩（Joel S.Hirschhorn）
-发布日期：2022年01月03日
-新闻来源：LifeSiteNews
-翻译：文虓Bobby
+By：银河勇气星｜天雷滚滚
+![](https://assets.gnews.org/wp-content/uploads/2022/01/截屏2022-01-03-19.32.36.png)图源：网路
+2021年12月29日，日本朝日TV报导CCP强改盘古大观龙头，不料，触犯了远在中共国的习太阳，习太阳龙颜大怒，责令外交部通过日本国政府，强令下架该节目。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/010703.jpg)
+中共国的皇帝就是威武，在国内欺压老百姓还觉得不够过瘾，竟然把黑手伸向了别国的民营媒体，不知道远在大洋彼岸的美帝会不会为自己老被中共指责干涉别国内政喊冤。那么，这个朝日TV播放了什么节目，让CCP如此大动干戈呢？
 
-(LifeSiteNews)—-支持药物行业的主流媒体对辉瑞新批准的抗病毒治疗药物异常积极。
+因为这个节目深入分析了为什么要把本来能带来好运的龙头给改造了的深层原因。他们认为，一是，盘古龙头建筑跟边上的龙形河流构成二龙相争；二是，盘古的居高临下的龙头建筑正对着中南坑，冒犯了他们的权威；三是龙是天子的象征，并且还说郭先生因揭露中共内幕而触了中共逆鳞，因此要改造龙头建筑。节目中还说到，在中华街上，到处都有龙的标志，盘古在建设前是经过中共国有关部门审批的，现在却把它强改了，明显是对老百姓的故意找茬，是非法治国家的独裁政权让人感到恐怖的地方，同时节目还谈到郭先生的红通背景。
 
-这种名为Paxlovid的药物已获得FDA的紧急使用授权，可用于12岁及以上COVID-19检测呈阳性且高风险的患者。
+就这么一个在媒体司空见惯的无害节目，共匪竟然动用国家的力量强令日本国把这个节目下架，不得不佩服共匪的豪横。把一个酒店的龙形建筑强行改造，不让国内的老百姓说也算了，还不许人家国家的老百姓说，说了还要求强行下架？那就是说，它们强行改造盘古龙头的背后原因被日本媒体说中了，才让共匪恼羞成怒，不顾国际形象，而对日本进行霸凌？这不是不打自招，承认郭先生揭露的内幕是事实吗？同时，从另一方面说明了共匪只许它放火，不许世界上所有人点灯的傲慢。回顾它这么多年来，对西方的民主人权说三道四，并且还恶意把班农打成极右分子，在CCAV上公然羞辱一个国家的国务卿为“三姓家奴”，把一个国家的总统说成是老年痴呆，人家连让你媒体道歉的一句话都没有，更不用说动用国家力量责令节目下架了。这种强烈的反差，绅士和流氓高下立见。据我们战友说，这个媒体还是亲共的媒体呢，并且里边还有对郭先生的一些抹黑之词，被共匪这么一耍横，还真为咱爆料革命新中国联邦做了一次免费的广告。加速师不是浪得虚名。
 
-现在是时候冷静而准确地谈论Paxlovid了。首先，每个人都应该认识到，对该产品的短期和长期安全性的测试很少，这正是COVID疫苗的情况。一种新药真正好的测试需要花费数月甚至数年的时间。
+看到这么一个故事：一名有钱的波斯人在花园散步时，遇到了自己的仆人。仆人惊恐地说自己刚刚碰到了死神，死神还威胁他。于是，仆人央求这个波斯人给他一匹快马，好让他在当晚逃往德黑兰以避开死神。波斯人答应了仆人，仆人飞身上马，疾驰而去。波斯人走回客厅，迎面正碰到死神，他就很生气地问死神：“你为什么要吓唬我的仆人？”死神回答：“我没有吓唬他，我看见他还在这里待着觉得奇怪，因为我本想今晚在德黑兰找他的。”这个故事里的仆人像不像共匪，穷途未路了，死神在召唤着它，可是，他就是心有不甘，依然想让自己千秋万代地活下去，继续残暴地奴役我14亿同胞甚至全世界人类，但是，无论怎样挣扎，也只骑上快马，向死神要跟它见面的地方狂奔。
 
-对于这种新药，你所得到的都是积极的消息——实际上是药物的组合。
+* * *
 
-以下是关于这个新产品的简要概述:
+作者：天雷滚滚
+发布：骄子
 
-FDA没有召开任何外部会议，没有对测试数据进行严肃的审查，也没有向公众征求意见的机会，就批准了该产品。几乎所有的监管工作都是私下完成的。为辉瑞很棒。对公众不利。
-
-值得注意的是，在试验中，只有21%的人有合并症，而实际上，94%的COVID死亡病例至少有一种合并症，潜在疾病的平均数量是4种。
-
-至于抗病毒科学，蛋白酶必须存在，在接管细胞之前通过完成循环，病毒才能成功地感染。Paxlovid或任何被归类为“蛋白酶抑制剂”的药物将抑制或降低蛋白酶，干扰病毒。Paxlovid阻止3CLPro蛋白酶将长蛋白切成碎片。病毒不能分离出需要切割和组装的部分。它不能自我复制。新冠病毒感染很快就会停止。
-
-与政府所说的相反，伊维菌素是世界范围内最成功和被证实的蛋白酶抑制剂。与Paxlovid一样，伊维菌素降低了蛋白酶，但是，在COVID治疗中，伊维菌素有一些Paxlovid没有的好处。伊维菌素的其他作用包括抗凝血作用和抗炎作用，均在COVID感染中观察到。伊维菌素已经被安全使用了几十年，有很多医学研究和临床结果表明它有抗病毒和抗炎的效果。
-
-Paxlovid需要与HIV/AIDS药物利托那韦(Ritonavir)联合使用，以防止Paxlovid的分解，从而抑制或减少酶，打断病毒的生命周期。利托那韦作为Paxlovid的助推器，使其在人体内保持活性。利托那韦也有自己的黑盒警告，副作用包括危及生命的肝脏、胰腺和心脏问题。公众真的想要服用艾滋病药物吗?
-
-一个疗程是在5天内服用20片Paxlovid和10片利托那韦。
-
-特别是对许多老年人来说，每天服用6颗药丸会带来挑战。
-
-根据辉瑞公司的新闻发布，对于确诊为COVID感染的患者，在症状出现3天内服用Paxlovid可减少89%的住院/死亡。在治疗组中，697人中有5人住院，没有死亡，而682人中有44人住院，随后有9人死亡。
-
-考虑一下在症状出现的三天内服用这种药物组合的说法。以下是普通人面临的关键问题:如何从流感或重感冒的类似症状中准确识别COVID症状;你怎么能得到一个快速测试; 你如何在一两天内联系上你的医生，并确定你是否真的患上了COVID(没有药物相互作用)，如果是的话，如何获得处方;怎样才能迅速配药呢?这些问题都不容易解决和克服。所有这些都使得这种新的组合药物对几乎所有人来说都是不切实际的。
-
-报告还显示，与安慰剂相比，第5天的病毒量下降了约10倍，表明对SARS-CoV-2的活性强劲，并(据称)是迄今为止报告的COVID-19口服抗病毒药物中病毒量下降最强的。
-
-如果用辉瑞的药物对伊维菌素进行测试，那该多有趣啊。
-
-例如，辉瑞的药物与乔治·法里德博士（Dr. George Fareed）和布莱恩·泰森博士（Dr. Brian Tyson）的方案相比如何?事实上，法里德和泰森治疗的病人要多得多(约7000人)，但住院治疗的人数却更少（4），死亡人数却相同（0）。所以，采用法里德和泰森的治疗方案对你来说要好得多。在全球数十亿次使用后，伊维菌素（IVM）的安全性比辉瑞的产品要好得多。
-
-有关IVM与Paxlovid比较的详细讨论，请参阅本文。特别是伊维菌素能够阻断3CL蛋白酶的科学证据。
-
-在安全性方面，在治疗期间和最后一次服用Paxlovid后34天内最常见的副作用是味觉障碍、腹泻和呕吐。但是哪个更严重的副作用会在几个月或几年后出现呢?
-
-Paxlovid不能与其他某些药物一起使用，要么因为它的作用可能导致患者血药浓度的有害增加，要么因为相反，一些药物可能会降低Paxlovid本身的活性。建议的使用条件中包括了不能与Paxlovid一起使用的药物清单。这张清单包括了数百万人使用的大量药物和补充剂，例如，立普妥（Lipitor）和圣约翰麦芽汁（St.John’s Wort）。Paxlovid也不能用于肝肾功能严重减退的患者。
-
-Paxlovid不推荐在怀孕期间和可能怀孕和未使用避孕措施的妇女使用。治疗期间应中断母乳喂养。这些建议是因为动物实验研究表明，大剂量的Paxlovid可能会影响胎儿的生长。
-
-至于可用性，辉瑞公司首席执行官波拉（Bourla）最近表示，公司将在2022年生产8000万疗程(药物)，今年上半年生产3000万疗程。这不足以为数百万出现症状和检测结果呈阳性的美国人服务。
-
-辉瑞公司的一位发言人告诉《华尔街日报》，也有人说，成千上万的药片将在2021年底前运抵美国，预计2022年初还会有数十万片。据报道，美国政府将向辉瑞公司支付53亿美元购买1000万疗程的药物，这些药物将于明年年底交付使用。医疗保险将涵盖每疗程530美元的费用吗?
-
-永远跟着钱走。一个月前，美国一家医疗保健投资银行（SVB Leerink）分析师杰弗里·波吉斯(Geoffrey Porges)预计，2022年该药的销售额将达到242亿美元。美国一家金融服务公司（Cantor Fitzgerald）分析师路易丝·陈（Louise Chen）本月早些时候写道，再加上该公司的新冠肺炎疫苗，辉瑞在大流行疫苗和药物销售高峰可能会达到500亿美元。辉瑞公司的一些高管成为亿万富翁也就不足为奇了。
-
-你是想做对自己有利的事，还是对辉瑞有利的事?
-
-[援引原文](https://www.lifesitenews.com/opinion/heres-what-you-should-know-about-pfizers-new-covid-drug/)
-
-审核校对：Barry Jack
-上传排版：糖果儿
-
+[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)，欢迎各位战友加入。欢迎订阅我们的我们的G-TV官方频道[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)、[银河农场–勇气星球](https://gtv.org/user/5f0d36870cac397fcf00154c)
+![](https://assets.gnews.org/wp-content/uploads/2021/12/345-3.jpg) 
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
