--- a/gnews/52.md
+++ b/gnews/52.md
@@ -1,49 +1,42 @@
 ---
-title: 中共教育体制下的学生教辅书
+title: 亚马逊泄露郭文贵IP地址，换取在中共国开展业务
 ---
-`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/1835130/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1832692/)
 
-作者：香草山写作组 – 静水流深
+**简评：**
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/logo-s2.png)
+2016年，亚马逊的云计算业务AWS成为全球最大的为中共国公司提供服务的供应商。亚马逊可以在中共国运作AWS，中共国公司负责监控和删除非法内容、收集和报告客户的基本信息，并与中共当局合作。2018年，中共国公安部要求亚马逊删除并封锁中共国异议人士郭文贵先生在美国托管的网站。亚马逊拒绝审查郭文贵，但是他们把郭文贵的IP地址交给了中共国公安部。
 
+郭文贵是流亡美国的亿万富翁，他在美国创办了一个批评中共政权的媒体网站。问题是，亚马逊愿意把身在美国的异议人士郭文贵的IP地址交给中共。亚马逊被允许继续在中共国扩大云服务，包括服务于字节跳动、海康威神等大型公司。亚马逊的云服务遍布全球，而且亚马逊已经表明他们愿意听命于中共。这对所有生活在中共国之外的人来说非常危险 。如果中共要求亚马逊提供更多的信息以保持其在中共国的业务，亚马逊该如何做呢？
 
-
-
-
-
-
-近期，中共国内某市的中小学向当地学生家长发出公告表示，如果学校教职人员存在通过向学生推荐商品或服务等获取商业利益的情况，家长可就此向相关部门举报，而可被举报的行为当中就包括了教师给学生推荐教辅材料。讽刺的是，如果这类教辅书籍涉及推崇或颂扬中共和习近平的相关内容，这种推荐行为却变成了值得被推广的范例。
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/510182882916962304846790-2.jpeg)图片来源：多维新闻
-
-有报道显示，墙内“华博教育学习平台”一直向一些学校推荐他们的红色主题阅读书籍，还要求班主任继续向学生家长推荐。值得注意的是，当学生家长购买这些书籍时，推荐的老师就能获得一定的经济回报——而这种行为还是经过校长允许的，这就代表着中共教育局也允许这种操作。对此，笔者不禁要问，难道这种行为就不属于“向学生推荐商品获取商业利益”的行为吗？这是否意味着只要带上了一顶“红色帽子”，就可以光明正大地游离于中共政策的管辖之外？
-
-事实上，中共制定的政策总是这么自相矛盾。在中共的独裁统治下，中共国内的每一个人都被强制要求提高所谓的“政治站位”，也就是说，一切与党有关的，每个人都必须得执行——这也解释了带着“党”的帽子的教辅书可以被推荐的原因。
-
-对于中共而言，说一套、做一套才是他们的常态，毕竟只要是符合中共利益的事，往往都会是一路绿灯，畅通无阻。
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/1-83.png)
-
-编辑：Irene木木
-
-校对/发稿：石头
-
-**更多资讯，更多关注**
-
-[**纽约香草山农场****GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场****GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-
-[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-
-![](https://assets.gnews.org/wp-content/uploads/2022/01/logo-s2-1.png)
+[GTV视频链接](https://gtv.org/video/id=61d6f911dffab035958b7d4b)
 
 
+
+**视频字幕：**
+
+亚马逊Kindle电子书在中共国销售很好的时候，并不是它所有的业务都这么好。它在中共国的电子商务业务无法与阿里巴巴等其他中共国电子商务巨头竞争。虽然亚马逊在其主要平台Amazon.com上招募了大量的中共国销售员，但是也导致了一些问题，包括某些产品被禁、不安全和贴错标签等。但是亚马逊在中共国遇到最大的危险，也是我们的危险，是亚马逊的云计算业务，亚马逊网络服务，或称作AWS。AWS现在是全球最大的为中共国公司提供服务的供应商，这是个巨大的问题。
+
+2016年，亚马逊的AWS开始在中共国出现问题，因为中共在2016年开始只允许本国公司在中国提供云服务，所以亚马逊和其他（在中共国）的外企一样，他们将云计算技术交给了中共国本土公司。这样以来，亚马逊仍然可以在中共国运作AWS。 中共国公司（不是亚马逊）负责监控和删除非法内容，收集和报告客户的基本信息，并于中共国当局合作，因此，中共国公司可以做共产党的脏活，亚马逊可以继续在中共国销售他们的云服务。好办法。
+
+这样一直到2018年，中共国公安部要求亚马逊审查一位中共国异见人士。公安部要求亚马逊删除其在美国为郭文贵托管的网站内容并封锁网站，否则要对亚马逊进行“报复”。郭文贵，又名Miles Guo，是一位逃往美国的亿万富豪，他创办了一个批评中共国政权的媒体网站。根据亚马逊的内部文件，亚马逊拒绝审查郭，但他们做了一些可以说是更糟糕的事情：亚马逊暴露了郭文贵的IP地址，将IP地址交给中共公安部。
+
+哇！无论你认为郭文贵是个什么样的人，并不重要，不管中共的目标是谁。问题是，亚马逊愿意把异见人士的IP地址送给中共，尤其郭文贵是在美国。根据亚马逊的内部文件，Jay Carney 建议中共当局不应该要求中共国以外的数据，但是尚不清楚，Carney是否向中共官员正式提出这一点。无论如何，亚马逊的行为似乎并没有让共产党特别不安。
+
+亚马逊被允许继续在中共国扩大他们的云服务，包括服务于大型的中共国公司，像字节跳动，其拥有抖音；还有海康威视，是制造监控设备的。我前面说过，亚马逊拥有全球最大的云计算服务，我们每天依赖亚马逊的服务上网，亚马逊已经表明他们愿意至少部分屈服于中国共产党的要求。这对我们这些中共国以外的人都是非常危险的。如果中共政权要求亚马逊提供更多信息以保持其在中共国的业务，会发生什么呢？
+
+*字幕:* *雨中漫步* |*听写：云岭* *| 翻译：Roberts* *|校对：Blue*｜*简评/文字整理/编辑：胖丁 | Page：我是球大哥*
+
+* * *
+
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+
+
+编辑：【英国伦敦喜庄园编辑部】
+
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
 
 
