--- a/gnews/53.md
+++ b/gnews/53.md
@@ -1,27 +1,35 @@
 ---
-title: 中共二十大第一版新常委名单出炉，将掀起新一轮腥风血雨
+title: 中共央行推出数字人民币钱包APP
 ---
-`YALUN 亚伦` [轉載自GNews](https://gnews.org/zh-hans/1834655/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1832627/)
 
-新西兰伊甸农场Gnews组 财经G乐部 – 亚伦
+**编译：Jenny Ball**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/tempsnip04.png)图片来源：reuters.com
+上海，1 月 4 日（路透社）——随着中共央行加紧开发自己的数字货币，中共国已经在手机应用商店发布了数字人民币钱包应用程序的试点版本。
 
-1月6日，郭文贵先生在Gettr发出中共二十大新常委名单后，一石激起千层浪，紧接着在随后7日的GTV、Gettr大直播中对这份名单进行了深入解读。
+周二，由中国人民银行（PBOC）数字货币研究所开发的“e-CNY（试点版）”应用程序，在上海中国安卓和苹果应用程序商店开放下载。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/ezgif.com-gif-maker-1.jpg)图片来源Yahoo台湾
+该应用程序中的一条通知称，它处于研发试点阶段，仅向选定用户通过提供电子人民币服务的支持机构（包括国内主要银行）。
+
+中国人民银行行长易纲在 11 月表示，中国将继续推进央行数字货币的发展，并改进其设计和使用，包括提高其与现有支付工具的互操作性。
+
+在年终会议上，中国人民银行表示，将继续推进数字人民币的研发。
+
+评论：文贵先生在元月5日的大直播中，一针见血揭露了中共数字货币的邪恶目的：文贵先生说，去中心化的数字货币必将是人类的未来，但是中共的数字货币，不仅不是去中心化，而且是由中共控制，是绝对的中心化！而且，中共想借2022年的冬奥会推数字人民币，并用数字人民币开疆阔天，打台湾，收复周边国家，如哈萨克斯坦、吉尔吉斯斯坦、菲律宾，压住日本、印度，让印度永远不能比中共富裕，搞一带一路，输出革命，输出产业，解决过度产能，然后控制能源，这一切的实现，都是基于中共极权的数字人民币！
+
+数字人民币更是中共想继续奴役中国人民58年的手段，因为中共的房地产已经让中国人民背负了58年未来的债务，子子孙孙都要为这个债务打工当奴隶。未来控制百姓用房地产生意过上富裕生活，中共就不再使用印刷人民币，用数字货币就意味着任何人只能有中共按一下手指头允许你有的数量，你帐面上无论有多少数额，用数字人民币控制后，你的金额就是一张画的大饼，连充饥的作用都没有了。
+
+**新闻来源**：[reuters.com][China central bank launches digital yuan wallet apps for Android, iOS](https://www.reuters.com/markets/currencies/china-cbank-launches-digital-yuan-wallet-apps-android-ios-2022-01-04/) **素材： 文戈**
+
+* * *
+
+***审核：文乐
+校对：信心满满
+发布：信心满满***
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-2.jpeg)
 
 
-
-从昨日放出的这份名单中我们看到，国家主席是习近平，国务院总理是胡春华，第一副总理是陈敏儿，纪委书记是陈全国，全国政协主席是李希，人大委员长是丁薛祥。
-
-陈全国没“下台”，是高升；胡春华和共青团强势回归，不见栗战书；丁薛祥从最高领导的接班人往边缘靠，李希的位置应该更好；陈全国成为“大杀器”。接下来的党内斗争只会更为暴力，这个名单并不意味着最后的结局。
-
-当江泽民家、曾庆红家、王岐山家、孟建柱家得知这个名单后谁也不会坐以待毙，就连习的心腹栗战书也不会甘心退役。江家的韩正，曾家的郭声琨、赵克志、赵乐际，王家的郭树清，外加陈全国的神兵天降定杀得血流成河。中共把国家变成家国，这种家天下为基调的绞杀不可停息，以共灭共渐入佳境。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/qqqqqq.jpg)图片来源Miles Guo Gettr截图
-
-
-习近平恰恰是灭共道路上的砥柱，歪着脆弱的脖子顽强坚持到二十大，以此颠覆当年的南普陀会议计划。习曾之间将有大决战，而不是习江。曾是南普陀会议的发起者，也是秘密会议的组织者。中国只有一个人物能达到司马懿的境界，就是曾。只有亲自和曾打过交道，才能体会曾的境界之高。郭先生也在之前的直播中透露，在中共倒台灭亡之后，曾会是一个很好的过渡人选（有需要的前提下）。近日王力宏、 吴亦凡等曾家控制的明星丑闻迭出，目的就是为了打击背后的曾庆红和曾庆淮。
-
-伴随着所未有的全球经济危机慢慢临近，当房地产和金融崩塌之时，也是全世界金融结构、政治、经济、资源大洗牌的时刻。所有危机之后，人类文明、财富会迎来大爆发。新中国联邦施巧力以敌制敌，定会像日月照耀八方。
 
  
 
