--- a/gnews/61.md
+++ b/gnews/61.md
@@ -1,31 +1,80 @@
 ---
-title: 共产党操控过的美国政治
+title: 在班农的 “作战室：大流行”隔离两年（1/2）
 ---
-`骄子` [轉載自GNews](https://gnews.org/zh-hans/1811904/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1806015/)
 
-文：银河勇气星｜骄子
-![](https://assets.gnews.org/wp-content/uploads/2022/01/AP_16327701075671.jpg)川普 / 图源：网路
-川普时代，中国人对川普的喜欢超过了美国本地人，不仅仅是在美华裔，就连在中共这样有防火墙的国家里，都没有阻挡川普接收到成倍成倍的喜欢。尤其在中文社交互联网上，川普更是妥妥的超级网红。美国现在有投票权的华裔不仅从数量上还是对自由民主的追求上，都迫切值得关注，不然秦刚这样的人不会专门来找他们。拥有投票权的华裔首先是在美国生活了有些年头的人了，再加上2017年文贵先生的爆料革命，几乎就是号召到了一大批有能力并且有信仰的美籍华裔，毕竟他们从中共国逃出来的目的很单纯，就是脱离共产党，觉得那不是正常人应该呆的地方。而川普为什么会受到如此众多的华裔喜欢，最主要一点就是因为他反共，以及对共产党的各种强硬态度，起码从白宫这里开始扭转世界对共产党的看法。只是这些华裔就算跑出来了还是要受到共产党的控制，秦刚试图让这些人的投票权重归共产党，换句话说，共产党就是在操控美国政治。毕竟美籍华裔，是入籍美国的，他们入籍的时候都宣誓过，要誓死效忠美国，维护美国的法治。共产党不但在中国大陆对本地老百姓进行控制，更加在全世界各地对华裔进行控制。私生子那些手段尚且是一用百用，控制正常美国公民的投票权更是无下限的。
+翻译：Jenny Ball
 
-爆料革命永远不会掺合他国政治，政治真得太肮脏了。然而搞政治的那些人，无论是总统还是议员，他们首先得是个人，优秀的政治家能够扭转危机，并不是在歌颂，只是因为他处的位置，能够让民众有信服的余地，毕竟在民主国家，这些人都是投票选上去的。一切具有政治因素的事件，总会让人恶心，这些政治家还以为自己的小伎俩不会被识破，都藏在西装和油头的粉饰之下，可这世上有几人是真瞎子？说白了，你先是个人，然后才是个从政的人，是人就有和所有人性一样的需求，家庭孩子钱享受，样样都没差，凭啥要从政治上来勾兑得到？美国人拥有自由民主，但是美国政治照样肮脏不堪，和共产党勾兑是底层美国议员一步一步往上走的阶梯，越和共产党走的近就越会爬得高。美国的某议员就是一个鲜活生动的例子，一开始非常强烈的反共，然而呢，到了关键时候就替共产党说话了。这些美国人和那些逃离中共国的华裔，从本质上来说，都是共产党一手操办的棋子，议员反共的因素被入选从政，反共是有追求的华裔唯一想要得到的，那好了，这事儿就完全被共产党捏在手里，能有什么真相呢？
+![](https://assets.gnews.org/wp-content/uploads/2021/12/image0-7-11.jpg)图片来源：6parkbbs.com
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/huangyi.jpg)
+在大流行最初的时候，史蒂夫·班农就预测了不确定性。
 
-政治为什么能够到了这样肮脏的地步。民主政治何以堕落到了如此地步？大家不都是人嘛，感觉这些肮脏政治家都开始脱离人类成为其他品类了。原因只有一个，处在其位，不司其职，不配其位。更深一点的原因就是共产党把这些职位的人全部都蓝金黄了，只能更脏，所有的政治都变得和共产主义的政策一样，撒谎，手底下交易，出卖大多数人的利益，编织一些无法实现的乌托邦梦，全球开始迈向共产党的超级奴隶集中营。政客们习惯了肮脏，政治里充满了黑手交易。最受苦的永远都是老百姓，可是老百姓当初给这些政客投票的时候，有哪些人是被迫的，有人去问吗？问了有结果吗？老百姓合理游行到底有没有用？
+那是 2020 年 3 月——这个国家已经进入 COVID-19 大流行一个月了，川普正在举棋不定。
 
-去年美国1月6号的国会山暴徒事件，是美国大选中永远无法绕过的。还有几天就距离国会山暴徒事件快一年了，一年了，美国程序依然在为这件事声讨。这事儿要是放在中共国，也许当天这些人就会被抓起来全关进去，不用审判，直接击毙。多米尼机选总统拜登，在民众的质疑声中做了总统。就依然做了总统，因为这是程序。国会山的暴徒发生了流血事件，是因为不满意这个机选结局。视频画面里我们看到的是那些长得像塔利班一样的恐怖分子，戴着面纱，还有的嘴里讲着中文，这些都被媒体的镜头记录下来了。而同时在发生暴动的时候，郭先生也在直播中讲述了这些，并提醒战友尽量不要去，怕被利用，且可能会发生有人流血的事件。再然后，就是仅仅根据这件事关于媒体上的报道，注意仅仅是来自媒体的报道，先把班农先生唤去法庭，试图把他打成极右翼分子，然后把当天合理和平支持川普的美籍华裔我们的战友Nicole，打造成郭文贵先生的随从者，就是恐怖分子，暴徒。请再次注意，这件事的记录者，一切法律和法官的判断来源，是媒体。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/11a1b15d14d14abaab83788fcc4106b0.jpeg)国会山事件 / 图源：网路
-文贵先生经常说，自己在法庭上被法官问到说某某媒体报道的关于你的信息，假新闻遍布本来已经不可思议了，现在居然在法庭上还能见到假新闻，还是被作为证据来展示。到底有没有人去核对这些媒体报道的真假？媒体上的一个镜头语言，比如当时暴动记录的那句中文，走了，快走了，那些蒙着面像塔利班一样的恐怖分子，被杨贝贝移花接木栽赃给了美籍华人。共产主义美化乌托邦，利用媒体的全方面操作来达到操控他国政治的目的，这是共产党一直在做的事情，分辨起来也很简单，是否刻意，是否移花接木？
+班农在 2020 年 3 月 16 日说：“我认为库莫（Cuomo）州长在担任高管方面做得非常出色，在领导力、检测方面，在他们所谓的医院精疲力竭之前已经行动，” 这使他与未能“大胆”行动的川普形成鲜明对比。他说，总统只是在“股市下跌”时才“提出建议”。
 
-国会山这件事属于美国内部政治，爆料革命不掺合美国政治。但是共产党想利用这件事对海外中国人带来巨大伤害，并且是他们主动挑起的，杨贝贝的采访就是一种磨刀宣战的架势了。美国能让共产党玩成这样，那是美国的耻辱；中国人能被栽赃陷害成这种程度，更是奇耻大辱；新冠疫苗都扎到人的胳膊上，那是全人类的耻辱。这种满腔耻辱，时时刻刻在等着一颗火苗引燃。记得七哥说过的话，引燃以后赶紧跑开，做那个最后收拾战场的人。
+班农在他的播客“作战室：大流行”中发表了上述言论。在过去的两年里，这个表面上以大流行病为主题开始的节目，已经成为鼓舞川普世界人士和传播阴谋论者的聚集地。在 1 月 6 日抗议之前，这里曾是指控选举各种欺诈的传播场所，并且，在接下来的几天和几个月里，他们一直在传播这样的信息。
+
+为了了解该节目如何在 “让美国再次伟大”（MAGA）生态系统中占据如此重要的位置，从 2020 年 1 月 25 日的第一集，到 2021 年 12 月 16 日，我将其 24 小时长的节目主线化。结果是，班农试图以他的视角塑造过去两年的美国历史。
+
+他的愿景不一定总是与川普一致，但它在很大程度上是班农试图“推动美国政治叙事”的有意识的产物， 正如他所说，美国政治的“驱动叙事”（Drive the narrative
+
+）——以使他帮助竞选成功的前总统有益的方式来塑造国家新闻环境。
+
+通过我自己对班农播客的两年经历，我能够观察到在 COVID-19 危机蔓延和演变中，他如何摸索到正确的信息，并且在 2020 年中期，一旦川普没能成功变得越来越明显，他开始了一场表明新生的拜登政府不合法化运动。
+
+多亏了这个经历，我现在还有了一首由郭文贵写的歌——流亡的中国亿万富郭文贵是班农的赞助人——在我的结尾无休止地重复：“打倒中国共产党，”歌词写到， “跟我来，我们放飞自由。”
+
+**Covid-19新冠肺炎**
+
+班农似乎也有兴趣推翻中国共产党——并称中共是这场大流行病的罪魁祸首。
+
+但直到Covid疫情几个月后，班农才坚定地指责中（共）国。值得称赞的是，在2020年1月播出的第一集中，讨论主要集中在疫情的严重程度，以及是否会导致中共失去政权。
+
+24 集之后，也就是 2020 年 2 月 25 日，指责中共仍然不是焦点。
+
+班农说：“社会分裂将会成为我们要面对的形势，至少在疫苗出现之前。”大流行早期阶段，班农处于令人惊讶的主流地位，如果曾经是：遵守公共卫生指南，等待情况发展， 听听专家的意见。
+
+他在 2020 年 4 月 3 日的播客中指出：“当您查看替代方案时，我们认为它们并不过于严厉。”他指的是社交距离措施。
+
+在此期间，美国的经济陷入困境，股票自由落体，发生了有记录以来最大规模的解雇。或者，正如班农所说：“传染病已经席卷全球资本市场。”与此同时，川普希望“在复活节前”“开放”国家。
+
+但是，直到2020年5月，第一波疫情过后情况有所稳定，班农的观点开始沿着党派路线变得更加坚定，突然间播客似乎不再直接引导川普，而是全力将病毒标记为中共制造。
+
+班农在 2020 年 5 月 15 日的一集节目中评论道：“共产党和中共解放军确切地知道我们在哪些方面毫无防备，” 这一集还采访了有关美国对中国制造的药品的依赖。
+
+那时，班农仍将反共信息与基本的公共卫生劝诫混在一起：“这些都是战争中的伤亡，”他在同一集中说。 “他们中的很多人都是最伟大的一代，我们应该尊重他们，确保这些事情得到妥善处理。”
+
+到 2020 年 5 月，通过 2020 年选举的棱镜，MAGA world 中越来越多地看到 COVID-19真相。班农的节目中有参议院候选人前众议员杰森·刘易斯（Jason Lewis）。
+
+刘易斯开始咆哮地质疑，是否制造了 COVID-19 死亡证明，班农打断道：“如果争论死亡人数，我敢保证你秋天在明尼苏达州竞选会输，这是我的建议。”
+
+在下一集中，即 6 月 9 日，班农毫无问题地争论乔治·弗洛伊德的死，但也将其归咎于中共。
+
+到了 8 月，他试图完善叙述，也许是感觉到了川普即将失败。
+
+“（选举）胜利之路就在北京，”班农哀伤地说。 “我们得谈谈战术， 我们可能会输。”
+
+但随后，他转向了另一件事：“川普总统昨天说，‘嘿，如果我输了，那是因为他们偷走了选举。’”
+
+“但是你猜怎么着，我们不应该担心他们偷了选举，我们应该往前走，”他补充道。
+
+请继续阅读文章的后半部分： 坚韧的兄弟
+
+请阅读下一篇：[在班农的 “作战室：大流行”隔离两年（2/2）](https://gnews.org/zh-hans/1806055/)
+
+**参考资料：**[talkingpointsmemo][Two Years Of Quarantine In Steve Bannon’s War Room: Pandemic](https://talkingpointsmemo.com/muckraker/steve-bannon-war-room-pandemic-two-years-chaos)
 
 * * *
 
-作者：骄子
-发布：骄子
+*审核：文乐*
+*校对 : 信心满满*
+*发布：信心的选择*
 
-[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)，欢迎加入银河系农场。欢迎各农场兄弟姐妹们坐客串门，欢迎订阅我们的G-TV官方频道[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)。
-![](https://assets.gnews.org/wp-content/uploads/2021/12/345-1.jpg) 
+![](https://assets.gnews.org/wp-content/uploads/2021/12/GNEWS_CH.-1.jpeg)
+
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
