--- a/gnews/63.md
+++ b/gnews/63.md
@@ -1,79 +1,38 @@
 ---
-title: 在班农的 “作战室：大流行”隔离两年（1/2）
+title: 拜登调动军队抗疫，战斗室嘉宾提议使用第二修正案
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1806015/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1788603/)
 
-翻译：Jenny Ball
+#### **【雅典娜快讯】，紧贴时代脉搏**
 
-![](https://assets.gnews.org/wp-content/uploads/2021/12/image0-7-11.jpg)图片来源：6parkbbs.com
-
-在大流行最初的时候，史蒂夫·班农就预测了不确定性。
-
-那是 2020 年 3 月——这个国家已经进入 COVID-19 大流行一个月了，川普正在举棋不定。
-
-班农在 2020 年 3 月 16 日说：“我认为库莫（Cuomo）州长在担任高管方面做得非常出色，在领导力、检测方面，在他们所谓的医院精疲力竭之前已经行动，” 这使他与未能“大胆”行动的川普形成鲜明对比。他说，总统只是在“股市下跌”时才“提出建议”。
-
-班农在他的播客“作战室：大流行”中发表了上述言论。在过去的两年里，这个表面上以大流行病为主题开始的节目，已经成为鼓舞川普世界人士和传播阴谋论者的聚集地。在 1 月 6 日抗议之前，这里曾是指控选举各种欺诈的传播场所，并且，在接下来的几天和几个月里，他们一直在传播这样的信息。
-
-为了了解该节目如何在 “让美国再次伟大”（MAGA）生态系统中占据如此重要的位置，从 2020 年 1 月 25 日的第一集，到 2021 年 12 月 16 日，我将其 24 小时长的节目主线化。结果是，班农试图以他的视角塑造过去两年的美国历史。
-
-他的愿景不一定总是与川普一致，但它在很大程度上是班农试图“推动美国政治叙事”的有意识的产物， 正如他所说，美国政治的“驱动叙事”（Drive the narrative
-
-）——以使他帮助竞选成功的前总统有益的方式来塑造国家新闻环境。
-
-通过我自己对班农播客的两年经历，我能够观察到在 COVID-19 危机蔓延和演变中，他如何摸索到正确的信息，并且在 2020 年中期，一旦川普没能成功变得越来越明显，他开始了一场表明新生的拜登政府不合法化运动。
-
-多亏了这个经历，我现在还有了一首由郭文贵写的歌——流亡的中国亿万富郭文贵是班农的赞助人——在我的结尾无休止地重复：“打倒中国共产党，”歌词写到， “跟我来，我们放飞自由。”
-
-**Covid-19新冠肺炎**
-
-班农似乎也有兴趣推翻中国共产党——并称中共是这场大流行病的罪魁祸首。
-
-但直到Covid疫情几个月后，班农才坚定地指责中（共）国。值得称赞的是，在2020年1月播出的第一集中，讨论主要集中在疫情的严重程度，以及是否会导致中共失去政权。
-
-24 集之后，也就是 2020 年 2 月 25 日，指责中共仍然不是焦点。
-
-班农说：“社会分裂将会成为我们要面对的形势，至少在疫苗出现之前。”大流行早期阶段，班农处于令人惊讶的主流地位，如果曾经是：遵守公共卫生指南，等待情况发展， 听听专家的意见。
-
-他在 2020 年 4 月 3 日的播客中指出：“当您查看替代方案时，我们认为它们并不过于严厉。”他指的是社交距离措施。
-
-在此期间，美国的经济陷入困境，股票自由落体，发生了有记录以来最大规模的解雇。或者，正如班农所说：“传染病已经席卷全球资本市场。”与此同时，川普希望“在复活节前”“开放”国家。
-
-但是，直到2020年5月，第一波疫情过后情况有所稳定，班农的观点开始沿着党派路线变得更加坚定，突然间播客似乎不再直接引导川普，而是全力将病毒标记为中共制造。
-
-班农在 2020 年 5 月 15 日的一集节目中评论道：“共产党和中共解放军确切地知道我们在哪些方面毫无防备，” 这一集还采访了有关美国对中国制造的药品的依赖。
-
-那时，班农仍将反共信息与基本的公共卫生劝诫混在一起：“这些都是战争中的伤亡，”他在同一集中说。 “他们中的很多人都是最伟大的一代，我们应该尊重他们，确保这些事情得到妥善处理。”
-
-到 2020 年 5 月，通过 2020 年选举的棱镜，MAGA world 中越来越多地看到 COVID-19真相。班农的节目中有参议院候选人前众议员杰森·刘易斯（Jason Lewis）。
-
-刘易斯开始咆哮地质疑，是否制造了 COVID-19 死亡证明，班农打断道：“如果争论死亡人数，我敢保证你秋天在明尼苏达州竞选会输，这是我的建议。”
-
-在下一集中，即 6 月 9 日，班农毫无问题地争论乔治·弗洛伊德的死，但也将其归咎于中共。
-
-到了 8 月，他试图完善叙述，也许是感觉到了川普即将失败。
-
-“（选举）胜利之路就在北京，”班农哀伤地说。 “我们得谈谈战术， 我们可能会输。”
-
-但随后，他转向了另一件事：“川普总统昨天说，‘嘿，如果我输了，那是因为他们偷走了选举。’”
-
-“但是你猜怎么着，我们不应该担心他们偷了选举，我们应该往前走，”他补充道。
-
-请继续阅读文章的后半部分： 坚韧的兄弟
-
-请阅读下一篇：[在班农的 “作战室：大流行”隔离两年（2/2）](https://gnews.org/zh-hans/1806055/)
-
-**参考资料：**[talkingpointsmemo][Two Years Of Quarantine In Steve Bannon’s War Room: Pandemic](https://talkingpointsmemo.com/muckraker/steve-bannon-war-room-pandemic-two-years-chaos)
-
-* * *
-
-*审核：文乐*
-*校对 : 信心满满*
-*发布：信心的选择*
-
-![](https://assets.gnews.org/wp-content/uploads/2021/12/GNEWS_CH.-1.jpeg)
+- ![](https://assets.gnews.org/wp-content/uploads/2021/12/54721-3.jpg)图片来源：**Daily Clout**
 
 
+#### 整理报道：Ronnie O’Sullivan
+编辑：文泓
+
+美国时间12月24日，作家和记者娜奥米·沃尔夫周四在《班农战斗室》节目中宣称，乔·拜登总统在命令军医处理激增的新冠病毒案件中，实施了一场政变。本周，拜登宣布，他的政府将通过安排约1,000名受过医学训练的军事人员来应对Omicron变种病毒的威胁。联邦紧急事务管理局（FEMA）也被安排为公民提供防护设备，扩大医院人员配备，及帮助疫苗接种。
+
+班农在节目中特地用15分钟，让沃尔夫解释为什么这些行动构成了“政变”。
+“我之所以如此恐惧，是因为它今天能从1,000[名军人]开始[部署]”，沃尔夫说:“你知道，明天它可能部署30,000军人，下周可能增加到50,000军人。（军人干预）界限正在被打破。”
+
+“快醒醒吧，所有人！”她感叹道：“在全国推动疫苗护照，（挨个）敲门，FEMA在敲你的门；在其他国家强制隔离政策、以及军方正被部署到美国境内的实情，这些事件混杂在一起，你发现情况有多糟糕？”
+沃尔夫敦促了对政变采取“和平”抵制，她也将把第二修正案推广为可考虑的补救措施。
+“与其他被（疫情）征服的国家相比，唯一优势就是我们拥有第二修正案，”她表示。
+沃尔夫还预测，作为政变的一部分拜登将取消2022年中期选举。
+
+“当47个州采取紧急措施，军方也被部署于美国境内时，国家宪法将只起着理论上的作用，”她说。|
+“就这样吧，圣诞快乐”，班农说：“（也许）我会在联邦紧急事务管理署的营地里看到你。”
+
+新闻链接：[‘I’ll see you in a FEMA camp’: Steve Bannon guest promotes ‘Second Amendment’ amid Biden’s latest ‘coup’ – Raw Story – Celebrating 17 Years of Independent Journalism](https://www.rawstory.com/naomi-wolf-coup/)
+
+发布：文泓
+更多资讯，请关注：**
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/Nz26pG64XF)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
