--- a/gnews/60.md
+++ b/gnews/60.md
@@ -1,84 +1,27 @@
 ---
-title: 在班农的 “作战室：大流行”隔离两年（2/2）
+title: 共匪正向着跟死神见面的地点狂奔
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1806055/)
+`银河勇气之星` [轉載自GNews](https://gnews.org/zh-hans/1817507/)
 
-编译：Jenny Ball
+By：银河勇气星｜天雷滚滚
+![](https://assets.gnews.org/wp-content/uploads/2022/01/截屏2022-01-03-19.32.36.png)图源：网路
+2021年12月29日，日本朝日TV报导CCP强改盘古大观龙头，不料，触犯了远在中共国的习太阳，习太阳龙颜大怒，责令外交部通过日本国政府，强令下架该节目。
 
-![](https://assets.gnews.org/wp-content/uploads/2021/12/image0-7-11.jpg)图片来源：6parkbbs.com
+中共国的皇帝就是威武，在国内欺压老百姓还觉得不够过瘾，竟然把黑手伸向了别国的民营媒体，不知道远在大洋彼岸的美帝会不会为自己老被中共指责干涉别国内政喊冤。那么，这个朝日TV播放了什么节目，让CCP如此大动干戈呢？
 
-**坚韧的人们**
+因为这个节目深入分析了为什么要把本来能带来好运的龙头给改造了的深层原因。他们认为，一是，盘古龙头建筑跟边上的龙形河流构成二龙相争；二是，盘古的居高临下的龙头建筑正对着中南坑，冒犯了他们的权威；三是龙是天子的象征，并且还说郭先生因揭露中共内幕而触了中共逆鳞，因此要改造龙头建筑。节目中还说到，在中华街上，到处都有龙的标志，盘古在建设前是经过中共国有关部门审批的，现在却把它强改了，明显是对老百姓的故意找茬，是非法治国家的独裁政权让人感到恐怖的地方，同时节目还谈到郭先生的红通背景。
 
-在过去两年的剧集中，出现了一种奇怪的动态，事件越激烈，班农的举止就越平静。
+就这么一个在媒体司空见惯的无害节目，共匪竟然动用国家的力量强令日本国把这个节目下架，不得不佩服共匪的豪横。把一个酒店的龙形建筑强行改造，不让国内的老百姓说也算了，还不许人家国家的老百姓说，说了还要求强行下架？那就是说，它们强行改造盘古龙头的背后原因被日本媒体说中了，才让共匪恼羞成怒，不顾国际形象，而对日本进行霸凌？这不是不打自招，承认郭先生揭露的内幕是事实吗？同时，从另一方面说明了共匪只许它放火，不许世界上所有人点灯的傲慢。回顾它这么多年来，对西方的民主人权说三道四，并且还恶意把班农打成极右分子，在CCAV上公然羞辱一个国家的国务卿为“三姓家奴”，把一个国家的总统说成是老年痴呆，人家连让你媒体道歉的一句话都没有，更不用说动用国家力量责令节目下架了。这种强烈的反差，绅士和流氓高下立见。据我们战友说，这个媒体还是亲共的媒体呢，并且里边还有对郭先生的一些抹黑之词，被共匪这么一耍横，还真为咱爆料革命新中国联邦做了一次免费的广告。加速师不是浪得虚名。
 
-随着对 COVID-19 的震惊消退（尽管死亡人数继续攀升）以及 2020 年大选在 2020 年夏末和秋季临近，班农更加专注于鼓励川普的支持者，并引导他们相信拜登获胜将是非法的 。
-
-“他获胜的唯一途径就是靠非法，”班农在 2020年9月18日的一集中直截了当地说 “这是一个非法政权——我们永远、永远、永远、永远不会屈服于它。”
-
-当然，到那时，拜登“政权”还没有合法化——选举还没有发生。但信息很明确：11月 3日，班农需要“坚韧的人们在房间里观看计数”，如果这不起作用，关于选举人的法律斗争将使投票“踢到众议院，1 月 6 日就座的新国会。” 班农的听众可以提前几个月预览川普将在动乱前推进的计划。
-
-在这一切中，班农的恩人郭文贵定期出现。在 2020 年 10 月的一集中，郭文贵先生指出，中共专门向川普投毒 COVID-19，使他在大选前一个月被感染。
-
-班农说，郭“几乎就像一位旧约里的先知来到这个国家，警告美国中共的邪恶及其对美国的颠覆。”
-
-**将婴儿窒息在襁褓里**
-
-11 月的选举为 War Room 播客提供了很好的素材。
-
-班农在 11 月 4 日宣称：“这不是小差距，不接近——这是一次井喷。你想要偷窃选举，——也做得令人相信。”
-
-当然，这都不是真的，但内容很棒。听到班农谈论选举被盗、和即将到来的宪法危机——即使是一年后——仍让你热血沸腾。
-
-那股能量通向一个地方。
-
-班农在 12 月 21 日的一集中说：“我们正朝着 6 日在华盛顿特区举行的会议冲刺。” “这关乎选举的合法性，这关乎合法性——我们正朝着宪法危机迈进，这将比我们国家历史上的任何其他宪法危机都更严重。”
-
-当那一天到来时，它类似于 2020 年 3 月：努力选择如何叙述。
-
-“你必须非常小心，别落入主流媒体的这些陷阱，”班农在 1 月 6 日的节目中说。
-
-他将暴力归咎于彭斯和川普顽固坚定支持者直接的“情绪反应”。
-
-“你不能闯入——他们要做的是离开这儿，”班农打断他自己说。
-
-“我们告诉过你们，这将是美国历史上最重要的日子之一，迈克·彭斯投下了一颗炸弹，”他说。 “这是你不做为的一种情绪反应。”
-
-**寻找出路**
-
-在 2021 年的头几个月，作战室仍然有些安静，旋转轮显然在等待。
-
-整个春天，各种反疫苗者开始出现在节目中，其中一个是声称这些疫苗对“先天免疫系统”构成了危险，相对于更可靠的预防措施，像多晒“太阳”，并从饮食中去除植物油。
-
-但是五个月过去了，随着记忆的消退，语气开始恢复到以前的攻击性。
-
-“现代的列克星敦和康科德，将是亚利桑那州和乔治亚州，”班农在 5 月 18 日的一集中说，并宣布前参议员凯利·洛夫勒 (Kelly Loefller) 和大卫·珀杜 (David Perdue) ，实际上在 2020 年 11 月已经获胜。
-
-动乱核心小组成员将出现在节目中 ，在 7 月 29 日与众议员玛乔丽·泰勒·格林（ Marjorie Taylor Greene）和众议员马特·盖茨（ Matt Gaetz）的一集中，盖茨认为，“如果我是密歇根州的当地检察官，我会根据 RICO法案” 起诉FBI在计划中的州长格雷琴·惠特默（Gretchen Whitmer ) 绑架案中，过度使用线人。
-
-可以说几乎是陈词滥调，但这不是一个真相很重要的地方，进入“作战室”就是“构建和推动叙事”，这是一个无尽旋转的世界，主线 MAGA 就像未切割的可卡因：令人振奋到精疲力竭的地步。
-
-班农说：“我们要把这个非法政权粉碎在襁褓里。”
-
-谁知道这是否属实——播客“构建和推动”的“叙事”，是否真的让拜登“政权”窒息。
-
-相反，留给你的是他和他周围的人想要创造的形象，正如我在 12 月 16 日听的最新一集中所描述的那样：“混乱”。 在这种情况下，这是 Omicron 带来的混乱，以班农的观点，这是联邦反应的拙劣。
-
-但这里，真正的混乱更多在于不断的旋转和叙事推进对听众的影响：对任何现实都没有固定的共识，正如班农曾经说过的那句名言，一切都被垃圾洪水淹没了 ，我们认为是现实的任何事物，都是瞬息万变，这是一些人隐蔽的利益寻求优势的反映。
-
-**评论：时间是最好的试金石，两年来班农先生的“大流行病作战室”，用真相揭示着美国所经历的宪政危机，用真相告诉美国人民病毒和病毒“疫苗”的真相，用事实在揭示中共和黑暗势力的阴谋。用事实在唤醒无数人们行动，用行动捍卫宪法赋予我们的权利和自由。**
-
-请阅读上一篇：[在班农的 “作战室：大流行”隔离两年（1/2）](https://gnews.org/zh-hans/1806015/)
-
-**参考资料：**[talkingpointsmemo][Two Years Of Quarantine In Steve Bannon’s War Room: Pandemic](https://talkingpointsmemo.com/muckraker/steve-bannon-war-room-pandemic-two-years-chaos)
+看到这么一个故事：一名有钱的波斯人在花园散步时，遇到了自己的仆人。仆人惊恐地说自己刚刚碰到了死神，死神还威胁他。于是，仆人央求这个波斯人给他一匹快马，好让他在当晚逃往德黑兰以避开死神。波斯人答应了仆人，仆人飞身上马，疾驰而去。波斯人走回客厅，迎面正碰到死神，他就很生气地问死神：“你为什么要吓唬我的仆人？”死神回答：“我没有吓唬他，我看见他还在这里待着觉得奇怪，因为我本想今晚在德黑兰找他的。”这个故事里的仆人像不像共匪，穷途未路了，死神在召唤着它，可是，他就是心有不甘，依然想让自己千秋万代地活下去，继续残暴地奴役我14亿同胞甚至全世界人类，但是，无论怎样挣扎，也只骑上快马，向死神要跟它见面的地方狂奔。
 
 * * *
 
-*审核：文乐*
-*校对 : 信心满满*
-*发布：信心的选择*
+作者：天雷滚滚
+发布：骄子
 
-![](https://assets.gnews.org/wp-content/uploads/2021/12/GNEWS_CH.-1.jpeg)
-
+[日本银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)，欢迎各位战友加入。欢迎订阅我们的我们的G-TV官方频道[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)、[银河农场–勇气星球](https://gtv.org/user/5f0d36870cac397fcf00154c)
+![](https://assets.gnews.org/wp-content/uploads/2021/12/345-3.jpg) 
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
