--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,33 +1,35 @@
 ---
-title: 秘翻在线: 数字人民币选择京东，放弃阿里
+title: 中共科学家对从孟山都偷窃的行为认罪
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/1838244/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1838293/)
 
-撰稿：西枫westca
+![The U.S. Department of Justice is seen in Washington, on June 11, 2021. (Kevin Dietsch/Getty Images)](https://img.theepochtimes.com/assets/uploads/2021/07/14/DOJ-1-700x420.jpg)美国司法部（资料图）
+来自《大纪元时报》2022年01月07日的报道，一名中共国公民于1月6日承认自己密谋从事经济间谍罪，此前他试图从他的美国雇主那里窃取一个商业秘密，以推动自己在一个中共国营研究机构的事业。
+据美国司法部(DOJ)称，44岁的向海涛是曾居住在密苏里州的一名美国合法永久居民。在2008年至2017年期间，他曾为总部位于圣路易斯的农药和农业生物技术公司孟山都(Monsanto)及其子公司气候公司(Climate Corporation)工作。美国司法部官员表示，他试图窃取一种算法，该算法是孟山都公司开发的一个在线农业软件平台的一个关键组件。该平台允许农民收集、存储和可视化关键的农田数据，并提高和改善农业生产力。
+据司法部称，这种名为“营养素优化器”的算法是向海涛担任成像科学家在孟山都任职期间所从事的研究，它被孟山都公司和气候公司认为是一个有价值的商业机密和他们的知识产权。
+根据美国司法部的一份声明，密苏里州东区的美国联邦检察官赛勒·弗莱明(Sayler Fleming)说：“向某利用他在一家大型国际公司的内部人员身份，窃取宝贵的商业机密，供他在中国本土使用。” 弗莱明补充说：“这些罪行对美国经济构成威胁，并危及我们国家在创新方面的领导地位和国家安全。”
+根据一份法庭文件，从2015年6月左右开始，向海涛开始与中共的人接触，讨论在中共政府管理的中国科学院(CAS)土壤科学研究所(ISS)工作的可能性。他还询问了关于在被称为“千人计划”的中共国家级人才引进计划中入职的情况。该计划只是中共政权提供的许多类似的人才引进计划之一，目的是吸引海外华人和外国专家到中共的科技领域工作。通过这些计划，中共政府希望将中共国迅速变成一个工业和创新强国，最终超过西方国家。
+2020年7月，联邦调查局局长克里斯托弗·雷(Christopher Wray)曾在总部位于华盛顿的智囊团哈德逊研究所就这些中共国人才计划提出过警告。雷说：“通过其人才引进计划，如所谓的千人计划，中共政府试图诱导科学家偷偷地将我们的知识和创新带回中共国——即使这意味着窃取专利信息或违反我们的出口管制和利益冲突规定”。
+美国检察官说，2016年8月，向海涛被聘为中科院土壤科学研究所“百人计划”的一员。根据法庭文件，不到一年后，即2017年5月，向海涛通知他的雇主，他打算离职。一个月后，在离职后，向海涛购买了一张单程机票，试图飞往中共国。在他登上飞机之前，他被联邦官员拦下并搜查，他们发现他的电子设备里有营养素优化器的副本。根据美国司法部的说法，向海涛被允许继续飞往中共国，但在返回美国时被逮捕。
+根据该声明，联邦调查局反间谍部门的助理主任小艾伦·科勒（Alan E. Kohler Jr.）说：“当像中共政府这样的对手窃取技术以发展其经济时，美国工人就会遭受痛苦。”美国司法部宣布，向海涛将于4月7日被宣判，届时他将面临最高15年的监禁和可能500万美元的罚款。
+简评：通过跟中共的合作得来的钱迟早都是要还回去的，甚至还会赔上个人的人身自由。中共体制下，没有创新的土壤，从海外偷窃技术是必然的结果。可惜的是很多高层次人才在海外有体面的工作，收入和生活，却并没意识到这些都是在文明的社会制度下才可能拥有的，反而选择助纣为虐，窃取这些先进技术为邪恶的中共所用，结果几乎无一例外地都在案发那一刻，成为了中共的弃子。孟晚舟被中共倾举国之力送回国，是因为她的利用价值威胁到了中共政权的安全，试问那些参与千人计划的人员，你们是否想过，中共政权是否也会倾举国之力维护你们的安全？如果答案是否定的，请悬崖勒马，不要继续赔中共作恶。
 
-校对：Ermat
-![](https://assets.gnews.org/wp-content/uploads/2022/01/unnamed.png)图片来源：网络照片
-据多家中共国网上媒体突然在1月8日报道，数字人民币选择京东作为首批试点科技公司。而没有选择实力更强的拥有支付宝的阿里巴巴。
+新闻链接:[https://www.theepochtimes.com/chinese-scientist-pleads-guilty-to-stealing-from-us-agricultural-biotech-firm\_4198866.html](https://www.theepochtimes.com/chinese-scientist-pleads-guilty-to-stealing-from-us-agricultural-biotech-firm_4198866.html)
 
-事实上，央行已在2021年12月6日宣布了第二轮的数字人民币的试点并决定让京东参与线上数字人民币的测试。让数字人民币在京东商城上购物，成为首个支持线上交易的电商平台。阿里巴巴支付宝的全球用户数超过10亿人，是重要的支付手段之一。数字人民币的推广竟然选择了京东而不是阿里做为首批试点公司，缘由何在？从表面现象看：
+翻译/简评：kkoto(芬兰大灰狼)
 
-其一，两家企业 的定位不同。 京东偏向实业，有大量的物流和仓储建设。从2020年营收看京东虽有7458亿，但利润仅为为423.05亿元。 阿里则是以大卖场形式出现，更偏向于虚拟经济，是网络上的流量贩卖商。2020年的营收为6442亿，但利润则高达1492.63亿元。
+PR:Harvey（叶知秋）
 
-其二，京东资产是纯正的民营企业，而阿里的股份有四分之一以上为海外资本。
+* * *
 
-其三，京东在各类灾情爆发时，积极筹款募捐，对社会有积极贡献。
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
 
-其四，阿里支付宝的背后的蚂蚁集团仍未完成整改，支付宝本身只是阿里互联网金融平台下的一个软件，并没有储存资金的功能，且近日不断出现的负面消息，也使得阿里败下阵来。
 
-其五，数字人民币是央行推出的，具有法定效应。不需要借助支付宝的用户数量。 随着数字人民币的推广，包括支付宝、微信等支付手段也必须选择支持。
+编辑：【英国伦敦喜庄园编辑部】
 
-在中共国，企业家要爱国、听党话、跟党走、回报社会才是根本。如何选择是党的决定，和企业本身属性本无太大关系。 他们只是一茬茬待割的韭菜。
-
-**新闻来源：**
-
-[网易新闻 (163.com)](https://c.m.163.com/news/a/GT2KKPAM0511SAO7.html?spss=newsapp),
-
-[央行正式做出决定！京东“喜从天降”，腾讯、阿里、拼多多很无奈|移动支付|支付宝\_网易订阅 (163.com)](https://www.163.com/dy/article/FTVKHN6C0531MPQL.html)
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
  
 
