--- a/gnews/33.md
+++ b/gnews/33.md
@@ -1,9 +1,39 @@
 ---
-title: 1/07/2022 文贵直播： 新中国联邦传递的真相和情报远超各国情报系统和主流媒体，这都离不开国内英雄战友的付出
+title: 德桑蒂斯（DeSantis）：我将投资微芯片和半导体制造，因此中共“无法控制我们的供应链”
 ---
-`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1837119/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1837696/)
 
-秘密翻译组-北美组
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Untitled-design-11-copy-7.jpg)图片来源：www.dailywire.com
+自《每日电讯报》2022年1月7日报道，“做为佛罗里达人和美国人，我们必须挺身而出，”德桑蒂斯在一个新闻发布会上说。“我们不能被俘虏。我们经济的关键部门不应该受制于其中一些外国，尤其是像中国共产党这样的机构。然后，即使你有像台湾这样的盟友，如果那里发生中断，这会产生怎样的影响，可能会比我们在过去一年半中看到的更多。因此，我们在自己的国家，尤其是在我们自己的佛罗里达州拥有越多的这种能力，人们就会拥有越多的机会，我们的经济供应链和我们的国家安全就会更有保障。”
+
+12月20日，德桑蒂斯宣布了他对抗共产主义中国的计划，并在一份新闻稿中表示，他将“对佛罗里达退休系统的所有投资进行调查，以确定该州在中共国的公司拥有多少资产”。
+
+“如果你看看这些大公司在面对中共国的反对时的表现，他们会审查中共让他们审查的内容，我们看到的是卑躬屈膝的道歉，”德桑蒂斯进一步强调。“回到上一代人，美国精英的想法是，‘我们允许中国加入世贸组织并给予他们最惠国待遇，那将使中国更像我们(拥有民主与自由)。’这个实验失败了，它危及到我们国家的国家安全和经济安全。”
+
+“我希望小型企业管理局（SBA）调查目前正在进行的投资，”他继续说道。 “当立法机关回来时，他们可以做出法律上的改变，说中国共产党不是我们想要纠缠的工具。我认为这将是非常非常谨慎的事情。 我还认为，我们国家作为一个整体，但肯定是佛罗里达州希望看到更多的生产和制造业得到重新支持，我们将是一个很好的地方。”
+
+新闻稿指出，“今天采取的行动将进一步加强佛罗里达州的财政基础，并向那些支持种族灭绝、专制、帝国主义政权的美国企业发出信号，他们不会用佛罗里达人的钱这样做。”
+
+“长期以来，中国共产党政权一直试图渗透我们的金融和教育机构，”副州长珍妮特·努涅斯 (Jeanette Nuñez) 说。“我赞赏德桑蒂斯州长的努力，这些努力将遏制中共国对我们国家安全至关重要的行业的投资，并保护佛罗里达人免受中国共产党带来的危险。”
+
+首席财务官吉米·帕特罗尼斯(Jimmy Patronis)表示：“我很欣赏德桑蒂斯州长在小型企业管理局及其基金经理如何决定投资方面坚持我们在谈判桌上的席位。”“一个可悲的现实是，在让中共国承担责任方面，太多的联邦领导人长期以来一直没有采取行动。当美国人得到我们的廉价商品时，中共政府在知识产权或贸易方面没有遵守规则。与此同时，他们一直忙于在好莱坞和华盛顿购买影响力。不幸的是，在新冠病毒和供应链问题之间，我们看到了我们的国家对中共国的依赖程度。”
+
+简评：州长德桑蒂斯（Ron DeSantis) 宣布为佛罗里达州的半导体生产投资近1000万美元，以摆脱美国对中共国和其他国家的重要供应、零件和材料的依赖。对中共国领导人习近平来说，大数据除了是中共国发展经济的重要因素之外，也是他维持政治控制的关键。中共将人工智能用于社会和政治工程，奖励服从和惩罚异议，妄想永远统治奴役中国人民，并将其社会信用体系输出到其他威权国家。
+
+新闻链接：
+
+[https://www.dailywire.com/news/desantis-ill-invest-in-microchip-semiconductor-manufacturing-so-chinese-cannot-hold-our-supply-chain-hostage?%3Futm\_source=twitter&utm\_medium=social&utm\_campaign=dwtwitter](https://www.dailywire.com/news/desantis-ill-invest-in-microchip-semiconductor-manufacturing-so-chinese-cannot-hold-our-supply-chain-hostage?%3Futm_source=twitter&amp;utm_medium=social&amp;utm_campaign=dwtwitter)
+
+* * *
+
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+
+
+编辑：【英国伦敦喜庄园编辑部】
+
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
  
 
