--- a/gnews/34.md
+++ b/gnews/34.md
@@ -1,31 +1,27 @@
 ---
-title: 哈萨克斯坦前安全负责人被捕，和中美俄在哈的博弈
+title: 2021-12-23 Stew Peters Show 在成年人接种疫苗后的18周以内，他们的0-14周岁的孩子的死亡风险也增加了
 ---
-`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/1837049/)
+`加拿大温哥华扬帆农场视频组` [轉載自GNews](https://gnews.org/zh-hans/1837688/)
 
-撰稿：Skagen
-![](https://assets.gnews.org/wp-content/uploads/2022/01/t1.jpg)
-图：*卡里姆·马西莫夫于 2019 年 4 月 8 日在中南海会见中国国家副主席王岐山*
+Karen Kingston是一位生物技术分析师，她今天又一次来到我们节目。她非常勇敢，一直参与我们的节目，堪称是一位英雄。她持续给我们带来关于相关专利以及文件的分析内容。现在她认为有证据表明，接种过疫苗的家长会增加他们未接种疫苗的孩子的死亡风险。她说还有证据表明，现在广泛使用的COVID测试的假阳性概率高得离谱。她今天来到节目与我们来探讨这两个话题。第一个话题是，关于增加儿童的死亡风险。你认为有确凿的、可以验证的证据表明，接种疫苗的家长可能会导致他们的孩子死亡？
 
-路透社2022年1月8日电–哈萨克斯坦国家安全机构周六表示，前情报部门负责人卡里姆-马西莫夫(Karim Masimov)因涉嫌叛国罪被逮捕，但没有关于叛国罪指控的细节。安全局表示，其他官员也被拘留了，但没有说出他们的名字。马西莫夫的被捕表明正在对那些被认为负有责任的人采取行动。
+是这样的，主持人。这里有一份11月23日，也就是几天前的一份新的研究报告，这是以色列和纽约的几名分析师合作完成的，标题是《COVID疫苗与各年龄段死亡率的关系》。我仔细地读过了整篇文章。里面分析了VAERS（美国疫苗不良反应数据库）和欧洲数据库的病例数据。他们对比了疫苗接种率和死亡率的曲线。我今天展示给观众的，是报告中的统计数据，我把它做成了一个表格。在讨论S-蛋白脱落感染儿童之前，我想先展示一下从0-17岁的疫苗死亡率。我们看到疫苗死亡率是0.004%，也就是在17岁以下接种疫苗的人中，平均每2.5万人中有一例死亡。这个数据为什么值得我们关注呢？因为如果你对比从今年5月11日，也就是开始接种疫苗以前，17岁以下死于COVID的数据，一共只有282人死亡，而17岁以下总人口是7300万，所以算下来，25万人中有一例死亡，而接种疫苗的死亡率是2.5万人中有一例。
 
-在暴力抗议活动席卷这个中亚国家后，马西莫夫一直担任国家安全委员会主席，直到周三被总统卡西姆-约马尔特-托卡耶夫解雇。除了领导取代苏联时代克格勃的情报机构外，马西莫夫还曾两次担任总理，并与前总统努尔苏丹-纳扎尔巴耶夫密切合作。
+所以接种疫苗的死亡率要高10倍。也就是接种疫苗死亡的概率，要比感染病毒死亡要高10倍。这里的所谓“病毒”，仅仅是指为了被媒体鼓吹的一些症状，目的就是让某些人发财而已。
 
-当抗议者冲进哈萨克斯坦阿拉木图市长办公室，并冲入该市机场后，托卡耶夫向俄罗斯提出了援助请求。
+对于18岁以下人士，确实是这样的。这里我还要进一步提醒大家，所有那些死于COVID的孩子，并不是真的死于COVID，而是死于其他原因。这些孩子都有其他几种并发症，而COVID是写在死亡证明上的死因。因此如果你完全健康，那么死于（病毒的）概率是250万分之一。也就是如果你18岁，那么死于疫苗的概率要比死于病毒本身的概率高100倍。
 
-俄罗斯领导的部队大约有2500人，第一批已经抵达哈萨克斯坦。一些俄罗斯伞兵部队已经抵达，并于周五协助哈萨克斯坦军队从抗议者手中夺回机场。
+这个数据确实让人吃惊，而且它是基于CDC公布的数据。我想给你念一下《COVID疫苗与各年龄段死亡率的关系》中的这一段。文章说到，“通过比较各年龄段的疫苗死亡概率和公开的COVID感染概率，我们发现，对于低风险以及未感染过COVID-19的儿童、年轻人和中年人，接种COVID疫苗和加强针的产生的风险超过了收益。因此我们的研究结果让人对现有的大规模接种策略提出质疑。”
 
-美国国务卿安东尼·布林肯（Antony Blinken）发声质疑哈萨克斯坦寻求俄罗斯军事援助以应对持续暴力骚乱。布林肯表示，美国相信哈萨克斯坦政府能够自行应对抗议活动。他说：“近代历史的一个教训是，一旦俄罗斯人进入你家，有时就很难让他们离开。” “在我看来，哈萨克斯坦当局和政府肯定有能力适当处理抗议活动，既要尊重抗议者的权利，又要维护法律和秩序。”“所以不清楚他们为什么会觉得需要任何外部援助，我们正在努力了解更多。”
+同样，如果你分析流感和流感疫苗数据，也会发现一个重要的问题。如果你看流感的死亡率数据，2019、2020年的死亡率很高，2017、18年比较低，今年完全没有流感。而你看到的5-11岁儿童里，因为得了COVID-19而住院的数字比流感病人的曲线还要低。那我们为什么还要给儿童接种（COVID）疫苗呢？文章里还说，对于0-14岁年龄段未接种疫苗儿童的死亡率和成年人接种疫苗的数据是正相关联的。什么意思呢？这是说，在成年人接种疫苗后的18周内，两者的正相关联性增强，直到18周以后消失。这说明成年人接种后的18周以内，对0-14周岁儿童死亡率的间接不利影响也增加了。也就是说，在成年人接种后的18周以内，他们的0-14周岁的孩子的死亡风险也增加了。
 
-2022.1.5郭文贵先生直播中指出哈萨克斯坦动乱的幕后黑手是中共，王岐山藏在哈国的黄金是暴乱的真正原因。
+素材： 文倩
 
-来源链接：
+翻译：文永
 
-[1.路透社](https://www.reuters.com/world/asia-pacific/kazakhstan-detains-ex-security-chief-crisis-convulses-nation-2022-01-08/)
+字幕：吉尼龟
 
-[2.BBC](https://www.bbc.com/zhongwen/simp/world-59920466)
-
-[3.Gnews](https://gnews.org/zh-hans/1825822/)
+编辑/发文：Kent
 
  
 
