--- a/gnews/49.md
+++ b/gnews/49.md
@@ -1,9 +1,9 @@
 ---
-title: 塞耶博士：无论冷战热战, 美国都有能力且赢得对中共的战争
+title: 班农战斗室：推特在与美国交战
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1835536/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/1835827/)
 
-12/30/2021 塞耶博士：我们现在正处在与中共的冷战中。但如果我们现在不采取措施打败他们，不大大加强我们在印度洋、太平洋地区和世界其他地方的存在，不参与他们对我们进行的，本应是我们向他们进行的意识形态战争，并确保中共不再能够进入我们的资本市场，确保贸易有利于我们，而不是中共国；我们从全球贸易中获得相对收益，而不是中共。所以还需要很多的努力。但这是一场战争，无论它是冷战，还是热战，美国都可以而且会赢得对他们的战争
+01/06/2022 乔治亚州众议员玛乔丽·泰勒·格林做客战斗室称推特实际上是在与美国整个国家交战。他们不希望任何人去推动真相，这跟他们喜欢的政治言论相冲突
 
 By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
