--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,42 +1,28 @@
 ---
-title: 特德-克鲁兹为何加入“沼泽地”攻击1月6日爱国抗议者（二）
+title: 媒体等同于核武器
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1841122/)
+`温哥华扬帆农场` [轉載自GNews](https://gnews.org/zh-hans/1841134/)
 
-翻译：The word
+加拿大温哥华扬帆农场：Quitman
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/屏幕截图-2022-01-09-231626.jpg)图片来源：banned.video
 
-但我们知道，联邦调查局的人在那里，并负责该行动。人们都说：“嘿，我们都知道。我们都知道，亚历克斯，你为什么一直在谈论它？你看，全国的每个频道都在谈论这个问题。你看到每个节目和每个广播都在说新的威胁和新的恐怖分子是中西部人、德克萨斯人、牧场主、退伍军人、农民和枪支所有者。”
+![](https://assets.gnews.org/wp-content/uploads/2022/01/FBD64D7A-835C-4E24-820C-D4DA8C084756.jpeg)
+图片来源：martranlation.com
 
-而他们是在宣传进行军事戒严，新冠病毒的封锁只是一次训练，那么它的目的就是要让那些不想被关起来的人，进行反击，然后把他们称为恐怖分子。而这正是在去年6月的国家恐怖主义计划中，成为了我们国家的官方政策。想象一下，如果俄罗斯宣布他们的头号威胁是自己的人民。人们会说那是一个专制国家。或者如果中共宣布头号威胁是人民，而他们实际上就是这么做的。
+最近HBO及VICE 媒体的Isobel Yeung对郭文贵先生的采访事件，充分暴露了该媒体同以CCP为首的黑暗势力相互勾结，陷害郭先生、爆料革命、海外华人和亚洲人的险恶用心。郭先生在直播爆料中无数次强调独裁者除了掌握权力以外，一定必须牢牢掌握媒体，控制话语权。他们利用媒体制造虚假谎言，颠倒黑白，控制人民。中共这个世界最大的流氓独裁政府更是如此。他们利用媒体在中国和世界上作了许多恶事。
 
-这就是独裁者的所作所为。这就是专制制度的做法。这就是你生活在一个独裁制度下的典型。听听卡玛拉-哈里斯是怎么说的，这个在竞选初选时得到的民主党选民不到半个百分点支持的女人告诉你，他们正在与那些试图压制他们的声音的人作斗争。而且，他们骗来的几百人与警察打架，以及随后被招进首都的有500人左右，他们的所作所为是在试图让人们闭嘴。是左派烧毁了城市。是左派封锁了所有人的言论。这是大科技公司和企业夺走了数百万人的银行账户和PayPal，就因为他们是枪支所有者。
+**1****，制造仇恨：**CCP在中华大地搞所谓的土地革命（简称“土改“）时，编造了”白毛女“舞剧、话剧等剧目，宣传穷人的悲惨情景；编造了”大地主刘文彩“的故事，宣扬地主阶级生活的奢华和恶毒。让所有的人都仇恨地主。结果，CCP在”土改“运动中杀了200多万地主，并且无数地主的女儿和妻子被强奸凌辱。”文化大革命“开始，毛泽东”炮打司令部“的大字报传遍中华大地，致使刘少奇（当时的国家主席）等一大批干部和群众被批斗和关押。中央文革领导小组刘少奇专案组组长周恩来大笔一挥将刘少奇定为“叛徒、内奸、工贼”，从此全国报纸、广播、电台和全国人民天天高呼“打到叛徒、内奸、工贼刘少奇，让他永世不得翻身”。结果，一个曾经的国家主席，死无葬身之地，连名字都没了。CCP统治中国以后直至今日，利用各种媒体不断地宣传“美帝国主义亡我之心不死“，导致许多小粉红和老粉红认为美国制度不如中国制度好，并且利用媒体制造反美和仇美气氛。
 
-现在是纳斯卡在说，好吧，我们可能不会让有人在他们的车上标注 “let’s go Brandon”。哦，我们可能不会让世界网球冠军进入澳大利亚，因为他没有打疫苗。这就是压迫。这都是经典的暴政，加上科幻小说的调料。但是，卡马拉-哈里斯在这里是向世界发出信号，告诉你告诉所有人，我们才是那些把人们的嘴闭上的人，因为我们想让参议院进行为期10天的调查，这是法律规定允许的。
+**2****，颠倒黑白：**CCP 成立之初就搞国家分裂，在所夺取的地域建立“苏维埃红色政权”，附属于前苏联。却将自己标榜为救国救民的伟光正之党。二战时，明明是以蒋介石为首的国民党领导国家抗击日本的入侵，领导中国的抗日战争；相反，CCP忙于利用战乱保守、扩充自己的实力（甚至不愿意与日本军队作战）。结果，抗战胜利后，根本不提国民党的领导作用，利用各种媒体，大讲特讲CCP领导中国人民抗战；大跃进时期，报纸大力宣扬每产万斤粮和一个母猪生百个猪仔的闹剧；中国人民根本没有投票权，也没有任何选举可言，CCP的报纸和电视却大势宣扬“中国人民选择了他们来治理国家”。8964学生游行示威和天安门广场绝食都是属于宪法赋予的权力，并且是和平非暴力的，CCP却将其说成是反革命暴乱，将一个烧焦了尸体挂在北京街头的杆子上，电视录播给国内外，嫁祸给学生。最不可思议的是，最近，地球人都知道CCP是一个独裁的政府，他们利用媒体，对世界报道“中国是最民主的国家”；新冠病毒明明是源于中国武汉，他们在报刊杂志和记者会说“新冠病毒始于美国“。2019年底，新冠病毒流行开始明明是“人传人，不可控”， 他们说成“人不传人，可控”；结果，不仅人传人，还彻底失控，造成全世界和全人类的灾难，新冠病毒大流行至今不能结束。
 
-而特德-克鲁兹的功劳,他确实投票支持了这一做法。他是做这件事的参议员之一,现在他在退缩。
+**3****，公然造假：**CCP管控的国家统计局根据党的需要给出数据。国家的真实人口数也造假。现在，实际人口为不到10亿，可是为了在国际上强调“人口红利”，将其改成14亿。几亿人还生活在贫困中，可是，习近平偏偏说他们已经脱贫。2019年底在湖北武汉爆发的CCP病毒，感染人数和致死人数的报道全是虚假的。郭文贵先生爆料中说：“CCP以假治国” 。 甚至人们常说“CCP的报纸、电视、网络上所报道信息，只要你反着理解就是对的”。例如，CCP报道“截止2020年5月13 日 全国因新冠病毒死亡人数4858”。该报道是假的，实际死亡人数是所报道的百倍千倍。
 
-没有法院进行过调查,没有人调查过。他们只是说，好吧，民主党人从这七个州得到了同意令，所以他们将接受没有签名或确认的选票。因此，这就是它的方式。我们就让它随便通过，并对它进行认证。而乔治亚州重新在定点地区进行了选举调查，并重新运行了完全相同的计算机程序。并说哦，看，已经调查完了。但是，当你在亚利桑那州做了一个真正的审计，一个抽样审计。它显示，仅仅在一个县的抽样审计中，川普就在此大获全胜，我们都知道这就是现实。
+以上列举了CCP利用媒体所作的恶事，仅仅是沧海一粟。CCP利用媒体和掩盖真像给中国人民和世界人民带来的伤害等同于释放核武的伤害。
 
-卡玛拉-哈里斯是这样说的：“当时和现在的利害关系是，让我们的未来以宪法规定的方式，由我们—人民—所有人民决定。我们不能让我们的未来由那些一心想要压制我们的声音、推翻我们的投票、兜售谎言和错误信息的人决定，这些人可能是刚刚重新出现的，但其根基却很深。”
+编审：文敏       发布：天予
 
-而她的家庭，包括她的父亲，完完全全的，在牙买加使用奴隶劳工。
 
-我需要把一件事情说清楚，我们不能随便的去攻击别人，比如今天我们可以批判特德-克鲁斯的这个行为，但不能把他称作敌人。因为我们知道的信息太少了。
 
-现在要去分辨谁是坏人有一个简单的法则那就是——中共是坏人，希望强制打疫苗的人是坏人，当然这个法则不是百分之百的准确，但我这里有一条百分之百准确的话可以告诉你，那就是：你不知道的事情永远比你知道的事情更重要。
-
-新闻来源：[banned.video] [Exclusive: Learn the Secret of why Ted Cruz Joined the Deep State Ahead of Massive False Flag](Learn%20the%20Secret%20of%20why%20Ted%20Cruz%20Joined%20the%20Deep%20State%20Ahead%20of%20Massive%20False%20Flag)
-
-接上篇：【特德-克鲁兹为何加入“沼泽地”攻击1月6日爱国抗议者（一）】
-
-* * *
-
-*审核：Aries的星
-校对：信心满满
-发布：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-3.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
