--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,43 +1,23 @@
 ---
-title: 美国地质调查局：中共国青海省发生6.6级强震
+title: 得到天道与人助的新中国联邦人
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1841066/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1841097/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/010908.jpg)网络图片
-北京：一次6.6级强震在周六早间袭击了中共国的西北偏远省份青海，美国地质调查局说。
+五大银行都用七这个字儿来推一个共产党的数字化人民币一样。这是无穷无尽的上天的力量在帮我们，还有我们背后的无数个战友的付出。
 
-这次地震发生在（1月8日）凌晨1:45（格林威治时间1月7日17:45），震源深度10公里（6英里），属于浅源地震。震中位于西宁市西北约140公里，美国地震学家说。25分钟后发生了一次5.1级的余震，美国地质调查局说。
+**【郭先生直播摘要】 2022.1.5 得到天道与人助的新中国联邦人**
 
-中共国地震台网中心把震级定义为6.9级，据官媒新华社报道。
+**郭先生：**
 
-美国地质调查局在它的地震评估中说，“发生人员伤亡的可能性不大，”，但它补充说，地震有可能造成“严重的破坏”。美国地质调查局警告说，“该地区人口所居住的建筑物极易受地震晃动的影响，尽管存在一些抗震建筑。”
+12月31号这个脑袋歪的90%改成了正的，这个时候同时推特干掉了，Rogan还有美国议员同一天24小时发生的事情。当天瞬间就是20几万，第2天50几万，到现在为止，今年已经又有10万到20万了，将近跨过了百万大关。就现在你看到大概400万的关注量，但事实上我们将尽近可能是3500万到5000万。但我们每天的required，就是现在已经超过500万。 啥概念? 兄弟姐妹们。比你刚才那个数据大得多得多。我们证明了什么问题，我们盖特是共产党黑我们那个最铁的证据。
 
-人口稀少的青海省分布在西藏高原上。2010年，发生在青海的一个6.9级地震造成3000人死亡或失踪。
+这件事我们会整下去的事，就是人家知道我们知道了我们被篡改数据，是这个天才的brain发现的。发现了之后，这时候人家给它释放了。第2， 天意在帮我们，还有风水。 第三是我们现在所有的， 看到老天在帮我们，就刚才看到五大银行都用七这个字儿，来推一个共产党的人民币，数字化人民币一样，这是无穷无尽的上天的力量在帮我们。还有我们背后的无数个战友的付出，刚才我说这话既有天意，但哪一个没有战友的帮助呢？哪一个没有呢 ？哪一个都是人。大家别老寄望于天，那你就是该死。
 
-**简评：**
+你首先寄望你自己的行动，然后你再寄望于天。你一定是人天合一，得天助还有得人道，你就会是赢家。光靠一样，你一定完蛋。今天的盖特不是七哥说的那么简单。你们刚才讲的，有2条你没讲到，最核心的第一条，是疫苗灾难，救命媒体，而且改变社交媒体。靠广告费和出售个人数据的一场革命的第一个媒体平台，改变社交媒体收入和个人，是使用社交数据规则的平台。
 
-在中共走向穷途末路的过程中，2022年注定会是乱象频仍的一年——新冠疫情说不准什么时候就将一个城市封锁隔离；疫苗的中、长期危害开始慢慢显现；冬奥会结束后的各种经济暴雷不知会让多少家庭破产；加上像青海地震这样的自然灾害。身在中共国，不敢指望半点儿来自政府的援助，因为一两袋劣质方便面，或是几个萝卜、土豆连一天都维持不了。只有健身健心，跟随新中国联邦，了解真相，才能感受到希望。
+第2条，未来他的所有的厉害是金融在一起的，它是打破了所谓的法币和数字货币，和现在的对整个社交媒体成为奴隶人们手段。是一个开创先河的人与人之间关系的，就像音乐，音乐流行乐是什么？流行乐是个体和社会之间沟通的桥梁。 啥叫红歌，红歌是集体垄断人之间的方法。过去的社交媒体是集体垄断个人，控制个人的平台。现在是个人与整个个人之间沟通的真实平台，它的本质是有不同的。它是解放全人类，货币自由人权和信息的平台，盖特的价值，现在看看，一个Facebook 1万亿美元。YouTube 2000亿美元，zoom4000亿美元，TIKTOK4000到5000亿美元，我告诉你盖特，它最大的不仅是直播，不是发信息呀，不光是盖特Pay。盖特最重要是在些平台都得死的情况下，只有它能生着，它代表着生，它代表着太阳，那些人都是魔鬼。所以盖特证明了新中国联邦人。
 
-新闻链接： [Strong 6.6-magnitude quake hits China’s Qinghai province: USGS](https://timesofindia.indiatimes.com/world/china/strong-6-6-magnitude-quake-hits-chinas-qinghai-province-usgs/articleshow/88763867.cms?from=mdr)
-
-*翻译: 乡间小路*
-
-*校对：感恩*
-
-* * *
-
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
-
-
-编辑：【英国伦敦喜庄园编辑部】
-
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
-
-
-
-
+视频剪辑：北方信使  | 听写：雨山溪桥客 | 翻译：Arthur | 校对：烟波浩淼 | 视频制作+字幕：| 编辑&发布：断播
 
  
 
