--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,41 +1,39 @@
 ---
-title: DC大中华时事：美多名花滑顶尖选手染疫退出冬奥选拔赛
+title: 有声&#124;安妮日记2022-逃离新冠疫苗
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1841052/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/1841096/)
 
-*编辑：西北风 / 作图：*JAY(杰伊)
-
-![](http://himalayawashingtondc.org/wp-content/uploads/2021/08/ScreenShot-2021-08-01-at-17.25.09@2x.png)
-
-#   墙国妄语每日驳
-
-### **0**1.09.2022
-
-[俄媒文章：美国在全球扩军，中国帮世界发展\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/column/20220109/2465463.shtml)
-
-***简评：***可能也只有中共控制国内媒体，每年几千亿美元在全世界进行大外宣新闻媒体控制才能说出如此颠倒黑白的话。美国在全球驻军，那是二次世界大战后形成的战后国际秩序。要说二战后中国也是战胜国，那你中共怎么不到日本去驻军，不驻军驻个马也算数啊。你中共有这样的软实力和硬实力吗？现今中共在西方尤其美国资金技术几十年支持下才得以苟延残喘，没有西方国家尤其美国的帮助怕是中共早就去见马克思他老人家了吧。中共用掏子宫的经济仅仅换来了几十苟延残喘，现在又要把自己塑造成全世界的救世主，省省吧中共，中共现在自己救自己怕是都力不从心了吧。
-
-### 01.09.2022
-
-[外媒：哈总统托卡耶夫宣布1月10日为全国哀悼日\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/ckkx/kuaixun20220109/2465458.shtml)
-
-***简评：***哈萨克斯坦共和国是未来中国中共倒台后重建民主法制社会最坏模式最应该借鉴的对象。同样披着民主的外衣，实质比独裁更独裁。如果中国中共倒台后中国走到那一步，那中华民族将万劫不复.哈国同样有着专制历史传统，又承袭苏俄制度和模式，夹杂在大国地缘政治格局博弈之中，如果我们连起吗中共现有既得利益者在国内国外势力和影响力不能连根拔起的话，哈国的现在有很大机率预示未来的中国。关注哈国局长势演进同样是在关心我们自己的未来。
-
-### 01.09.2022
-
-[美媒：美多名花滑顶尖选手染疫退出冬奥选拔赛\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/world/20220109/2465475.shtml)
-
-***简评：***我们新中国联邦人是多么幸运，没有打致命疫苗，在omicron 全球肆虐当下，我们还有解药，想想如果没有解药，这次病毒一人感染，全家无人幸免的情况下那无疑对每个家庭都是一场灾难。想想那些绝大部份没有解药的病毒患者对他们身体健康是毁灭无可挽回的。一个个优秀的人就这样过早的凋谢这多么惋惜。单单从死亡人数中共病毒就已经超越二次世界大战战场死亡人数总和，如果你还认为我们不是处在战争当中的话。是战争最终终会以战争的方式结束，中共有主动权开启战争，但结束战争的权力不会是中共说了算的。
-
-#   港台资讯
-![](https://media.discordapp.net/attachments/858887785507323904/929628145223622676/D.C_Cre8GreatChina.001.jpeg?width=1043&amp;height=586)![](https://media.discordapp.net/attachments/858887785507323904/929628145630449684/D.C_Cre8GreatChina.002.jpeg?width=1043&amp;height=586)![](https://media.discordapp.net/attachments/858887785507323904/929628146075054120/D.C_Cre8GreatChina.003.jpeg?width=1043&amp;height=586)
+配音：香草山设计部 – 喜马拉雅大喵儿
 
 
 
+![](https://assets.gnews.org/wp-content/uploads/2021/12/logo-s2.png)
 
-*编辑：*西北风
-*作图：JAY(杰伊)
-发布：文顾*
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/1-mh1.1.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/01/2-mh1.2.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/01/3-mh1.3.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/01/4-mh1.4.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/01/5-mh1.5.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/01/6-mh1.6.jpg)![](https://assets.gnews.org/wp-content/uploads/2022/01/7-mh1.7.jpg)
+原文链接：[安妮日记2022-逃离新冠疫苗](https://gnews.org/zh-hans/1830885/)
+
+音频处理：喜山必胜Maverick
+
+**编辑/发稿：**Daxia
+
+![](https://assets.gnews.org/wp-content/uploads/2022/01/1-025730F4-3253-4907-B549-CD1E7A357616.jpg)
+
+**更多资讯，更多关注**
+
+[**纽约香草山农场****GTV****–****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场****GTV-MOS TALK****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场****YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+
+![](https://assets.gnews.org/wp-content/uploads/2021/12/logo-s2.png)
+
+
 
  
 
