--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,27 +1,55 @@
 ---
-title: 媒体等同于核武器
+title: 第203期玫瑰看新闻-币圈新闻
 ---
-`温哥华扬帆农场` [轉載自GNews](https://gnews.org/zh-hans/1841134/)
+`【🌹玫瑰新闻】` [轉載自GNews](https://gnews.org/zh-hans/1841145/)
 
-加拿大温哥华扬帆农场：Quitman
+币圈新闻
+
+1.11月25日Hcoin盘中震荡
+
+2.BTC突破58000美元
+
+3.Coinbase收购加密钱包提供商BRD的团队价格飙升500%
+
+4.日本约70家企业将联合测试推出数字货币
+
+5.比特币挖矿电力紧缩：哈萨克斯坦寻求核解决方案
+
+6.比特币价格的大幅波动影响加密市场
+
+7.摩根士丹利增加对比特币的敞口，持有3 亿美元的灰度股票
+
+8.中共国成都警方批捕多人：GUCS、麒麟矿机虚拟币涉案35人被采取刑事强制措施
+
+9.小摩执行长开玩笑；摩根大通将比中共更长寿
+
+10.印度或禁止大部分加密货币引发恐慌性抛售，比特币折价超3%
+
+11.韩国政府拟为“虚拟货币”立法加密货币内幕交易将被定性为刑事犯罪
 
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/FBD64D7A-835C-4E24-820C-D4DA8C084756.jpeg)
-图片来源：martranlation.com
 
-最近HBO及VICE 媒体的Isobel Yeung对郭文贵先生的采访事件，充分暴露了该媒体同以CCP为首的黑暗势力相互勾结，陷害郭先生、爆料革命、海外华人和亚洲人的险恶用心。郭先生在直播爆料中无数次强调独裁者除了掌握权力以外，一定必须牢牢掌握媒体，控制话语权。他们利用媒体制造虚假谎言，颠倒黑白，控制人民。中共这个世界最大的流氓独裁政府更是如此。他们利用媒体在中国和世界上作了许多恶事。
+**推出問題，敲出真相，爆料在路上！**
 
-**1****，制造仇恨：**CCP在中华大地搞所谓的土地革命（简称“土改“）时，编造了”白毛女“舞剧、话剧等剧目，宣传穷人的悲惨情景；编造了”大地主刘文彩“的故事，宣扬地主阶级生活的奢华和恶毒。让所有的人都仇恨地主。结果，CCP在”土改“运动中杀了200多万地主，并且无数地主的女儿和妻子被强奸凌辱。”文化大革命“开始，毛泽东”炮打司令部“的大字报传遍中华大地，致使刘少奇（当时的国家主席）等一大批干部和群众被批斗和关押。中央文革领导小组刘少奇专案组组长周恩来大笔一挥将刘少奇定为“叛徒、内奸、工贼”，从此全国报纸、广播、电台和全国人民天天高呼“打到叛徒、内奸、工贼刘少奇，让他永世不得翻身”。结果，一个曾经的国家主席，死无葬身之地，连名字都没了。CCP统治中国以后直至今日，利用各种媒体不断地宣传“美帝国主义亡我之心不死“，导致许多小粉红和老粉红认为美国制度不如中国制度好，并且利用媒体制造反美和仇美气氛。
+**推出问题，敲出真相，爆料在路上！**
 
-**2****，颠倒黑白：**CCP 成立之初就搞国家分裂，在所夺取的地域建立“苏维埃红色政权”，附属于前苏联。却将自己标榜为救国救民的伟光正之党。二战时，明明是以蒋介石为首的国民党领导国家抗击日本的入侵，领导中国的抗日战争；相反，CCP忙于利用战乱保守、扩充自己的实力（甚至不愿意与日本军队作战）。结果，抗战胜利后，根本不提国民党的领导作用，利用各种媒体，大讲特讲CCP领导中国人民抗战；大跃进时期，报纸大力宣扬每产万斤粮和一个母猪生百个猪仔的闹剧；中国人民根本没有投票权，也没有任何选举可言，CCP的报纸和电视却大势宣扬“中国人民选择了他们来治理国家”。8964学生游行示威和天安门广场绝食都是属于宪法赋予的权力，并且是和平非暴力的，CCP却将其说成是反革命暴乱，将一个烧焦了尸体挂在北京街头的杆子上，电视录播给国内外，嫁祸给学生。最不可思议的是，最近，地球人都知道CCP是一个独裁的政府，他们利用媒体，对世界报道“中国是最民主的国家”；新冠病毒明明是源于中国武汉，他们在报刊杂志和记者会说“新冠病毒始于美国“。2019年底，新冠病毒流行开始明明是“人传人，不可控”， 他们说成“人不传人，可控”；结果，不仅人传人，还彻底失控，造成全世界和全人类的灾难，新冠病毒大流行至今不能结束。
+**请关注和订阅我们的以下账号：**
 
-**3****，公然造假：**CCP管控的国家统计局根据党的需要给出数据。国家的真实人口数也造假。现在，实际人口为不到10亿，可是为了在国际上强调“人口红利”，将其改成14亿。几亿人还生活在贫困中，可是，习近平偏偏说他们已经脱贫。2019年底在湖北武汉爆发的CCP病毒，感染人数和致死人数的报道全是虚假的。郭文贵先生爆料中说：“CCP以假治国” 。 甚至人们常说“CCP的报纸、电视、网络上所报道信息，只要你反着理解就是对的”。例如，CCP报道“截止2020年5月13 日 全国因新冠病毒死亡人数4858”。该报道是假的，实际死亡人数是所报道的百倍千倍。
+**新西兰伊甸农场盖特**：https://gettr.com/user/himalayanz
 
-以上列举了CCP利用媒体所作的恶事，仅仅是沧海一粟。CCP利用媒体和掩盖真像给中国人民和世界人民带来的伤害等同于释放核武的伤害。
+**【玫瑰看新闻】盖特**：https://gettr.com/user/rosenews
 
-编审：文敏       发布：天予
+**玫瑰看新闻YouTube账号**：
 
+**玫瑰看新闻**
 
+**黑森林的故事**
+
+**Rose news**
+
+**【玫瑰看新闻】推特账号**：
+
+**Rose News (@RoseNews4)**
 
  
 
