--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,24 +1,42 @@
 ---
-title: 得到天道与人助的新中国联邦人
+title: 特德-克鲁兹为何加入“沼泽地”攻击1月6日爱国抗议者（二）
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1841097/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/1841122/)
 
-五大银行都用七这个字儿来推一个共产党的数字化人民币一样。这是无穷无尽的上天的力量在帮我们，还有我们背后的无数个战友的付出。
+翻译：The word
 
-**【郭先生直播摘要】 2022.1.5 得到天道与人助的新中国联邦人**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/屏幕截图-2022-01-09-231626.jpg)图片来源：banned.video
 
-**郭先生：**
+但我们知道，联邦调查局的人在那里，并负责该行动。人们都说：“嘿，我们都知道。我们都知道，亚历克斯，你为什么一直在谈论它？你看，全国的每个频道都在谈论这个问题。你看到每个节目和每个广播都在说新的威胁和新的恐怖分子是中西部人、德克萨斯人、牧场主、退伍军人、农民和枪支所有者。”
 
-12月31号这个脑袋歪的90%改成了正的，这个时候同时推特干掉了，Rogan还有美国议员同一天24小时发生的事情。当天瞬间就是20几万，第2天50几万，到现在为止，今年已经又有10万到20万了，将近跨过了百万大关。就现在你看到大概400万的关注量，但事实上我们将尽近可能是3500万到5000万。但我们每天的required，就是现在已经超过500万。 啥概念? 兄弟姐妹们。比你刚才那个数据大得多得多。我们证明了什么问题，我们盖特是共产党黑我们那个最铁的证据。
+而他们是在宣传进行军事戒严，新冠病毒的封锁只是一次训练，那么它的目的就是要让那些不想被关起来的人，进行反击，然后把他们称为恐怖分子。而这正是在去年6月的国家恐怖主义计划中，成为了我们国家的官方政策。想象一下，如果俄罗斯宣布他们的头号威胁是自己的人民。人们会说那是一个专制国家。或者如果中共宣布头号威胁是人民，而他们实际上就是这么做的。
 
-这件事我们会整下去的事，就是人家知道我们知道了我们被篡改数据，是这个天才的brain发现的。发现了之后，这时候人家给它释放了。第2， 天意在帮我们，还有风水。 第三是我们现在所有的， 看到老天在帮我们，就刚才看到五大银行都用七这个字儿，来推一个共产党的人民币，数字化人民币一样，这是无穷无尽的上天的力量在帮我们。还有我们背后的无数个战友的付出，刚才我说这话既有天意，但哪一个没有战友的帮助呢？哪一个没有呢 ？哪一个都是人。大家别老寄望于天，那你就是该死。
+这就是独裁者的所作所为。这就是专制制度的做法。这就是你生活在一个独裁制度下的典型。听听卡玛拉-哈里斯是怎么说的，这个在竞选初选时得到的民主党选民不到半个百分点支持的女人告诉你，他们正在与那些试图压制他们的声音的人作斗争。而且，他们骗来的几百人与警察打架，以及随后被招进首都的有500人左右，他们的所作所为是在试图让人们闭嘴。是左派烧毁了城市。是左派封锁了所有人的言论。这是大科技公司和企业夺走了数百万人的银行账户和PayPal，就因为他们是枪支所有者。
 
-你首先寄望你自己的行动，然后你再寄望于天。你一定是人天合一，得天助还有得人道，你就会是赢家。光靠一样，你一定完蛋。今天的盖特不是七哥说的那么简单。你们刚才讲的，有2条你没讲到，最核心的第一条，是疫苗灾难，救命媒体，而且改变社交媒体。靠广告费和出售个人数据的一场革命的第一个媒体平台，改变社交媒体收入和个人，是使用社交数据规则的平台。
+现在是纳斯卡在说，好吧，我们可能不会让有人在他们的车上标注 “let’s go Brandon”。哦，我们可能不会让世界网球冠军进入澳大利亚，因为他没有打疫苗。这就是压迫。这都是经典的暴政，加上科幻小说的调料。但是，卡马拉-哈里斯在这里是向世界发出信号，告诉你告诉所有人，我们才是那些把人们的嘴闭上的人，因为我们想让参议院进行为期10天的调查，这是法律规定允许的。
 
-第2条，未来他的所有的厉害是金融在一起的，它是打破了所谓的法币和数字货币，和现在的对整个社交媒体成为奴隶人们手段。是一个开创先河的人与人之间关系的，就像音乐，音乐流行乐是什么？流行乐是个体和社会之间沟通的桥梁。 啥叫红歌，红歌是集体垄断人之间的方法。过去的社交媒体是集体垄断个人，控制个人的平台。现在是个人与整个个人之间沟通的真实平台，它的本质是有不同的。它是解放全人类，货币自由人权和信息的平台，盖特的价值，现在看看，一个Facebook 1万亿美元。YouTube 2000亿美元，zoom4000亿美元，TIKTOK4000到5000亿美元，我告诉你盖特，它最大的不仅是直播，不是发信息呀，不光是盖特Pay。盖特最重要是在些平台都得死的情况下，只有它能生着，它代表着生，它代表着太阳，那些人都是魔鬼。所以盖特证明了新中国联邦人。
+而特德-克鲁兹的功劳,他确实投票支持了这一做法。他是做这件事的参议员之一,现在他在退缩。
 
-视频剪辑：北方信使  | 听写：雨山溪桥客 | 翻译：Arthur | 校对：烟波浩淼 | 视频制作+字幕：| 编辑&发布：断播
+没有法院进行过调查,没有人调查过。他们只是说，好吧，民主党人从这七个州得到了同意令，所以他们将接受没有签名或确认的选票。因此，这就是它的方式。我们就让它随便通过，并对它进行认证。而乔治亚州重新在定点地区进行了选举调查，并重新运行了完全相同的计算机程序。并说哦，看，已经调查完了。但是，当你在亚利桑那州做了一个真正的审计，一个抽样审计。它显示，仅仅在一个县的抽样审计中，川普就在此大获全胜，我们都知道这就是现实。
 
+卡玛拉-哈里斯是这样说的：“当时和现在的利害关系是，让我们的未来以宪法规定的方式，由我们—人民—所有人民决定。我们不能让我们的未来由那些一心想要压制我们的声音、推翻我们的投票、兜售谎言和错误信息的人决定，这些人可能是刚刚重新出现的，但其根基却很深。”
+
+而她的家庭，包括她的父亲，完完全全的，在牙买加使用奴隶劳工。
+
+我需要把一件事情说清楚，我们不能随便的去攻击别人，比如今天我们可以批判特德-克鲁斯的这个行为，但不能把他称作敌人。因为我们知道的信息太少了。
+
+现在要去分辨谁是坏人有一个简单的法则那就是——中共是坏人，希望强制打疫苗的人是坏人，当然这个法则不是百分之百的准确，但我这里有一条百分之百准确的话可以告诉你，那就是：你不知道的事情永远比你知道的事情更重要。
+
+新闻来源：[banned.video] [Exclusive: Learn the Secret of why Ted Cruz Joined the Deep State Ahead of Massive False Flag](Learn%20the%20Secret%20of%20why%20Ted%20Cruz%20Joined%20the%20Deep%20State%20Ahead%20of%20Massive%20False%20Flag)
+
+接上篇：【特德-克鲁兹为何加入“沼泽地”攻击1月6日爱国抗议者（一）】
+
+* * *
+
+*审核：Aries的星
+校对：信心满满
+发布：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/01/GNEWS_CH.-3.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
