--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,104 +1,54 @@
 ---
-title: 招标文件显示中共国持续扩张国内外互联网监控
+title: 为什么价格会在2022年继续飙升
 ---
-`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1841004/)
+`洛杉矶盘古农场 HIMALAYA LA PANGU` [轉載自GNews](https://gnews.org/zh-hans/1841034/)
 
-**据《华盛顿邮报》记者：凯特·卡德尔（Cate Cadell）, 2021年12月31日报道：**
-![](https://assets.gnews.org/wp-content/uploads/2022/01/agwdy-tzlhc.jpg)**2019 年 10 月 8 日，北京一家商店外的监控摄像头附近悬挂着一面中共国国旗。（Mark Schiefelbein/美联社）**
-《华盛顿邮报》查阅了数百份中共国的投标文件、合同和公司文件后得出结论，中共国正将其互联网监控向外转移，包括挖掘脸书（Facebook）和推特（Twitter）等西方社交媒体数据，为其政府机构、军队和警察提供国外情报信息。
+**据《CNN Business》记者：Anneken Tappe, 2022年1月1日报道：**
+![](https://assets.gnews.org/wp-content/uploads/2022/01/aydg5-o3j9q.jpg)**图片源自：toppr.com**
+美国以数十年来的高通胀结束了2021年。这对2022年来说不是好兆头。
 
-一些可以通过国内政府招标平台公开访问的文件表明，包括官方媒体、宣传部门、警察、军队和网络监管机构在内的政府部门正在购买新的或更复杂的系统来收集数据。
+价格已经攀升到如此之高，他们需要一些时间才能回到现实。换句话说，2021年令人不安的通胀数据很可能会伴随我们进入下一年。
 
-其中一个包括价值320,000美元的中共国官方媒体软件程序，该程序通过挖掘推特（Twitter）和脸书（Facebook）资料来创建外国记者和学者的数据库；另一个耗资 216,000美元的北京警察情报项目，分析西方关于香港和台湾的网络留言； 以及另一个新疆网络中心，对国外维吾尔语内容进行分类标签。
+我们拥有的最新价格数据来自11月份，当时两个最受关注的通胀指标——消费者价格指数和个人消费支出指数——均攀升至39年高位。
 
-一名向中宣部报告的分析员说，“现在我们可以更好地了解反中共人员的地下网络”。 这位不愿透露姓名的人士介绍了他们的工作，他说，他们曾经制作一份数据报告，说明与北京高层领导有关的负面内容如何在推特（Twitter）上传播，包括相关学者、政治家和记者的信息。
+后一个指数是美联储在评估国家通胀时最关注的。
 
-它们还形成了一个预警系统，旨在针对损害北京利益的趋势发出实时警报。
+负责保持价格稳定的央行正在缩减其刺激措施，预计明年将加息以抑制通胀并阻止经济过热。
 
-德国马歇尔基金（German Marshall Fund）高级研究员马雷克·奥尔伯格（Mareike Ohlberg）说：“他们现在正在努力转向外部，坦率地说，我认为这太可怕了，看看在中共国国内的庞大数量和规模。”
+上个月的数据显示，CPI和PCE指数11月的价格涨幅均低于10月。这是个好消息，尽管放缓幅度很小，仅为 0.1 个百分点。
 
-她说：“这确实表明，他们现在觉得在海外保卫中共国、在海外打舆论战是他们的责任。”
+但经济学家更喜欢观察一段时间内的价格走势，通常是12个月。因此，像11月这样的小幅放缓还微不足道。
 
-中共国政府的一些预算包括代表警察和宣传部门购买和维护外国社交媒体账户。 还有一些人描述了使用有针对性的分析来完善北京官方媒体对海外的报道。
+事实上，价格增量放缓可能需要几个月的时间才能出现在数据中。即使通胀突然跌落悬崖，领先指数也需要时间来反映这一点。这就是美联储主席杰罗姆-鲍威尔在提到“基数效应”时所谈论的内容。
 
-有些采购文件描述了高度可定制的程序，可以从个人社交媒体用户那里收集实时社交媒体数据。另外一些采购文件描述了追踪趋势功能，包括追踪美国选举。
+为什么通胀会居高不下？
 
-中共国外交部没有回应置评请求。
+**有几个因素导致价格上涨。**
 
-**“舆论引导”**
+一个是去年夏天出现的供应链混乱。尽管一些问题有所缓解，但问题并未完全解决。只要在世界范围内运输货物的成本更高，更高的运输成本很可能会转嫁给消费者。
 
-中共国在线分析国内舆论系统是习近平实现中共国宣传机器现代化和保持对互联网控制计划的支柱。
+另一个重要原因是商品价格的高成本，导致能源和食品成本飙升。今年这两个行业的价格都飙升，为通胀增加了很大一部分。就食品而言，高价迫使一些消费者少买或更换零售商。
 
-大量的数据收集和监测工作让官员们深入了解公众舆论。
+经济学家预计明年情况不会好转。除了高需求和运输成本外，化肥价格上涨和持续恶劣的天气可能会使食品价格保持高位，即使流行病引发的通胀压力有所缓解。
 
-这些服务还为中共国的审查机构提供越来越多的技术监控。 大多数系统都包含警报功能，旨在实时提醒官员和警察注意负面内容。
+租金上涨也仍然是一个问题。这很重要，因为住房占人们花费的很大一部分。如果租金吃掉了更大的一块蛋糕，消费者最终可能会减少支出，这对复苏来说将是个坏消息。
 
-这些行动是北京所谓的“舆论引导工作”的重要部分——通过有针对性的宣传和审查，塑造有利于政府的公众情绪。
+根据美国银行经济学家的数据，11月租金连续第三个月上涨 0.4%，这表明未来通胀会更高、更持久。
 
-在全球对北京的看法处于近期历史最低点之际，该监控网络系统正在扩展到外国社交媒体。
+摩根大通经济学家Peter B. McCrory 表示，“最近通胀压力的扩大与租金价格的显着回升相吻合。””
 
-今年5月，习近平号召高级官员在国外塑造更加“值得信赖、可爱、可靠”的中共国形象，呼吁“有效开展国际舆论引导”。
+而再有就是奥米克戎。
 
-他的言论反映出北京对如何控制中共国的海外形象日益焦虑。
+最近几周，包括美国在内的几个国家的Covid-19感染率都创下了历史新高，因为这种变种迅速传播。如果这导致新一轮的封锁，它可能会再次改变消费者的消费方式并刺激对居家用品的需求。
 
-两名与北京政府机构签约的舆情分析师告诉《华盛顿邮报》，当检测到“敏感”内容时，他们会通过短信、电子邮件和专用电脑显示器收到自动警报。
+更重要的是，奥米克戎可能会影响能源价格：如果重新开始限制人们出行，能源需求下降将意味着价格下降，这将有助于降低通胀。
 
-另一位人士在谈到他们的部门工作时说，高度敏感的网上舆论趋势被报告到由中国网络安全局 (CAC) 维护的 24 小时热线。
+**文章来源：**[https://www.cnn.com/2022/01/01/economy/inflation-prices-2022-preview/index.html](https://www.cnn.com/2022/01/01/economy/inflation-prices-2022-preview/index.html)
 
-该人士补充说，大部分警报与国内社交媒体有关，但自2019年年中以来，外国社交媒体也被纳入单位监控。
-
-一份2020年12月的中国东部城市福州市价值236,000美元用于监控脸书（Facebook）和推特（Twitter）以及国内社交媒体的系统招标文件显示，“如果遇到重大舆论，请通过电话直接联系中国网络安全局值班人员，以确保通过各种沟通工具进行通知。”
-
-该招标文件规定向中国网络安全局递交的报告应包括个人社交媒体用户的详细信息。
-
-**国家媒体主导的数据挖掘**
-
-《中国日报》与北京交通大学签订了合同，该大学是中共国六所设置专门部门开发舆情分析技术的大学之一。
-
-然而，一些最多产的舆论监测服务是由官方媒体自己提供给警察和政府机构。
-
-一些招标文件显示中共国主要官方媒体在国外设立办事处和服务器收集数据的范围，以及它们基于日益复杂的数据挖掘技术为北京提供宣传指导。
-
-由官方媒体带头的北京在海外的宣传力度越来越大，已经在华盛顿引发了警报。
-
-2020 年，美国国务院将中共国最高的官方媒体在美国的业务重新归类为外国使团，增加了报道要求并限制了他们的签证分配，激怒了北京。
-
-《人民日报》旗下的《人民网》，是全国最大的舆情分析服务商之一，赢得了数十个项目，包括为警察、司法机关、共产党组织和其他客户提供海外社交媒体数据收集服务。
-
-在《人民网》中标的一次招标中，北京警务情报指挥部购买了一项价值30,570美元的服务，用于搜寻外国社交媒体，并对未指明的“关键人员和组织”进行报道，收集有关他们“基本情况、背景和关系”的信息。
-
-该招标还要求每周发布有关香港、台湾和美国关系的数据报告。
-
-招标书称，“国际力量平衡发生了深刻调整。通过网络公开信息的收集，我们可以密切关注国际社会，分析敏感消息和热点，维护中共国社会的稳定。”
-
-《人民日报》的子公司《环球时报》也有一个部门为中共国外交部、北京外事办公室和其他政府机构收集外国社交媒体数据。
-
-《人民日报》和《环球时报》都被指定为驻美机构。
-
-**寒蝉效应**
-
-《华盛顿邮报》认定舆情分析系统中，近三分之一是由中共国警方采购的。
-
-在14个实例中，分析系统的一项功能会自动标记与维吾尔族和其他中国少数民族有关的“敏感”内容。 其他12个分析系统具备随时监控单个内容作者的能力。
-
-福州市警方10月份发布的一份招标书要求分析系统能覆盖脸书（Facebook）和 推特（Twitter），“它必须支持对海外社交媒体的信息监控……并规定有针对性地收集指定网站和作者的信息”。
-
-专家表示，中共国各地警方对海外社交媒体的监控可用于调查国内外的中国公民，以及标记引发国内异议的趋势。
-
-德国马歇尔基金的奥尔伯格（Ohlberg）说：“公安监控的重点是维稳、追踪个人、查找个人身份，在监控海外社交媒体的时候，也往往着眼于监控哪些新闻会给国内带来麻烦。”
-
-专家表示，中共国警方使用的日益先进的社交媒体监控技术会加剧对北京批评者的针对性骚扰。
-
-智库自由之家 (Freedom House) 技术与民主主任阿德里安·沙巴兹(Adrian Shahbaz)表示：“在针对国外个人的问题上，中共国政府是最严重的罪犯之一。”
-
-他说，“这对中共国境外的中国公民如何使用社交媒体工具产生了极大的寒蝉效应，因为他们知道在国内，他们的信息很容易被中共国当局监控。”
-
-**文章来源**：[https://www.washingtonpost.com/national-security/china-harvests-masses-of-data-on-western-targets-documents-show/2021/12/31/3981ce9c-538e-11ec-8927-c396fa861a71\_story.html](https://www.washingtonpost.com/national-security/china-harvests-masses-of-data-on-western-targets-documents-show/2021/12/31/3981ce9c-538e-11ec-8927-c396fa861a71_story.html)
-
-翻译：洛杉矶盘古农场 – WH
+翻译：洛杉矶盘古农场 – Raul
 校对：洛杉矶盘古农场 – Mike Li
 编辑：洛杉矶盘古农场 – WenXiong
-发布：洛杉矶盘古农场 – 彩虹 Rainbow
+发布：洛杉矶盘古农场 –彩虹 Rainbow
 [![](https://assets.gnews.org/wp-content/uploads/2021/03/WhatsApp-Image-2021-06-26-at-22.05.30.jpeg)](https://discord.gg/2vuvRm7z6U)
 洛杉矶盘古农场欢迎您加入:(或点击上方图片）
 
